--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,50 @@
 ---
-title: 有声&#124; 美众议员称国际奥委会掩盖中共人权恶行
+title: 喜马拉雅币一周分析与总结（2月7日-2月13日）
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002323/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002374/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
-盖特消息，近日美国国会共和党众议员麦克.加拉格尔，在接受福克斯采访时表示，国际奥委会一直在掩盖中共国侵犯人权的行为。他还强调当共和党夺回众议院的时候，将继续开展中共病毒溯源调查。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide8-4.jpeg)
-加拉格尔说，国际奥委会的行为非常卑鄙，他们声称见到了彭帅，而事实上彭帅被中共非法拘禁、扣为人质，并被禁言，但国际奥委会却在帮助中共掩盖事实，无耻的做中共的同谋。加拉格尔反对在北京举办冬奥会，声称美国应当想方设法保护自己的参赛运动员。
+作者：香草山金融部 – ILOVE战神
 
-对于中共病毒溯源问题，他说现在仍然不清楚武毒所到底发生了什么，美国纳税人的钱如何资助武毒所，开展了病毒功能增强性研究。当共和党夺回众议院的时候，就会立即开展全面调查，也会给蝠奇等一些所谓的科学家送去传票，美国人都应该知道中共病毒大瘟疫到底是如何开始的。
 
-文字版原文：[美众议员称国际奥委会掩盖中共人权恶行](https://gnews.org/zh-hans/2000552/)
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+
+
+
+过去一周喜马拉雅币价格回落至45美元左右，平均日交易量约为12万枚喜币。喜币上市以来总交易量约2800万枚 ，占今年总发行量的仅约2.8%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide12-4.jpg)
+最近全球战友都积极投入到喜支付的推广活动中。2月10日，台湾农场团队直播了使用HPAY购买及交付第一辆汽车的实况。交易标的是一台2019年出厂的宝马 X3休旅车二手车，交易金额约为1200 HCN。买卖双方当场使用HPAY，瞬间就完成了买车款项的支付。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture1-7.jpg)
+据卖家台湾农场大象表示，他选择以喜币交易，好处是可以省去被信用卡公司抽取的手续费、货款可以瞬间入账不必经由银行造成延迟收款、也可以享受未来喜币预期的涨价空间。
+
+本周据郭文贵先生在大直播中透露，俄乌政治危机对全球供应链造成巨大伤害后，数字货币将成为全球经济危机中的最大赢家，其中H-Pay将成为数字货币中的最大赢家。经过一系列事件的发酵，3个月后喜币的价格将达到之前难以想象的新高度。郭先生还表示，喜币和喜支付将打破中共对钱的垄断，让中国人真正拥有自己的财富，从而拥有自己独立的人格和思想，这些都是中国人拥有人权和真相的基础。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture-14.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture2-4.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture3-5.png)
+参考链接：
+1.[Himalaya Exchange & HIMALAYA PAY – Your key to the Himalaya Ecosystem](https://himalaya.exchange/himalaya-pay)
+2. [台湾使用HPAY完成第一台汽车交易](https://gnews.org/zh-hans/1994357/)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
 **更多资讯，更多关注**
 
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
