--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,18 +1,19 @@
 ---
-title: 韩美日三国外长谴责北韩发射导弹，敦促其尽快重返对话
+title: 秘翻在线：兴奋剂、争议判罚等乱象频发的北京冬奥会
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2002112/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002363/)
 
-撰稿：追着曙光跑
+撰稿：文贺JP
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-7.jpg)图片来源：文本链接
+北京冬奥会各国运动员激战正酣，围绕比赛规则的判罚层出不穷。花样滑冰金牌候选问题引发关注。
 
-据韩国KBS新闻2月13日的报道：韩国、美国、日本三国外长在夏威夷举行会谈，探讨韩半岛及其周边地区的安全形势。三国外长联合声明谴责北韩连续发射导弹，违反联合国安理会决议，敦促北韩尽快重返对话。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-14-at-11.48.14.jpeg)图片来源：原新闻
-韩美日外长深入探讨了北韩连续发射导弹等韩半岛有关问题，并就加快与北韩对话的现实性方案进行了磋商。同时，对北韩的挑衅行为正在引发地区的不稳定深表担忧。
+目前比赛激战正酣，最受关注的事件就是俄罗斯队选手卡米拉·瓦列瓦（15岁）的兴奋剂问题。
 
-对于朝鲜进一步挑衅的可能性，韩外长称，现在一致认为近期局势严重，并进行了多次讨论，以确保局势尽可能向积极的方向发展。
+另一方面，滑雪板项目会引发围绕参赛规则的世界性辩论。混合团体中来自日本的高梨沙罗等4个国家的5名女选手，在第一次和第二次跳越后的检查中，因“违反西装规定”失去比赛资格。通过日本滑雪联盟向国际滑雪联盟递交的关于检查方法文件主旨，可以看到相关各国的诉求。7号男子1千米半决赛，排在前两名的韩国选手因视频判罚换道违规被取消资格，两名中国选手晋级决赛。甚至在决赛中，排名第一的匈牙利选手获得第一名后被取消资格，中国选手获得金牌和银牌。一家韩国报纸批评它是“历史上最糟糕的奥运会”，韩国队也在新闻发布会上抱怨这是“不公平的判罚 “。另一方面，在河北省张家口市举办的冬季两项比赛中，瑞士等官员指出，气温异常寒冷，称“感觉温度低于冰点30度”。（按照规定，如果气温低于冰点20度，比赛将被取消）
 
-信息来源：**[한미일외교장관 회담…“정부, 추가 대북 관여 방안 제안…美 경청”](http://world.kbs.co.kr/service/news_view.htm?lang=c&amp;Seq_Code=74460)**
-**[한미일 외교장관 공동성명 발표 “北미사일 규탄…北에 불법활동중단·대화 촉구”](https://news.kbs.co.kr/mobile/news/view.do?ncd=5393848)**
+信息来源：[https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme\_beijing2022](https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme_beijing2022)
+
+责编：待命（文晓）
 
  
 
