--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,25 +1,11 @@
 ---
-title: 香草山翻译部周刊&#124;2022年2月13日第35期
+title: 安德鲁·朱利安尼将反抗民主党的中共病毒强制政策
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2000923/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2001990/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-GNEW-GTV-MOS-LOGO.jpg)
+02/07/2022 安德鲁·朱利安尼：纽约市有 4000 名市政雇员可能因未接种疫苗而被解雇。现任纽约民主党州长凯西·霍格尔女士将就昨天发生的大规模抗议活动作出表态。民主党州长可能会放宽一些对企业的强制措施，但保留对学校学生的强制措施。民主政客要的是人民的服从。一旦他成为纽约州长，安德鲁本人将推翻目前的中共病毒的强制政策。
 
-作者：香草山翻译部
-![](https://assets.gnews.org/wp-content/uploads/2022/02/MosWeekly2022_2_13CN.png)
-文章仅代表作者本人观点，与Gnews无关
-
-总编： GBWater
-编辑： Lakers
-发稿： Lakers
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar-1.jpeg)
-
-**更多资讯，更多关注**
-[纽约香草山农场GTV-香草山之声](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[纽约香草山农场GTV-MOS TALK 香草山访谈](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[纽约香草山农场Gettr](https://www.gettr.com/user/himalaya_mos)
-[纽约香草山农场 YouTube](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
