--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,40 +1,39 @@
 ---
-title: 有声&#124;现在卖掉喜币的人将来必定后悔
+title: 乌克兰寻求在48小时内与俄罗斯会面，讨论边境集结问题
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002364/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2002392/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
+素材整理：波士顿五月花Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-14-at-11.26.34-AM.png)图片来源：互联网
+就其边境不断升级的紧张局势,乌克兰呼吁与俄罗斯和其他欧洲安全集团重要成员举行一次会议。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/FCSeY69XEAInXAV.jpg)
-2022年2月13日，在大直播中谈到喜币场外交易时，文贵先生说，现在场外交易卖掉喜币套现的战友，将来必定会后悔。
+外交部长Dmytro Kuleba说，俄罗斯无视对其部队在乌克兰边境集结这一动作作出解释的正式要求。
 
-大直播中，说到场外交易时，文贵先生就说，刚才收到草根小哥爆料，喜币在场外交易，60美金都买不着。但是在场内，喜币被压低到了40美金。
+他说，我们要求在未来48小时内举行会议，以便对俄罗斯的计划保持“信息透明”。
 
-文贵先生说，据他所知，场外交易有好几笔都在200美金左右交易的。这几天场外和场内的巨大价格差距，是因为基金在利用2亿个币，场内压低价格，场外交易炒高价格，在引诱着大家去场外交易卖出喜币，只要你一抛，他们就买进。
+尽管在乌克兰边境集结了大约10万名士兵，但俄罗斯一直否认有任何入侵乌克兰的计划。
 
-郭先生说，现在卖币的人，你后悔？早着呢。很多战友在场外交易中，以60,65,70的价格，卖了手中的喜币。不远的将来，肯定会哭都没地方哭去，不会超过三个月。只要满足三个条件：国家主权认可，大额投资，HPAY全面使用，喜币的价值必然不可估量。
+一些西方国家警告说，俄罗斯正在准备采取军事行动，美国说它可能 “在任何时候 “开始进行空中轰炸。
 
-目前世界格局在发生着巨大的变化，世界经济面临着崩塌，金融市场肯定会暴涨暴跌。在这样的巨变中，数字货币是未来发展的趋势，HPAY和喜币会成为其中最大的赢家。
+十几个国家已经敦促他们的公民离开乌克兰，一些国家已经从首都撤出使馆工作人员。哥伦比亚广播公司新闻报道援引了三个消息来源说，美国正准备在未来48小时内从基辅撤出其所有人员。
 
-文字版原文：[现在卖掉喜币的人将来必定后悔](https://gnews.org/zh-hans/2001739/)
+Kuleba先生说，乌克兰周五要求俄罗斯根据《维也纳文件》的规定回答他们军队集结乌边境的意图，《维也纳文件》是欧洲安全与合作组织(OSCE)成员通过的关于安全问题的协议，其中包括俄罗斯。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+“他说：”如果俄罗斯在谈论欧安组织空间安全的不可分割性时是认真的，它必须履行其对军事透明度的承诺，以缓和紧张局势和加强所有人的安全。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+然而，乌克兰总统沃洛基米尔-泽伦斯基(Volodymyr Zelensky)批评了这种说法可能造成的 “恐慌”，他说他没有看到任何证据表明俄罗斯计划在未来几天内进行入侵。
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+周日，他与美国总统拜登通了近一个小时的电话。白宫表示，拜登总统重申了美国对乌克兰的支持，两位领导人就 “继续开展外交和威慑的重要性 “达成一致。
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+乌克兰关于这次通话的声明说，乌克兰总统感谢美国 “坚定不移的支持”，在通话结束时，泽伦斯基总统邀请美国领导人来乌克兰。白宫方面没有对这一邀请发表评论。
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+拜登总统和俄罗斯领导人弗拉基米尔-普京在前一天进行了长达一个小时的通话，但未能取得突破性进展。
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+参考链接：[Ukraine seeks meeting with Russia within 48 hours to discuss build-up](https://www.bbc.com/news/world-europe-60370541)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+* * *
+
+*编辑&发布：Vicky*
 
  
 
