--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,20 +1,25 @@
 ---
-title: 秘翻在线：兴奋剂、争议判罚等乱象频发的北京冬奥会
+title: 施泰因迈尔高票连任德国总统
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002363/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002391/)
 
-撰稿：文贺JP
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-7.jpg)图片来源：文本链接
-北京冬奥会各国运动员激战正酣，围绕比赛规则的判罚层出不穷。花样滑冰金牌候选问题引发关注。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1381.png)[图片来源](https://www.libyanexpress.com/foreign-minister-frank-walter-steinmeier-elected-president-of-germany/)
+当地时间，2月13日（周日）中午，德国联邦大会的成员在柏林投票，选举下一届联邦总统。投票结果显示，现任总统施泰因迈尔（Frank-Walter Steinmeier）成功连任。
 
-目前比赛激战正酣，最受关注的事件就是俄罗斯队选手卡米拉·瓦列瓦（15岁）的兴奋剂问题。
+在现场参与投票的1472名代表中，施泰因迈尔获得了1045张选票。他的胜选几乎是没有悬念的，因为这位曾经担任德国外长的社民党政治家，得到了社民党、绿党、自民党以及联盟党的联合推举。三个执政党加上最大的在野党，他们在联邦大会中占有绝对的多数优势。
 
-另一方面，滑雪板项目会引发围绕参赛规则的世界性辩论。混合团体中来自日本的高梨沙罗等4个国家的5名女选手，在第一次和第二次跳越后的检查中，因“违反西装规定”失去比赛资格。通过日本滑雪联盟向国际滑雪联盟递交的关于检查方法文件主旨，可以看到相关各国的诉求。7号男子1千米半决赛，排在前两名的韩国选手因视频判罚换道违规被取消资格，两名中国选手晋级决赛。甚至在决赛中，排名第一的匈牙利选手获得第一名后被取消资格，中国选手获得金牌和银牌。一家韩国报纸批评它是“历史上最糟糕的奥运会”，韩国队也在新闻发布会上抱怨这是“不公平的判罚 “。另一方面，在河北省张家口市举办的冬季两项比赛中，瑞士等官员指出，气温异常寒冷，称“感觉温度低于冰点30度”。（按照规定，如果气温低于冰点20度，比赛将被取消）
+联邦大会唯一的任务就是选举联邦总统。该机构一半的成员是联邦议院的议员，另一半则是人数相等的各州代表。本届联邦议院目前有736名联邦议员，这就意味着一共有1472名成员参与本次投票，这另一半代表中，除了16个联邦州派出的代表（包括州议会议员）之外，还有不少社会各界的代表人士。
 
-信息来源：[https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme\_beijing2022](https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme_beijing2022)
+联邦总统在德国主要是象征性的国家元首，对内对外实行代表国家的职责，并不掌握实际的政治权力。
 
-责编：待命（文晓）
+施泰因迈尔此前曾担任过施罗德执政时期的总理府部长，社民党议会党团主席，以及默克尔政府的外交部长等重要职务。2017年他接替前任高克（Joachim Gauck）。他也是联邦德国有史以来第五位寻求连任的总统。根据规定，联邦总统最多担任两届。
 
+信息来源：[施泰因迈尔再度当选为联邦总统](https://www.dw.com/zh/%E6%96%BD%E6%B3%B0%E5%9B%A0%E8%BF%88%E5%B0%94%E5%86%8D%E5%BA%A6%E5%BD%93%E9%80%89%E4%B8%BA%E8%81%94%E9%82%A6%E6%80%BB%E7%BB%9F/a-60761119)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
