--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,30 +1,23 @@
 ---
-title: [ 聚焦港澳 ]香港蔡元培墓被破坏
+title: 中日财经爆&#124;外资1月增持人民币债券大降近四成
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002356/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002386/)
 
-撰稿：云彩
-视频来自网络
-近日观看了香港国际关系学者沈旭晖先生采访香港女作家潘惠莲女士的视频，得知原北京大学校长蔡元培先生晚年是在香港渡过。1940年在港病逝。
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1380.png)[图片来源](https://www.sohu.com/a/425770351_100110525)
+路透社周一（2月14日)根据中债登最新数据计算，境外机构投资者1月增持中国银行间债券501亿人民币，环比大降近四成；
 
-视频中沈先生说到，2019年反送中运动中，有大陆的小粉红来港破坏蔡元培先生的墓地。这件事被媒体曝光后，很多香港人才知道蔡元培先生的墓地是在香港。
+中债登公布的统计月报还显示，期末境外机构中债登债券托管余额37,335亿元，境外机构中债登国债托管余额为25,189亿元。
 
-蔡元培先生于1937年底因日本侵华战争从大陆移居到香港，直到去世。1927年蔡元培先生支持在国民党内清理混入的共产党员。
+境外机构投资者去年12月增持中债登托管的债券787亿元人民币，环比降逾一成；其中增持国债619亿元，环比降近三成。去年全年累计增持中债登债券规模7,986亿元，较2020年降两成，累计增持国债5,756亿。
 
-大陆小粉红来港破坏其墓地，于2019年11月14日在其微博发文，说“将蔡元培的墓碑打磨了一下，贴上汪寿华和赵世炎照片”。由对香港学生反送中的不满迁怒到当年反共的蔡元培先生。汪寿华和赵世炎是当年被杀的共产党员。
+境外机构去年12月末在上清所持有债券余额为3,200亿元，加上在中债登托管的36,834亿元债券存量，在银行间市场人民币债券持有总额达到40,034亿元。
 
-潘惠莲女士认为，中共针对性地使用蔡元培先生的个人历史。比如，到了“五四”，就宣传蔡校长如何关怀学生。而对于其反共立场少提或者根本不提。
+消息来源：[外资1月增持人民币债券501亿环比降近四成 但国债增持量环比小增–中债登](https://cn.reuters.com/article/foreign-investors-yuan-bonds-0214-mon-idCNKBS2KJ036?il=0)
 
-以前，笔者不知道蔡元培先生因为不认可共产党的主张而支持在国民党内清理混入的共产党员这段历史。
-
-中共政权自知不是民选政府，害怕人民知道真正的历史，动摇其统治根基。哪段历史有利就用哪段，或者篡改编造假历史。新中国联邦用真打共产党的假！
-
-参考资料：
-
-[香港蔡元培墓地被破坏](https://www.youtube.com/watch?v=czgrThiDvVs&amp;t=821s)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
-
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
