--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,23 +1,21 @@
 ---
-title: 中日财经爆&#124;欧盟坚定支持立陶宛反抗中共胁迫
+title: 因存安全漏洞 日本冬奥代表团回国后要彻底删除“冬奥通”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002328/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002385/)
 
 撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1377.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fwww.asiafinancial.com%2Fwp-content%2Fuploads%2F2021%2F12%2FThe-Lithuanian-and-European-Union-flags-flutter-at-border-crossing-point-in-Medininkai-Lithuania-in-Sept-2020.-RtrsInts-Kalnins.jpg&amp;imgrefurl=h)
-欧洲联盟(EU)轮值主席国─法国13日表示，在会员国立陶宛和中共国可能爆发的贸易战中，将会坚定支持立陶宛。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1379.png)[图片来源](https://hrtsea.com/zx/65333.html)
+日本冬奥会代表团团长伊东秀仁2月13日在北京表示，已告知代表团返国后彻底删除「冬奥通」（My2022），因这款App存在安全漏洞。
 
-立陶宛和中共国的争议始于台湾最近在立陶宛设立代表处，挂牌的名称是台湾而非台北。
+北京冬季奥运主办单位以防疫中共病毒（2019冠状病毒疾病）为由，要求所有参与者安装「冬奥通」
 
-中共因而采取报复措施，调降对立陶宛的外交关系、让立陶宛出口到中共国的商品无法通关。有广泛的报导指称，中共国已警告欧洲出口商，要切断和立陶宛的所有关系。
+，包括运动员、观众和媒体。
 
-里斯特说，一项赋予欧盟所谓反胁迫能力的提案进展顺利。作法可望包括冻结取得公营事业合约、暂停对某些产品的健康和安全授权、或禁止来自欧盟资助的研究项目。
+「冬奥通」记录个人健康状况，但这款App存在安全漏洞，因此日本政府本月初呼吁日本代表团尽量少用，也鼓励代表团从中共国离境后删除。
 
-里斯特表示，对中国和其他「不义」行为者所采取的更强硬策略，是重视自由贸易与开辟新市场的欧盟，贸易政策「范例转变」的其中之一。
+伊东今天在北京市的冬奥主媒体中心召开记者会时表示，已告知日本代表团成员，返国后要从手机彻底删除「冬奥通」。
 
-他指出，贸易是欧洲经济的重要部份，但并非不惜任何代价，不能以不公平竞争作为代价，不能以牺牲价值观为代价。
-
-消息来源：[中國祭出經貿報復 歐盟表態力挺立陶宛](https://www.rti.org.tw/news/view/id/2124437)
+消息来源：[日本代表團長：返國後徹底刪除北京冬奧App](https://tw.news.yahoo.com/%E6%97%A5%E6%9C%AC%E4%BB%A3%E8%A1%A8%E5%9C%98%E9%95%B7-%E8%BF%94%E5%9C%8B%E5%BE%8C%E5%BE%B9%E5%BA%95%E5%88%AA%E9%99%A4%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7app-145054430.html)
 
 *编辑：东京樱花团/喜马拉雅的微尘
 发布：东京樱花团/平安卿卿*
