--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,21 +1,24 @@
 ---
-title: 中日财经爆&#124;南非劳工部将华为告上法庭
+title: 澳大利亚开始撤离基辅大使馆
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002324/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002384/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1376.png)[图片来源](http://www.focac.org/zfgx/rwjl/202111/t20211117_10449589.htm)
-南非劳工部周五（2月11日）表示，他们已要求法院对中共国华为技术有限公司的南非部门进行罚款，因其违反了有关雇用当地人的规则，并责令华为改正。
+#### 撰稿：彩虹       
 
-劳工部援引2020年的一项审计报告说，华为当地公司大约90%的员工是外国公民，违反了“就业公平”法规所规定的40%上限。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1378.png)图片来源：路透社
+2月13日，《国会山报》报道，随着俄罗斯和乌克兰之间紧张局势的加剧，澳大利亚正在撤离其驻乌克兰大使馆。
 
-劳工部称已向法院提交文件，要求对涉嫌违反规定的华为当地公司处以150万兰特(99,151美元)或2020年度营业额2%的罚款。
+周日，澳大利亚外交部长玛丽斯·佩恩（Marise Payne）宣布，驻基辅（Kyiv）使馆的所有工作人员已被告知离开，大使馆的业务已经关闭，并转移到乌克兰西部城市利沃夫（Lviv）的一个临时办公室。
 
-消息来源：[南非将华为当地部门告上法庭 因当地人雇佣比例偏低](https://cn.reuters.com/article/south-africa-huawei-lawsuit-hiring-0211-idCNKBS2KJ01Q?il=0)
+她说，做出这些决定的原因是“俄罗斯军队在乌克兰边境的集结导致安全局势恶化”。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+佩恩在一份声明中写道：“我们继续建议澳大利亚人立即通过商业手段离开乌克兰。安全状况可能在短时间内发生变化。俄罗斯对乌克兰的军事行动将严重限制我们向澳大利亚人提供领事援助的能力。”
+
+**新闻来源**
+
+[Australia evacuates Kyiv embassy](https://thehill.com/policy/international/594024-australia-evacuates-kyiv-embassy)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
