--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,20 +1,47 @@
 ---
-title: 廉价的器官！黑市交易6万5公开收肾
+title: 美参议员称中共病毒团伙难以承受真相后果
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2002203/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002366/)
 
-中共统治下买卖器官随处可见，老百姓的器官只是个物件，山东聊城尿毒症患者群，公开收肾6万5，黑中介转手倒卖80万，转手涨价11倍。
-(视频来源：都市报道)
-走投无路廉价卖器官，不如中介转手赚的盆满钵满。只要你卖，就有人敢收，忽悠下的“自愿交易”，可谓童叟无欺还略带“爱心”。卖器官的可怜，黑中介可恨，而买器官的却显得那么的理应。
+作者：纽约磐石农场 – 在远方
 
-没有贯彻法治的国度，永远只是一个荒蛮的大部落，而中共就是在这种土壤下生存的如鱼得水！不灭共，只有苟活！灭共，才有生活！
 
-撰稿/发布：一叶知秋
 
-**更多资讯，请关注：**
-[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
-[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
-[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+
+
+
+盖特2月12日消息，美国参议员罗恩·约翰逊在接受媒体采访时表示，中共病毒疫情造成美国大约90万人，全球超过550万人死亡，黑暗势力一定会难以承受疫情真相的后果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide7-5.jpg)
+约翰逊说，中共病毒疫情揭露了美国联邦卫生机构、医学期刊、医疗机构，以及国际组织中所存在的大量腐败。而议员们需要做大量的工作去揭露他们，因为黑暗势力造成的破坏正在暴露，真相正在逐渐浮出水面。约翰逊把这些人称作中共病毒团伙，他们承担不起真相的后果，因为死去的人数太多。他们没有推行早期治疗，而中共病毒疫苗也不像人们所期望和祈祷的，那么安全有效。
+
+约翰逊强调说，中共病毒团伙不愿意承认这一事实，他们还在坚持自己对大瘟疫失败的管理方式，他们不会承认自己的错误。而媒体和科技巨头，也是真相掩盖和信息审查的同谋，因此他们也不会揭露实情。所以揭露中共病毒团伙的罪行，将是一件艰难的工作。
+
+参考链接：
+[Senator Ron Johnson: COVID團伙他們承擔不起真相的後果,死去的人數太多，美國大約90萬，全球超過5百50萬 媒體和大科技巨頭是（真相）掩蓋和（信息）審查的同謀，所以他們也不會揭露實情,所以證明這些人的錯誤將是一件很難的事情](https://gettr.com/post/pu1t0s82a8)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
