--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,34 +1,30 @@
 ---
-title: 日美韩外长联合声明强调“台湾和平与稳定的重要性”
+title: [ 聚焦港澳 ]香港蔡元培墓被破坏
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2002109/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002356/)
 
-2022-02-13
+撰稿：云彩
+视频来自网络
+近日观看了香港国际关系学者沈旭晖先生采访香港女作家潘惠莲女士的视频，得知原北京大学校长蔡元培先生晚年是在香港渡过。1940年在港病逝。
 
-翻译：文舞两道
-![](https://assets.gnews.org/wp-content/uploads/2022/02/409EQMQRZDKMS05@PUU.png)图片来源：https://www.sankei.com/
-日、美、韩三国外长发表联合声明，强调“台湾海峡的和平与稳定的重要性”，“反对中共国任何单方面改变现状，加剧该地区紧张局势的行动”。
+视频中沈先生说到，2019年反送中运动中，有大陆的小粉红来港破坏蔡元培先生的墓地。这件事被媒体曝光后，很多香港人才知道蔡元培先生的墓地是在香港。
 
-据日本产经新闻消息，日、美、韩三国外长12日（日本时间13日）在夏威夷举行会谈后发表联合声明，强调“台湾海峡的和平与稳定的重要性”，声明还表示，“反对中共国任何单方面改变现状，加剧该地区紧张局势的行动”。
+蔡元培先生于1937年底因日本侵华战争从大陆移居到香港，直到去世。1927年蔡元培先生支持在国民党内清理混入的共产党员。
 
-这是自2017年2月以来，近五年来日美韩外长首次发表联合声明。联合声明还包括定期举行外长级讨论，以及寻求广泛领域的合作。
+大陆小粉红来港破坏其墓地，于2019年11月14日在其微博发文，说“将蔡元培的墓碑打磨了一下，贴上汪寿华和赵世炎照片”。由对香港学生反送中的不满迁怒到当年反共的蔡元培先生。汪寿华和赵世炎是当年被杀的共产党员。
 
-声明谴责北朝鲜发射弹道导弹，并对破坏该地区稳定的行动表示“严重关切”。在推进日美韩安全合作，根据联合国安理会决议严格执行对朝制裁的同时，声明表示对北朝鲜没有敌意，强调在没有任何先决条件下已经准备好了与北朝鲜的会面。
+潘惠莲女士认为，中共针对性地使用蔡元培先生的个人历史。比如，到了“五四”，就宣传蔡校长如何关怀学生。而对于其反共立场少提或者根本不提。
 
-此外，针对在乌克兰边境拥有大规模部队的俄罗斯，明确表示将“坚定不移地支持乌克兰主权和领土的统一”，在阻止事态的升级上三国确认了将密切合作。
+以前，笔者不知道蔡元培先生因为不认可共产党的主张而支持在国民党内清理混入的共产党员这段历史。
 
-此外，声明还确认了将促进与全球变暖、供应链、性别平等和发展基金的合作，强调了在信息网络安全和经济安全保障方面合作的重要性。
+中共政权自知不是民选政府，害怕人民知道真正的历史，动摇其统治根基。哪段历史有利就用哪段，或者篡改编造假历史。新中国联邦用真打共产党的假！
 
-参考链接：
+参考资料：
 
-[日米韓外相「台湾の平和と安定重要」　共同声明で明記](https://www.sankei.com/article/20220213-YSWIW2JIUBIAJOTZNUG64TXZXU/)
+[香港蔡元培墓地被破坏](https://www.youtube.com/watch?v=czgrThiDvVs&amp;t=821s)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
 
-编辑：LILY
-发布：肥鯮
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
