--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,18 +1,27 @@
 ---
-title: 《蓝枫法律》第四十三期 法律你我他 &#8211; 同性恋，双性恋和跨性别法律权力概览PPT展示- G_TV
+title: 中日财经爆&#124;欧盟坚定支持立陶宛反抗中共胁迫
 ---
-`加拿大温哥华扬帆农场蓝枫法律` [轉載自GNews](https://gnews.org/zh-hans/2002107/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002328/)
 
-#### **加拿大温哥华扬帆农场 蓝枫法律**
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1377.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fwww.asiafinancial.com%2Fwp-content%2Fuploads%2F2021%2F12%2FThe-Lithuanian-and-European-Union-flags-flutter-at-border-crossing-point-in-Medininkai-Lithuania-in-Sept-2020.-RtrsInts-Kalnins.jpg&amp;imgrefurl=h)
+欧洲联盟(EU)轮值主席国─法国13日表示，在会员国立陶宛和中共国可能爆发的贸易战中，将会坚定支持立陶宛。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-135.png)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-56.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/3-40.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/4-30.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/5-21.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/6-14.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/7-16.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/8-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/9-12.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/10-14.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/11-12.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/12-13.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/13-6.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/14-5.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/15-4.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/16-5.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/17-3.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/18-1.png)
-直播视频：
+立陶宛和中共国的争议始于台湾最近在立陶宛设立代表处，挂牌的名称是台湾而非台北。
 
-[第四十三期 法律你我他 – 同性恋，双性恋和跨性别法律权力概览](https://gtv.org/video/id=62084b6aa1fe5e57a4278346)
+中共因而采取报复措施，调降对立陶宛的外交关系、让立陶宛出口到中共国的商品无法通关。有广泛的报导指称，中共国已警告欧洲出口商，要切断和立陶宛的所有关系。
 
-编辑/发文：蓝枫法律栏目
+里斯特说，一项赋予欧盟所谓反胁迫能力的提案进展顺利。作法可望包括冻结取得公营事业合约、暂停对某些产品的健康和安全授权、或禁止来自欧盟资助的研究项目。
 
+里斯特表示，对中国和其他「不义」行为者所采取的更强硬策略，是重视自由贸易与开辟新市场的欧盟，贸易政策「范例转变」的其中之一。
+
+他指出，贸易是欧洲经济的重要部份，但并非不惜任何代价，不能以不公平竞争作为代价，不能以牺牲价值观为代价。
+
+消息来源：[中國祭出經貿報復 歐盟表態力挺立陶宛](https://www.rti.org.tw/news/view/id/2124437)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
