--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,10 +1,21 @@
 ---
-title: 2/13/2022 文贵直播：卡车是世界经济的必须，大卡车运动让人们必须反对疫苗强制令，盖特对大卡车运动有巨大的影响
+title: 中日财经爆&#124;南非劳工部将华为告上法庭
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2002100/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002324/)
 
-秘密翻译组-北美组
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1376.png)[图片来源](http://www.focac.org/zfgx/rwjl/202111/t20211117_10449589.htm)
+南非劳工部周五（2月11日）表示，他们已要求法院对中共国华为技术有限公司的南非部门进行罚款，因其违反了有关雇用当地人的规则，并责令华为改正。
 
+劳工部援引2020年的一项审计报告说，华为当地公司大约90%的员工是外国公民，违反了“就业公平”法规所规定的40%上限。
+
+劳工部称已向法院提交文件，要求对涉嫌违反规定的华为当地公司处以150万兰特(99,151美元)或2020年度营业额2%的罚款。
+
+消息来源：[南非将华为当地部门告上法庭 因当地人雇佣比例偏低](https://cn.reuters.com/article/south-africa-huawei-lawsuit-hiring-0211-idCNKBS2KJ01Q?il=0)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
