--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,34 +1,37 @@
 ---
-title: 人人可免费翻墙？ 谷爱凌化身喉舌为中共洗地
+title: 加拿大银行冻结了“自由车队”卡车司机110万美元资金
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2001948/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2002121/)
 
-代表中共国在自由式滑雪大跳台比赛中夺得金牌的谷爱凌被网友问到为何她在中共国能使用大多数中国人用不了的社交平台Instagram时回应道：任何人都可以下载VPN，它在应用商店里是免费的！
+翻译：灭共文明
 
-但是旅美活动人士、维吾尔律师莱汉·阿萨特（Rayhan Asat）说，在新疆，很多维吾尔人正是因为下载使用了VPN而被关进了再教育营。
+编辑与校对：冰糖葫芦喵、灭共文明
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/canvas_副本.png)
+《华盛顿观察家报》2月13日报道，**周六，加拿大多伦多道明银行(Toronto-Dominion Bank)宣布，已经冻结了两个“自由车队”卡车司机的个人银行账户**，**这两个账户总共有140万加元，约合110万美元。**
 
-阿萨特2月11日在华盛顿智库大西洋理事会（Atlantic Council）举行的一场有关新疆问题的讨论会上说，自2016年以来，新疆已经成为中共政府实施科技监控和数字威权的地方，而维吾尔人有时甚至就是因为下载了外国的聊天软件或VPN而被关进再教育营。
+道明银行在一份声明中说，该银行周五向安大略省高级法院申请接管这些资金，以便将其发送给预定的收款人，或退还给 “已要求退款但TD银行无法确定其退款权利的捐款人。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TD银行1-e1644806874131.jpg)多伦多金融中心一家TD银行分行（图片来源：网络）
+**卡车车队的律师基思•威尔逊(Keith Wilson)已经告诉TD银行，他们的行为是不恰当的，令人失望。**他还说，“自由车队”下星期将寻求法院命令，把这些捐款交给一个新的非盈利公司，该组织负责管理和分发这些捐款。
 
-她说：“任何卷入这个网络的人都被送到新疆的集中营或强迫劳动工厂。许多无辜之人，他们也许没有遭受技术网络的压迫，但仍因为他们的社会地位、宗教、年轻或仅仅是使用WhatsApp而被送到了集中营。
+此前，安大略省官员冻结了通过筹款平台GiveSendGo向“自由车队”的捐款。自GoFundMe启动以来，自由车队一直依靠该平台筹集的资金。而在2月4日GoFundMe以所谓的卡车司机违反了平台政策，而扣留了900万美元捐款。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1375.png)图片来源：路透社。
+**周五，加拿大总理贾斯廷·特鲁多在渥太华威胁这些和平抗议的卡车司机，声称要暂停他们的商业货运执照，并表示政府将提出指控**，可能会面临监禁和巨额罚款。这些惩罚措施还将禁止卡车司机进行国际旅行。
 
-现在在中共国颇受追捧的自由式滑雪选手谷爱凌说，中共国的互联网相当自由，你只要下载VPN就可以上Instagram了。但是很多在监控系统下的维吾尔人正是因为下载使用了VPN而被关进集中营。
+周五，安大略省高等法院(Ontario Superior Court of Justice)批准了一项法院命令，结束卡车司机对温莎大使桥(Windsor Ambassador Bridge)的封锁。温莎大使桥是连接底特律的一条与美国的重要贸易通道。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/卡车司机.jpg)图片来源：网络。
+**报道最后指出，抗议卡车司机的支持者誓言要继续为驻扎在加拿大渥太华国会山附近的卡车司机们提供补给。**
 
-简评：拿人钱财，替人消灾！按照这种糟糠逻辑，往往不论对错，拿钱办事，一切只为钱。更何况被中共特地收买的冠军选手谷爱凌，中共倾一国之力打造的“冠军人物”，替中共说几句好话自然显得“理所应当”，而这种理所应当是不论是非对错，完全颠倒黑白的。
+**评论：**
 
-每个人都有弱点，如何通过弱点拿下一个人，基本是墙内搞定事情普遍的方式。对于中共可以利用的人，会抓住弱点无所不用其极的搞定，谷爱凌是一个群体的缩影，一个为了自身利益不惜出卖良知的缩影，一个毫无信仰唯利是图的缩影！
+TD银行的行为是赤裸裸的帮助加拿大政府助纣为虐，而这些大银行背后都有着中共的影子。**加拿大政府现在也被世界黑暗势力和中共的邪恶力量严重渗透和操控。**
 
-只要中共在，无数的谷爱凌会陆续的出现，唯有灭共，这世界才能回归到有信仰加持的善恶分明的正道主义。
+**加拿大卡车司机能够勇敢地站出来，引领了全球和平抗议政府推行强制疫苗政策地行动，**清晰地表明，加拿大政府的暴政行为已经挑战了，加拿大民众的自由与和平的底线。
 
-新闻来源：[rfi](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220213-%E4%BA%BA%E4%BA%BA%E5%8F%AF%E5%85%8D%E8%B4%B9%E7%BF%BB%E5%A2%99-%E8%B0%B7%E7%88%B1%E5%87%8C%E8%A8%80%E8%AE%BA%E6%83%B9%E6%80%92%E7%BD%91%E6%B0%91)
+特鲁多政府强奸民意、违反宪法和政府越权等恶略行为，已经使加拿大逐渐成极权主义和独裁暴政的国家。**正如郭文贵先生所说，凡是强制推行毒疫苗政策的政府官员、所谓科学家和假新闻媒体必将受到世界人民地严厉审判。**
 
-撰稿/发布：一叶知秋
+新闻链接：
 
-**更多资讯，请关注：**
-[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
-[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
-[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+[TD Bank freezes two accounts with $1.1 million intended for Canadian protesters | Washington Examiner](https://www.washingtonexaminer.com/news/td-bank-freezes-two-personal-accounts-with-1-1-million-intended-for-canadian-protesters)
 
  
 
