--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,21 +1,20 @@
 ---
-title: 中日财经爆&#124;南非劳工部将华为告上法庭
+title: 秘翻在线：兴奋剂、争议判罚等乱象频发的北京冬奥会
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002324/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002363/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1376.png)[图片来源](http://www.focac.org/zfgx/rwjl/202111/t20211117_10449589.htm)
-南非劳工部周五（2月11日）表示，他们已要求法院对中共国华为技术有限公司的南非部门进行罚款，因其违反了有关雇用当地人的规则，并责令华为改正。
+撰稿：文贺JP
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-7.jpg)图片来源：文本链接
+北京冬奥会各国运动员激战正酣，围绕比赛规则的判罚层出不穷。花样滑冰金牌候选问题引发关注。
 
-劳工部援引2020年的一项审计报告说，华为当地公司大约90%的员工是外国公民，违反了“就业公平”法规所规定的40%上限。
+目前比赛激战正酣，最受关注的事件就是俄罗斯队选手卡米拉·瓦列瓦（15岁）的兴奋剂问题。
 
-劳工部称已向法院提交文件，要求对涉嫌违反规定的华为当地公司处以150万兰特(99,151美元)或2020年度营业额2%的罚款。
+另一方面，滑雪板项目会引发围绕参赛规则的世界性辩论。混合团体中来自日本的高梨沙罗等4个国家的5名女选手，在第一次和第二次跳越后的检查中，因“违反西装规定”失去比赛资格。通过日本滑雪联盟向国际滑雪联盟递交的关于检查方法文件主旨，可以看到相关各国的诉求。7号男子1千米半决赛，排在前两名的韩国选手因视频判罚换道违规被取消资格，两名中国选手晋级决赛。甚至在决赛中，排名第一的匈牙利选手获得第一名后被取消资格，中国选手获得金牌和银牌。一家韩国报纸批评它是“历史上最糟糕的奥运会”，韩国队也在新闻发布会上抱怨这是“不公平的判罚 “。另一方面，在河北省张家口市举办的冬季两项比赛中，瑞士等官员指出，气温异常寒冷，称“感觉温度低于冰点30度”。（按照规定，如果气温低于冰点20度，比赛将被取消）
 
-消息来源：[南非将华为当地部门告上法庭 因当地人雇佣比例偏低](https://cn.reuters.com/article/south-africa-huawei-lawsuit-hiring-0211-idCNKBS2KJ01Q?il=0)
+信息来源：[https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme\_beijing2022](https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme_beijing2022)
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+责编：待命（文晓）
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
