--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,34 +1,29 @@
 ---
-title: 有声&#124; 美众议员称国际奥委会掩盖中共人权恶行
+title: [ 聚焦港澳 ]香港蔡元培墓被破坏
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002323/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002356/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
-盖特消息，近日美国国会共和党众议员麦克.加拉格尔，在接受福克斯采访时表示，国际奥委会一直在掩盖中共国侵犯人权的行为。他还强调当共和党夺回众议院的时候，将继续开展中共病毒溯源调查。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide8-4.jpeg)
-加拉格尔说，国际奥委会的行为非常卑鄙，他们声称见到了彭帅，而事实上彭帅被中共非法拘禁、扣为人质，并被禁言，但国际奥委会却在帮助中共掩盖事实，无耻的做中共的同谋。加拉格尔反对在北京举办冬奥会，声称美国应当想方设法保护自己的参赛运动员。
+撰稿：云彩
+视频来自网络
+近日观看了香港国际关系学者沈旭晖先生采访香港女作家潘惠莲女士的视频，得知原北京大学校长蔡元培先生晚年是在香港渡过。1940年在港病逝。
 
-对于中共病毒溯源问题，他说现在仍然不清楚武毒所到底发生了什么，美国纳税人的钱如何资助武毒所，开展了病毒功能增强性研究。当共和党夺回众议院的时候，就会立即开展全面调查，也会给蝠奇等一些所谓的科学家送去传票，美国人都应该知道中共病毒大瘟疫到底是如何开始的。
+视频中沈先生说到，2019年反送中运动中，有大陆的小粉红来港破坏蔡元培先生的墓地。这件事被媒体曝光后，很多香港人才知道蔡元培先生的墓地是在香港。
 
-文字版原文：[美众议员称国际奥委会掩盖中共人权恶行](https://gnews.org/zh-hans/2000552/)
+蔡元培先生于1937年底因日本侵华战争从大陆移居到香港，直到去世。1927年蔡元培先生支持在国民党内清理混入的共产党员。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+大陆小粉红来港破坏其墓地，于2019年11月14日在其微博发文，说“将蔡元培的墓碑打磨了一下，贴上汪寿华和赵世炎照片”。由对香港学生反送中的不满迁怒到当年反共的蔡元培先生。汪寿华和赵世炎是当年被杀的共产党员。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+潘惠莲女士认为，中共针对性地使用蔡元培先生的个人历史。比如，到了“五四”，就宣传蔡校长如何关怀学生。而对于其反共立场少提或者根本不提。
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+以前，笔者不知道蔡元培先生因为不认可共产党的主张而支持在国民党内清理混入的共产党员这段历史。
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+中共政权自知不是民选政府，害怕人民知道真正的历史，动摇其统治根基。哪段历史有利就用哪段，或者篡改编造假历史。新中国联邦用真打共产党的假！
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+参考资料：
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+[香港蔡元培墓地被破坏](https://www.youtube.com/watch?v=czgrThiDvVs&amp;t=821s)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
