--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,18 +1,20 @@
 ---
-title: 韩美日三国外长谴责北韩发射导弹，敦促其尽快重返对话
+title: 廉价的器官！黑市交易6万5公开收肾
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2002112/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2002203/)
 
-撰稿：追着曙光跑
+中共统治下买卖器官随处可见，老百姓的器官只是个物件，山东聊城尿毒症患者群，公开收肾6万5，黑中介转手倒卖80万，转手涨价11倍。
+(视频来源：都市报道)
+走投无路廉价卖器官，不如中介转手赚的盆满钵满。只要你卖，就有人敢收，忽悠下的“自愿交易”，可谓童叟无欺还略带“爱心”。卖器官的可怜，黑中介可恨，而买器官的却显得那么的理应。
 
-据韩国KBS新闻2月13日的报道：韩国、美国、日本三国外长在夏威夷举行会谈，探讨韩半岛及其周边地区的安全形势。三国外长联合声明谴责北韩连续发射导弹，违反联合国安理会决议，敦促北韩尽快重返对话。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-14-at-11.48.14.jpeg)图片来源：原新闻
-韩美日外长深入探讨了北韩连续发射导弹等韩半岛有关问题，并就加快与北韩对话的现实性方案进行了磋商。同时，对北韩的挑衅行为正在引发地区的不稳定深表担忧。
+没有贯彻法治的国度，永远只是一个荒蛮的大部落，而中共就是在这种土壤下生存的如鱼得水！不灭共，只有苟活！灭共，才有生活！
 
-对于朝鲜进一步挑衅的可能性，韩外长称，现在一致认为近期局势严重，并进行了多次讨论，以确保局势尽可能向积极的方向发展。
+撰稿/发布：一叶知秋
 
-信息来源：**[한미일외교장관 회담…“정부, 추가 대북 관여 방안 제안…美 경청”](http://world.kbs.co.kr/service/news_view.htm?lang=c&amp;Seq_Code=74460)**
-**[한미일 외교장관 공동성명 발표 “北미사일 규탄…北에 불법활동중단·대화 촉구”](https://news.kbs.co.kr/mobile/news/view.do?ncd=5393848)**
+**更多资讯，请关注：**
+[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
+[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
+[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
 
  
 
