--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,54 +1,25 @@
 ---
-title: 文•贵天成——文贵先生谈“普京”（七）
+title: 瑞银案将揭开中共藏钱的黑洞
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2002397/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002422/)
 
-整理：BENJ1
-编辑：小红帽
+瑞银案将找到过去这么多年来，被中共这个奴役老百姓，收刮的，他们身上的所有这些财富藏匿的这样一个黑洞。当这个黑洞被打开的时候，也就是共产党接近灭亡的时候
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/5-20.png)图片来源：雅典娜农场设计组（614）
+**【郭先生直播摘要】**** 2022.2.9 ****瑞银案将揭开中共藏钱的黑洞**
 
+**郭先生：**
 
-**郭文贵先生2021年7月3日盖特**
+哇!这位英国的法官, 我真的是太好了，这就是英国大英法啊！大英法哎呀哇塞，这个意义太重大了。哎，你们先说几句吧，我有点激动啊哈哈！
 
-听说普京，本来是准备好（去）的。普京、金正恩、伊朗，还有中东某两国、非洲某两国，听说是12个国家都去，包括白俄罗斯。到最后大家知道了，普京不但不去，还不能代表国家来恭喜，连派代表都不行，最后就是个人来个视频恭喜一下。但是前提是，把今年所有的（天然）气的钱估个价，先把现金给付了。俄罗斯的钱有点紧张，就怕你死了，你死之前先把钱付了，是吧?结果俄罗斯这一干，金正恩就来了，80亿美元，又出点事，找茬儿子。然后其他十几个国家兄弟，根本都不来，有的骗了点钱，有的骗了点东西，然后现在要在联合国发起几个所谓的，反美、反帝国垄断、反国际政治恐怖主义、打破美美国的邪恶联盟，都在搞这事。
+今天七哥讲到这个UBS的时候，才让我明白，真正的以钱灭共，是彻底的找到这个共产党的这个钱脉的一个核心。并且打开他并且找到过去这么多年来被中共这个奴役的这些老百姓被收刮的，他们身上的所有这些财富藏匿的这样的一个黑洞，当这个黑洞被打开的时候，也就是共产党接近灭亡的时候。甚至我在想，是不是这这个黑洞里面只有共产党的钱，甚至有可能是七哥曾经讲过的那个黑暗势力的钱，也都在这里面，我不敢去想象。
 
-**郭文贵先生2021年7月5日直播**
+当然，当然，我打断你，我说Nick,我跟你讲啊，我这个官司在,去年十月份的时候，共产党曾经派出官方的绝对代表团（包括）中国银行，中国的人民银行几大银行，就是过去很牛的人，找到欧洲的某前领导人，因为这个我们签了约，永远不能说的。找他来跟我说，包括当时是江家，江志成是里边成员，就是，本来说要跟我接触或跟我家人在海外接触，或者跟我的代表接触，我们全都拒绝了，但是他跟这个欧洲的领导人，法国的一个前总理。他说只要郭文贵要和解，所有现在在香港，查封的资产、国内资产，全部都还给他管的基金。包括 UBS官司损失的钱，一分不少的给他，前提是永远不能再对UBS起诉。
 
-班农先生:记住，最重要的事情就是，我们昨天谈论过，现在只要有一个国家加入，这都是巨大的影响。
+第二，在香港查封的资产，他永远不追究这个查封的这个后果责任。我们光在那个新加坡的那个，那个叫什么银行，光他一个帐户，就几十亿现金。几十亿现金，光资产就是几百个亿。你想想，共产党宣传到现在，就是七哥没钱了。头两天还黑盖特，七哥没钱了。你见过真正的中国人，有像七哥这么曾经有财富，有钱，有几个？你告诉我，包括马云，吹狼蛋呢，是不是？比现金，差远了。任何一个中国企业负债率上真正的最后现金，没有一个能比得上七哥的企业。一个都没有，就是我们家族企业，一个都没有。从纯现金到今年，玩的这几年，你看我们是最牛的。
 
-郭文贵先生:在之前和俄罗斯普京会面，普京说我们不能加入。6月1号他们在天安门广场庆祝，在此前，他们说，我们只以个人名义祝贺，而不是以国家名义。
+那么这个当时来的，这个代表说一句话，其中一个人，跟我很熟的，就是刘彦平很好的哥们，他说刘彦平，这个事情跟你打交道，老郭，他对你佩服的五体投地。说你们一定要相信，郭文贵要把UBS的案子，给你启动了，你所有共产党在海外的金融界的钱都会被挖出，一个一分都不会剩。
 
-班农先生:是的，只能以个人名义祝贺，不能以国家名义祝贺，不是正式的，官方的。
-
-**郭文贵先生2021年7月18日直播**
-
-叶利钦和普京，所有俄罗斯上层的人（都知道），俄罗斯叶利钦临死前告诉普京，永远不要相信共产党，永远不能让共产党回到俄罗斯，也不要相信我们的邻居——中国共产党。
-
-叶利钦所有临死的遗言，普京没有不兑现的。普京号称政治领域唯一一个100%兑现的政治上（承诺）的继承者。普京保护了叶利钦所有家人的资产和安全，兑现了他一切的承诺和诺言。
-
-但是普京后来也跟中国共产党紧密合作，签下来八千多亿美元的天然气和石油供应合同，几乎把整个东欧大部分地盘的领域睁着眼看着共产党去蓝金黄，其中包括乌克兰。
-
-那么，这些都反映了什么，兄弟姐妹们?社会主义全世界都是（大家）痛恨的，恐惧的、都知道是邪恶的。但是，由于趋于利益和趋于对共产主义、社会主义邪恶的恐惧，最后都选择了妥协。
-
-现在俄罗斯出了个普京——政治界的最忠诚者，使者，你能说俄罗斯没有背叛吗?那赫鲁晓夫和斯大林怎么死的?是不是?背叛在人类（史上）无处不在。
-
-往期回顾：
-[文•贵天成——文贵先生谈“普京”（一）](https://gnews.org/zh-hans/1990454/)
-[文•贵天成——文贵先生谈“普京”（二）](https://gnews.org/zh-hans/1992091/)
-[文•贵天成——文贵先生谈“普京”（三）](https://gnews.org/zh-hant/1997918/)
-[文•贵天成——文贵先生谈“普京”（四）](https://gnews.org/zh-hans/1998162/)
-[文•贵天成——文贵先生谈“普京”（五）](https://gnews.org/zh-hans/1998174/)
-[文•贵天成——文贵先生谈“普京”（六）](https://gnews.org/zh-hans/1998177/)
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+视频剪辑：北方信使 | 听写，翻译：Latin 拉丁 |校对：Polaris | 视频制作+字幕：小腾腾说 | 编辑：昆汀Tse |发布：断播
 
  
 
