--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,38 +1,40 @@
 ---
-title: 有声&#124;南非将华为当地部门的雇佣问题告上法庭
+title: 2月13日大直播后记：国际组织的丑陋堕落
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002396/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002417/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
-据[ONA网站](https://www.oann.com/south-africa-takes-huaweis-local-unit-to-court-over-hiring/)援引路透社的报道，南非劳工部周五表示，南非已要求法院对中共国华为技术公司的地方部门处以罚款，因为它违反了雇用当地人的规定，并命令该公司更改其做法。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2022-02-11T160315Z_1_LYNXMPEI1A0R1_RTROPTP_0_SAFRICA-HUAWEI-TECH_1.jpg)在这张2020年1月29日拍摄的插图照片中，在一块PC主板上可以看到带有华为和5G网络标志的智能手机。（REUTERS/Dado Ruvic/File Photo）
-劳工部援引2020年的审计报告说，华为当地公司约90%的员工是外国人，超过了雇佣外国人40%的上限，这违反了 “公平就业”的规定。
+整理：Grace Fang、sadhu
+编辑：小红帽
 
-劳工部称，它已向法院提交文件，要求对华为涉嫌违反规则的当地公司处以150万兰特（99,151美元）或2020年年度营业额的2%的罚款。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜农场设计组（614）
 
-劳工部表示，华为需要根据《移民条例》的规定，雇用60%的南非人和40%的外国国民。然而华为雇用的外国工人人数远远超过了这一数字，并计划雇用更多。
 
-此举是南非政府首次对这家中共国科技巨头提出法律挑战。与此同时，在美国，因有人指控该公司的设备可能被中共国政府用来从事间谍活动，华为正在应对针对这一指控的制裁。
+奥运场上有一种精神，叫体育精神。什么叫奥利匹克精神呢？竞技和平在竞技中，公平地、和平地，尊重游戏规则地体现你不同的技能。一种让人执着的精神，让人坚强的意志，与人和平地共处，享受大自然，增加人与人之间的了解。赢不是目的，能体现出竞争的这种精神、意志和体能，这才是目的。
 
-文字版原文：[南非将华为当地部门的雇佣问题告上法庭](https://gnews.org/zh-hans/2001780/)
+现在的奥林匹克成什么了？成了全世界奥林匹克的腐败。我告诉大家它能腐败到什么程度？ 就在盘古，我不说别的，我只说我经历的事情。就在盘古，他们玩的女人，收到的钱，枪毙他们一万次都不拉倒。就像我说，你们尊崇的梵蒂冈一样，和共产党的勾兑是吧？那是犯罪啊。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+自奥林匹克组织成立以来，你看2008到这个残奥会、冬奥会，以及世界上多少人被抓？它就是个犯罪组织。从什么时候开始最严重的，就是共产党参与以后。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+你从今天的北京冬奥会看到了什么？你想到现在病毒的最高组织是什么了吗？世界卫生组织现在变成什么德行了？世界贸易组织变成什么德行？
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+全都是一帮混账，不但混账，还压迫中国人，跟着共产党腐败，做那些根本见不得人的犯罪行为。联合国UN,你看联合国，给共产党的竟然是人权，国际联合委员会人权让共产党说了算。你们想过这有多荒唐吗？联合国那些王八蛋们到了盘古的那种吃，那种喝，我可是见太多。
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+什么叫五星级超级饭店？一个城市的最高级人的大客厅。三星级饭店就中级人大客厅。招待所就是穷人的大客厅。桥下面就是穷人的大客厅。啥叫七星级饭店？七哥为啥搞七星级和五星级饭店？那就是24小时全人类的精英就在我这儿聚会。他脱不脱屁股洗澡？在盘古酒店，他不，他不脱光腚。他吃饭不用嘴吃的，因为用腚吃。他双修的时候，用手指头，他不用生殖器？你们不知道七哥的这几十年的战略。
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+我走出清风看守所，我阅尽人间的苍凉，人情的冷漠，人生的现实。世界上最毒不过人心，我告诉你。很多人骂狗改不了吃屎。我想问问人类，人类记住，狗是人类的朋友。狗吃人吗？可你人吃狗肉。
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+狗改不了吃屎，你人改了吃屎了吗？你人还吃人呢。最毒不过人心。我告诉你，人心一旦没有信仰控制，比魔还魔，比狗还臭，不如狗。
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+你看锁链女，你看中国对女性，你看周围人的冷漠，包括我，你能受得了吗？ 你们的妈妈，你们的姐妹，你们的闺女24年锁着链子，被无数个男人。天天在那块儿被强奸，还不让吃不让穿，然后生那么多孩子，这是人道吗？还有政府撒谎，有人到那儿蹭热度、蹭流量，拍视频。天诛地灭，都不能为止。
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
