--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,39 +1,41 @@
 ---
-title: 乌克兰寻求在48小时内与俄罗斯会面，讨论边境集结问题
+title: 大直播后记：大卡车事件跟世界经济的关系
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2002392/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002412/)
 
-素材整理：波士顿五月花Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-14-at-11.26.34-AM.png)图片来源：互联网
-就其边境不断升级的紧张局势,乌克兰呼吁与俄罗斯和其他欧洲安全集团重要成员举行一次会议。
+整理：枫叶红了、Lucy Liu
+编辑：文泓
 
-外交部长Dmytro Kuleba说，俄罗斯无视对其部队在乌克兰边境集结这一动作作出解释的正式要求。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/13-5.png)图片来源：墨尔本雅典娜农场设计组
 
-他说，我们要求在未来48小时内举行会议，以便对俄罗斯的计划保持“信息透明”。
 
-尽管在乌克兰边境集结了大约10万名士兵，但俄罗斯一直否认有任何入侵乌克兰的计划。
+我们今天看到（各国的）大卡车事件，跟整个世界经济的一个最大的关系是什么？我再告诉大家，大客车就像刚才Danny战友说的，世界的经济脉络现在只在三条线上，没有任何的四条线。
 
-一些西方国家警告说，俄罗斯正在准备采取军事行动，美国说它可能 “在任何时候 “开始进行空中轰炸。
+第一个就是创意，科技文明发展是世界第一经济生产力。
 
-十几个国家已经敦促他们的公民离开乌克兰，一些国家已经从首都撤出使馆工作人员。哥伦比亚广播公司新闻报道援引了三个消息来源说，美国正准备在未来48小时内从基辅撤出其所有人员。
+第二就是流通，流通性越快，经济越厉害，现在的流通已经都在路上了（物流）。97.8%的人类是住在陆地的，只要你在陆地上住着，就不可能有任何交通工具代替大货车。过去只是点到点，过去的B To B（企业-企业），什么B To C（企业-家庭）这都扯淡的事情。大货车告诉你，不关什么B To B或B To C，你必须需要大卡车司机，它就是流通。
 
-Kuleba先生说，乌克兰周五要求俄罗斯根据《维也纳文件》的规定回答他们军队集结乌边境的意图，《维也纳文件》是欧洲安全与合作组织(OSCE)成员通过的关于安全问题的协议，其中包括俄罗斯。
+第三件事情，让大家记住，就是人与人之间的货币流通，H-PAY就牛在这儿了，不会再被人卡脖子了。
 
-“他说：”如果俄罗斯在谈论欧安组织空间安全的不可分割性时是认真的，它必须履行其对军事透明度的承诺，以缓和紧张局势和加强所有人的安全。
+这里我一点都不开玩笑，（举例一下），小飞象你现在就该给小飞侠说，咱俩不能这么老这样，每天给你流水，咱俩得有点儿交易，10个币流一次，那HPAY就可以了。文紫跟她老公也说，我给你辛辛苦苦地挣钱回来，然后，我还得给你流水，那对不起，（每次）10个币。要不然咱别流，憋死他，来的时候必须给。那文紫说，（现在）20个币了，行不行是吧，就地抬价，咋不行了？HPAY就这样做到了。
 
-然而，乌克兰总统沃洛基米尔-泽伦斯基(Volodymyr Zelensky)批评了这种说法可能造成的 “恐慌”，他说他没有看到任何证据表明俄罗斯计划在未来几天内进行入侵。
+你想要东西是吗？用我大卡车，是吗？对不起。你要支持我的整个的灭疫革命。你们没有意识到大卡车经济这一次，你们不知道法国、包括加拿大那哥们跟我们的联系。头两天盖特最关键时候我们的（CEO）杰森·米勒做一决定，要把盖特Logo全改成那个加拿大大卡车，我说你可千万别加，（加了以后）你就是第二个川普1.16事件了。杰森·米勒有多疯狂啊！咱的工程师约翰都在那儿看直播呢。你说这家伙，他竟然要给他改了。我说你改了，这投资者把钱都给撤回去，咱咱大家全被他灭了……
 
-周日，他与美国总统拜登通了近一个小时的电话。白宫表示，拜登总统重申了美国对乌克兰的支持，两位领导人就 “继续开展外交和威慑的重要性 “达成一致。
+但是，由此可见这个盖特对大卡车事件影响有多大。无论是在法国和加拿大，影响都很大。我今天可以告诉大家，所有这些人，没有不跟我联系的，他们没有人不看香港的这个当年的（卡车）运动的。他说，你告诉我们，怎么能停止疫苗（强制）？我说，你好好看看当年的香港运动，（其他）我啥都不跟你说。
 
-乌克兰关于这次通话的声明说，乌克兰总统感谢美国 “坚定不移的支持”，在通话结束时，泽伦斯基总统邀请美国领导人来乌克兰。白宫方面没有对这一邀请发表评论。
+香港唯一赢的就是大卡车运动，香港所有以后的战略全是输的。我告诉当时香港的几个孩子，如果你们要听我的，快收手。你们要再出来就上楼；再出来，就封他的路；就是以点打击他的面，我就堵住你。
 
-拜登总统和俄罗斯领导人弗拉基米尔-普京在前一天进行了长达一个小时的通话，但未能取得突破性进展。
+你想想路大脑的这个王八蛋，这个孙子他没钱了。你想想七哥现在没钱了，可以找要找文紫、找小飞象、DANNY你们要饭吃去。路大脑卖自己的头像，你不觉得这29美金一张这不成为人类最大的笑话吗？2美金卖一个自己的路德语言，这个孙子有多垃圾啊。但是，你就路大脑袋只要没钱了，他连他妈，他老婆，连他女儿都会卖……
 
-参考链接：[Ukraine seeks meeting with Russia within 48 hours to discuss build-up](https://www.bbc.com/news/world-europe-60370541)
+资料来源：[2022年2月13日 文贵大直播](https://gettr.com/streaming/pu9dbgdec1)
 
-* * *
+发布：tianzhihuan
 
-*编辑&发布：Vicky*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
