--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,25 +1,55 @@
 ---
-title: 施泰因迈尔高票连任德国总统
+title: 文•贵天成——文贵先生谈“普京”（七）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002391/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2002397/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1381.png)[图片来源](https://www.libyanexpress.com/foreign-minister-frank-walter-steinmeier-elected-president-of-germany/)
-当地时间，2月13日（周日）中午，德国联邦大会的成员在柏林投票，选举下一届联邦总统。投票结果显示，现任总统施泰因迈尔（Frank-Walter Steinmeier）成功连任。
+整理：BENJ1
+编辑：小红帽
 
-在现场参与投票的1472名代表中，施泰因迈尔获得了1045张选票。他的胜选几乎是没有悬念的，因为这位曾经担任德国外长的社民党政治家，得到了社民党、绿党、自民党以及联盟党的联合推举。三个执政党加上最大的在野党，他们在联邦大会中占有绝对的多数优势。
+- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/5-20.png)图片来源：雅典娜农场设计组（614）
 
-联邦大会唯一的任务就是选举联邦总统。该机构一半的成员是联邦议院的议员，另一半则是人数相等的各州代表。本届联邦议院目前有736名联邦议员，这就意味着一共有1472名成员参与本次投票，这另一半代表中，除了16个联邦州派出的代表（包括州议会议员）之外，还有不少社会各界的代表人士。
 
-联邦总统在德国主要是象征性的国家元首，对内对外实行代表国家的职责，并不掌握实际的政治权力。
+**郭文贵先生2021年7月3日盖特**
 
-施泰因迈尔此前曾担任过施罗德执政时期的总理府部长，社民党议会党团主席，以及默克尔政府的外交部长等重要职务。2017年他接替前任高克（Joachim Gauck）。他也是联邦德国有史以来第五位寻求连任的总统。根据规定，联邦总统最多担任两届。
+听说普京，本来是准备好（去）的。普京、金正恩、伊朗，还有中东某两国、非洲某两国，听说是12个国家都去，包括白俄罗斯。到最后大家知道了，普京不但不去，还不能代表国家来恭喜，连派代表都不行，最后就是个人来个视频恭喜一下。但是前提是，把今年所有的（天然）气的钱估个价，先把现金给付了。俄罗斯的钱有点紧张，就怕你死了，你死之前先把钱付了，是吧?结果俄罗斯这一干，金正恩就来了，80亿美元，又出点事，找茬儿子。然后其他十几个国家兄弟，根本都不来，有的骗了点钱，有的骗了点东西，然后现在要在联合国发起几个所谓的，反美、反帝国垄断、反国际政治恐怖主义、打破美美国的邪恶联盟，都在搞这事。
 
-信息来源：[施泰因迈尔再度当选为联邦总统](https://www.dw.com/zh/%E6%96%BD%E6%B3%B0%E5%9B%A0%E8%BF%88%E5%B0%94%E5%86%8D%E5%BA%A6%E5%BD%93%E9%80%89%E4%B8%BA%E8%81%94%E9%82%A6%E6%80%BB%E7%BB%9F/a-60761119)
+**郭文贵先生2021年7月5日直播**
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+班农先生:记住，最重要的事情就是，我们昨天谈论过，现在只要有一个国家加入，这都是巨大的影响。
+
+郭文贵先生:在之前和俄罗斯普京会面，普京说我们不能加入。6月1号他们在天安门广场庆祝，在此前，他们说，我们只以个人名义祝贺，而不是以国家名义。
+
+班农先生:是的，只能以个人名义祝贺，不能以国家名义祝贺，不是正式的，官方的。
+
+**郭文贵先生2021年7月18日直播**
+
+叶利钦和普京，所有俄罗斯上层的人（都知道），俄罗斯叶利钦临死前告诉普京，永远不要相信共产党，永远不能让共产党回到俄罗斯，也不要相信我们的邻居——中国共产党。
+
+叶利钦所有临死的遗言，普京没有不兑现的。普京号称政治领域唯一一个100%兑现的政治上（承诺）的继承者。普京保护了叶利钦所有家人的资产和安全，兑现了他一切的承诺和诺言。
+
+但是普京后来也跟中国共产党紧密合作，签下来八千多亿美元的天然气和石油供应合同，几乎把整个东欧大部分地盘的领域睁着眼看着共产党去蓝金黄，其中包括乌克兰。
+
+那么，这些都反映了什么，兄弟姐妹们?社会主义全世界都是（大家）痛恨的，恐惧的、都知道是邪恶的。但是，由于趋于利益和趋于对共产主义、社会主义邪恶的恐惧，最后都选择了妥协。
+
+现在俄罗斯出了个普京——政治界的最忠诚者，使者，你能说俄罗斯没有背叛吗?那赫鲁晓夫和斯大林怎么死的?是不是?背叛在人类（史上）无处不在。
+
+往期回顾：
+[文•贵天成——文贵先生谈“普京”（一）](https://gnews.org/zh-hans/1990454/)
+[文•贵天成——文贵先生谈“普京”（二）](https://gnews.org/zh-hans/1992091/)
+[文•贵天成——文贵先生谈“普京”（三）](https://gnews.org/zh-hant/1997918/)
+[文•贵天成——文贵先生谈“普京”（四）](https://gnews.org/zh-hans/1998162/)
+[文•贵天成——文贵先生谈“普京”（五）](https://gnews.org/zh-hans/1998174/)
+[文•贵天成——文贵先生谈“普京”（六）](https://gnews.org/zh-hans/1998177/)
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
