--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,25 +1,40 @@
 ---
-title: 因存安全漏洞 日本冬奥代表团回国后要彻底删除“冬奥通”
+title: 乌克兰寻求在48小时内与俄罗斯会面，讨论边境集结问题
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002385/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2002392/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1379.png)[图片来源](https://hrtsea.com/zx/65333.html)
-日本冬奥会代表团团长伊东秀仁2月13日在北京表示，已告知代表团返国后彻底删除「冬奥通」（My2022），因这款App存在安全漏洞。
+素材整理：波士顿五月花Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-14-at-11.26.34-AM.png)图片来源：互联网
+就其边境不断升级的紧张局势,乌克兰呼吁与俄罗斯和其他欧洲安全集团重要成员举行一次会议。
 
-北京冬季奥运主办单位以防疫中共病毒（2019冠状病毒疾病）为由，要求所有参与者安装「冬奥通」
+外交部长Dmytro Kuleba说，俄罗斯无视对其部队在乌克兰边境集结这一动作作出解释的正式要求。
 
-，包括运动员、观众和媒体。
+他说，我们要求在未来48小时内举行会议，以便对俄罗斯的计划保持“信息透明”。
 
-「冬奥通」记录个人健康状况，但这款App存在安全漏洞，因此日本政府本月初呼吁日本代表团尽量少用，也鼓励代表团从中共国离境后删除。
+尽管在乌克兰边境集结了大约10万名士兵，但俄罗斯一直否认有任何入侵乌克兰的计划。
 
-伊东今天在北京市的冬奥主媒体中心召开记者会时表示，已告知日本代表团成员，返国后要从手机彻底删除「冬奥通」。
+一些西方国家警告说，俄罗斯正在准备采取军事行动，美国说它可能 “在任何时候 “开始进行空中轰炸。
 
-消息来源：[日本代表團長：返國後徹底刪除北京冬奧App](https://tw.news.yahoo.com/%E6%97%A5%E6%9C%AC%E4%BB%A3%E8%A1%A8%E5%9C%98%E9%95%B7-%E8%BF%94%E5%9C%8B%E5%BE%8C%E5%BE%B9%E5%BA%95%E5%88%AA%E9%99%A4%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7app-145054430.html)
+十几个国家已经敦促他们的公民离开乌克兰，一些国家已经从首都撤出使馆工作人员。哥伦比亚广播公司新闻报道援引了三个消息来源说，美国正准备在未来48小时内从基辅撤出其所有人员。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+Kuleba先生说，乌克兰周五要求俄罗斯根据《维也纳文件》的规定回答他们军队集结乌边境的意图，《维也纳文件》是欧洲安全与合作组织(OSCE)成员通过的关于安全问题的协议，其中包括俄罗斯。
+
+“他说：”如果俄罗斯在谈论欧安组织空间安全的不可分割性时是认真的，它必须履行其对军事透明度的承诺，以缓和紧张局势和加强所有人的安全。
+
+然而，乌克兰总统沃洛基米尔-泽伦斯基(Volodymyr Zelensky)批评了这种说法可能造成的 “恐慌”，他说他没有看到任何证据表明俄罗斯计划在未来几天内进行入侵。
+
+周日，他与美国总统拜登通了近一个小时的电话。白宫表示，拜登总统重申了美国对乌克兰的支持，两位领导人就 “继续开展外交和威慑的重要性 “达成一致。
+
+乌克兰关于这次通话的声明说，乌克兰总统感谢美国 “坚定不移的支持”，在通话结束时，泽伦斯基总统邀请美国领导人来乌克兰。白宫方面没有对这一邀请发表评论。
+
+拜登总统和俄罗斯领导人弗拉基米尔-普京在前一天进行了长达一个小时的通话，但未能取得突破性进展。
+
+参考链接：[Ukraine seeks meeting with Russia within 48 hours to discuss build-up](https://www.bbc.com/news/world-europe-60370541)
+
+* * *
+
+*编辑&发布：Vicky*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
