--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,24 +1,25 @@
 ---
-title: 澳大利亚开始撤离基辅大使馆
+title: 施泰因迈尔高票连任德国总统
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002384/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002391/)
 
-#### 撰稿：彩虹       
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1381.png)[图片来源](https://www.libyanexpress.com/foreign-minister-frank-walter-steinmeier-elected-president-of-germany/)
+当地时间，2月13日（周日）中午，德国联邦大会的成员在柏林投票，选举下一届联邦总统。投票结果显示，现任总统施泰因迈尔（Frank-Walter Steinmeier）成功连任。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1378.png)图片来源：路透社
-2月13日，《国会山报》报道，随着俄罗斯和乌克兰之间紧张局势的加剧，澳大利亚正在撤离其驻乌克兰大使馆。
+在现场参与投票的1472名代表中，施泰因迈尔获得了1045张选票。他的胜选几乎是没有悬念的，因为这位曾经担任德国外长的社民党政治家，得到了社民党、绿党、自民党以及联盟党的联合推举。三个执政党加上最大的在野党，他们在联邦大会中占有绝对的多数优势。
 
-周日，澳大利亚外交部长玛丽斯·佩恩（Marise Payne）宣布，驻基辅（Kyiv）使馆的所有工作人员已被告知离开，大使馆的业务已经关闭，并转移到乌克兰西部城市利沃夫（Lviv）的一个临时办公室。
+联邦大会唯一的任务就是选举联邦总统。该机构一半的成员是联邦议院的议员，另一半则是人数相等的各州代表。本届联邦议院目前有736名联邦议员，这就意味着一共有1472名成员参与本次投票，这另一半代表中，除了16个联邦州派出的代表（包括州议会议员）之外，还有不少社会各界的代表人士。
 
-她说，做出这些决定的原因是“俄罗斯军队在乌克兰边境的集结导致安全局势恶化”。
+联邦总统在德国主要是象征性的国家元首，对内对外实行代表国家的职责，并不掌握实际的政治权力。
 
-佩恩在一份声明中写道：“我们继续建议澳大利亚人立即通过商业手段离开乌克兰。安全状况可能在短时间内发生变化。俄罗斯对乌克兰的军事行动将严重限制我们向澳大利亚人提供领事援助的能力。”
+施泰因迈尔此前曾担任过施罗德执政时期的总理府部长，社民党议会党团主席，以及默克尔政府的外交部长等重要职务。2017年他接替前任高克（Joachim Gauck）。他也是联邦德国有史以来第五位寻求连任的总统。根据规定，联邦总统最多担任两届。
 
-**新闻来源**
+信息来源：[施泰因迈尔再度当选为联邦总统](https://www.dw.com/zh/%E6%96%BD%E6%B3%B0%E5%9B%A0%E8%BF%88%E5%B0%94%E5%86%8D%E5%BA%A6%E5%BD%93%E9%80%89%E4%B8%BA%E8%81%94%E9%82%A6%E6%80%BB%E7%BB%9F/a-60761119)
 
-[Australia evacuates Kyiv embassy](https://thehill.com/policy/international/594024-australia-evacuates-kyiv-embassy)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
