--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,47 +1,25 @@
 ---
-title: 中共国人均可支配收入占GDP之比回到改革开放前
+title: 因存安全漏洞 日本冬奥代表团回国后要彻底删除“冬奥通”
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002372/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002385/)
 
-作者：香草山教育部-文斗
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1379.png)[图片来源](https://hrtsea.com/zx/65333.html)
+日本冬奥会代表团团长伊东秀仁2月13日在北京表示，已告知代表团返国后彻底删除「冬奥通」（My2022），因这款App存在安全漏洞。
 
+北京冬季奥运主办单位以防疫中共病毒（2019冠状病毒疾病）为由，要求所有参与者安装「冬奥通」
 
+，包括运动员、观众和媒体。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+「冬奥通」记录个人健康状况，但这款App存在安全漏洞，因此日本政府本月初呼吁日本代表团尽量少用，也鼓励代表团从中共国离境后删除。
 
+伊东今天在北京市的冬奥主媒体中心召开记者会时表示，已告知日本代表团成员，返国后要从手机彻底删除「冬奥通」。
 
+消息来源：[日本代表團長：返國後徹底刪除北京冬奧App](https://tw.news.yahoo.com/%E6%97%A5%E6%9C%AC%E4%BB%A3%E8%A1%A8%E5%9C%98%E9%95%B7-%E8%BF%94%E5%9C%8B%E5%BE%8C%E5%BE%B9%E5%BA%95%E5%88%AA%E9%99%A4%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7app-145054430.html)
 
-中共国人均可支配收入占GDP比重在1978年时约为44%，改革开放初期曾超过60%，自20世纪80年代中期开始一路直线下降，2005年后重新回到改革开放前的44%左右，并一直原地踏步至今，大幅低于世界平均水平。
-
-其中城镇居民可支配收入占GDP比重1978年是89.09%，2021年是58.55%，下降了31个百分点。农村居民可支配收入占GDP的比重1978年是34.81%，20世纪80年代初期有所提升，此后一路走低，在2010后维持在20%左右，较1978年的34.81%下降了超过10个百分点。中共国所谓“改革开放”四十余年，严重不公平的财富分配体制丝毫未改，百姓依旧高付出低获得。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide10-6.jpg)
-参考链接：
-1. [陈宪：从人均可支配收入占人均GDP比重看为什么要减税](https://www.acem.sjtu.edu.cn/faculty/teacherview/37755.html)
-2. [从指标异常角度探讨共同富裕的路径](https://m.yicai.com/news/101152856.html)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编/编辑：飞虹
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
