--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,28 +1,49 @@
 ---
-title: [ 聚焦港澳 ]香港蔡元培墓被破坏
+title: 美在所罗门群岛重设大使馆 防堵中共
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002356/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002365/)
 
-撰稿：云彩
-视频来自网络
-近日观看了香港国际关系学者沈旭晖先生采访香港女作家潘惠莲女士的视频，得知原北京大学校长蔡元培先生晚年是在香港渡过。1940年在港病逝。
+作者：纽约磐石农场-在远方，台湾宝岛农场-阿尔道夫
 
-视频中沈先生说到，2019年反送中运动中，有大陆的小粉红来港破坏蔡元培先生的墓地。这件事被媒体曝光后，很多香港人才知道蔡元培先生的墓地是在香港。
 
-蔡元培先生于1937年底因日本侵华战争从大陆移居到香港，直到去世。1927年蔡元培先生支持在国民党内清理混入的共产党员。
 
-大陆小粉红来港破坏其墓地，于2019年11月14日在其微博发文，说“将蔡元培的墓碑打磨了一下，贴上汪寿华和赵世炎照片”。由对香港学生反送中的不满迁怒到当年反共的蔡元培先生。汪寿华和赵世炎是当年被杀的共产党员。
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-潘惠莲女士认为，中共针对性地使用蔡元培先生的个人历史。比如，到了“五四”，就宣传蔡校长如何关怀学生。而对于其反共立场少提或者根本不提。
 
-以前，笔者不知道蔡元培先生因为不认可共产党的主张而支持在国民党内清理混入的共产党员这段历史。
 
-中共政权自知不是民选政府，害怕人民知道真正的历史，动摇其统治根基。哪段历史有利就用哪段，或者篡改编造假历史。新中国联邦用真打共产党的假！
+据多家媒体报道，2月12日，美国国务卿布林肯证实，在时隔29年后，美国计划在南太平洋岛国，所罗门群岛重新开设大使馆，在该地区投入更多外交和防卫资源，防范中共持续与太平洋岛国建立军事联系。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide8-5.jpg)
+据悉，布林肯在赴澳洲参加美日印澳四方安全对话峰会之后，转道访问斐济，并将与多名太平洋岛国领袖举行视频会议。据美国官员透露，很多迹象表明，中共妄图与太平洋岛国建立军事联系，首要目标就是所罗门群岛。而所罗门群岛2019年前曾是和台湾友好的邦交国之一，但自2019年后，它擅自背离了与台湾的外交关系，转而亲近中共。
 
-参考资料：
+同一时间，美国政府发布《印度—太平洋战略报告》，计划在12至24个月内，提升在东南亚和太平洋岛国的外交姿态，以扩大美军在该地区的行动范围。
 
-[香港蔡元培墓地被破坏](https://www.youtube.com/watch?v=czgrThiDvVs&amp;t=821s)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+参考链接：
+1. [相隔29年！防堵中國勢力擴張 美證實將在索羅門群島重設大使館](https://news.ltn.com.tw/news/world/breakingnews/3827779)
+2. [相隔29年 傳美將在索羅門群島恢復設立大使館](https://tw.news.yahoo.com/%E7%9B%B8%E9%9A%9429%E5%B9%B4-%E5%82%B3%E7%BE%8E%E5%B0%87%E5%9C%A8%E7%B4%A2%E7%BE%85%E9%96%80%E7%BE%A4%E5%B3%B6%E6%81%A2%E5%BE%A9%E8%A8%AD%E7%AB%8B%E5%A4%A7%E4%BD%BF%E9%A4%A8-043556408.html)
+3. [且看中共對所羅門群島的“藍金黃”](https://gnews.org/zh-hant/121332/)
+4. [中共勢力擴張至所羅門群島](https://gnews.org/zh-hant/1792032/)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
 
 
  
