--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,32 +1,37 @@
 ---
-title: 乌克兰总统邀请美国拜登总统前往基辅稳定局势
+title: 新中国联邦人走向愉悦健康安全的未来
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2002609/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2002674/)
 
-翻译：冰糖葫芦喵
+作者：纽约香草山农教育部 – Jack Li文阳
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+世界政治经济局势跌宕起伏，病毒和疫苗危机还没完，地缘政治危机一触即发。2月13日， 郭文贵先生在大直播中谈及世界经济的变化和走向时，再次分析喜币和Hpay未来的价值。
 
-编辑与校对：灭共文明
+文贵先生清楚表明，现在世界的经济脉络，在三条线上：第一是科技文明发展，创意；第二是物流。人类的98%是在陆地上住的，不可能有任何交通工具代替货车。第三，是人与人之间直接的货币流通。就像HPAY这样的发展趋势，无人能挡。文贵先生还说，不会超过三次直播，你会看到世界一切都变了。你们就不知道，你们在跟我一起经历人类的巨变。
 
-据Just The News 2月13日报道，**乌克兰总统弗拉基米尔·泽伦斯基(Volodymyr zelensky)办公室宣布，他邀请美国总统拜登(Joe Biden)很快访问基辅，以帮助缓和该地区的紧张局势。**
+喜币和Hpay最厉害的设计，在4个方面：第一，过去银行存钱，银行会增发，而喜币和Hpay不会增发。第二，原有的银行有不兑现的权利。喜币和Hpay绝不可能不兑现。第三，银行只是一个支付的中介，是第三方。我们喜币和Hpay是从A到B，喜联储不能控制，没有第三方。第四，它没成本。HPAY没有成本，没有第三方，绝对原值，不可增发。哪家银行不增发呢？喜币一年就发行10亿个，多一个都是犯罪。只有喜币，上市之初，告诉你发行多少个。场外交易都是机构拿走，当做筹码做其他事情。
 
-周六，拜登与泽伦斯基已经电话，当时俄罗斯已经在边境集结了大约10万名士兵。乌克兰领导人寻求在未来48小时内与俄罗斯当局会面，但BBC报道称，乌克兰官员表示，俄罗斯总统弗拉基米尔·普京迄今未理会会面请求。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰总统-e1644813759192.jpg)图片来源：美联社。
-**泽伦斯基指出，乌克兰感受到了拜登和其他盟国的支持。他还说:“我们希望，在其他方面合作，这将有助于防止恐慌的蔓延。”**
+说到场外交易，文贵先生就说，刚才草根小哥爆料，喜币在场外交易，60块都买不着。但是在场内，喜币被压低到了40美金。文贵先生说，据他所知，场外交易有好几笔都在200左右交易的。这几天场外和场内的价格差距，是因为基金在用2亿个币，引诱卖家去抛，你一抛他们就买了。这多简单的逻辑啊。你在场外60块, 80块能买的着吗？就你聪明，在场内30, 40能买着？人家二级市场买卖，你管不着啊。世界上没有价格操纵的，就是喜币。
 
-乌克兰还赞扬美国为加强乌克兰武装部队作出的贡献。泽伦斯基说:“我们还不是北约成员国。因此，只有一支强大的乌克兰军队才是我们国家安全的关键。
+文贵先生说，现在卖币的人，你后悔，早着呢。很多战友场外60,  65, 70块卖了，哭都没地方哭去，不会超过三个月。大家关注三个条件，国家主权认可，大额投资，HPAY全面使用。世界经济在崩塌的时候，HPAY，喜币，躺平币。文贵先生忠告国内的战友们，一定要记住，使用即金钱。
 
-乌克兰总统办公室总结道:“弗拉基米尔·泽伦斯基感谢拜登总统的支持，并邀请他访问乌克兰。**泽伦斯基说：“我相信，你在未来几天抵达基辅对稳定局势至关重要，这将是一个强有力的信号，有助于缓和紧张局势。”**
+文贵先生鼓励战友多用Hpay, 有人打赏喜币，跟战友间用Hpay 支付医疗费用，当然可以，可以增加交易，鼓励战友们这么做。
 
-据报道称，白宫在与泽伦斯基通话的声明中没有提到邀请基辅事宜。
+文贵先生总结道，我们新中国联邦在做的事。第一，无苗族有多伟大？无苗有币族多么美好？财富是人走向愉悦健康安全必经的工具。第二，当你遇到困难挫折的时候，有一个族群帮你。第三，活着的时候，有更多的人际关系、机会，认知，最后达到共同的信仰，就是我们现在在干的事情。以上这几条，有哪个国家能给你？只有我们新中国联邦。
 
-上周晚些时候，拜登政府指示在乌克兰的美国公民“立即撤离”，并表示，一旦俄罗斯入侵，美国军方将无法疏散乌克兰公民。
+参考链接： [2022年2月13日文贵先生直播大雨围城速记](https://gnews.org/zh-hans/2001364/)
 
-新闻链接：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二月小图.tif)
 
-[Ukrainian president invites Joe Biden to Kyiv to stabilize the situation | Just The News](https://justthenews.com/government/white-house/ukrainian-president-invites-joe-biden-kyiv-stabilize-situation)
+审核/编辑/发稿：谐趣园
 
-
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
