--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,21 +1,31 @@
 ---
-title: 灭共几乎是人类上万年来最难的一件事
+title: 下周也许决定乌克兰的命运是战争 和平或僵局
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002576/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002671/)
 
-我们现在所干的事情是几乎是人类上。地球上物理上不可能的事，但是真的，拜万佛万神所赐，我们真的是接近完成。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-64.jpg)
+图片来源： news.ifeng.com
 
-**【郭先生直播摘要】**** 2022.2.9 ****灭共几乎是人类上万年来最难的一件****事**
+美联社2月13日报道，即使接下来几天俄罗斯没有入侵乌克兰，这个危机也是欧洲东西方关系（俄罗斯与欧洲）平衡受到严重冲击的关键点，下一周可能是决定目前的僵局到底是和平解决还是发生战争的关键时刻，欧洲在冷战后的安全架构一直是限制派出常规部队以及限制核武器，一位退休外交官和前美国大使，后来去佐治亚州西北大学教授国际关系学的教师尹安·凯利说：“ 接下来10天是关键时刻”。
 
-**郭先生：**
+拜登政府周五说，任何时候都可能发生入侵，很可能是下周三，这是根据美国情报部门的信息，华盛顿方面已经撤离在乌克兰首都基辅的美国大使馆工作人员。
 
-灭共几乎是人类上，万年来最难的一件事。大家千万别把他想的想当然，或者必然，或者容易那都是犯了极端错误。那就连就犯了共同同样的错误啊。就是灭共，我们也不是说对任何人的责任，也不是我们的保证，也不是我们必须做的事。但是我们必须灭掉共产党，啊灭掉共产党。
+周六拜登与普京之间的电话交谈并没有缓解紧张局势，拜登与乌克兰总统于周日通了话。
 
-现在从这事怎么有利益灭共产党，大家一定要想智慧的灭共产党。我们现在又想灭的是全人类最大的个坏蛋共产党。而且人家都觉得是不可能的，再不可能就咱还没有军队，咱没有任何组织。啊还不流血，你去想想这几乎是，你可以纵观人类历史万年来啊，地球到这百万亿年来的这么这一个，一个地球和银河系，没有人说过。说不流血要改变一个这么大的流氓组织，黑社会组织想都没想过。
+在欧洲未来秩序方面，俄乌双方的利益冲突达已经达到了高峰，双方都可能采取对抗措施以超出原先所能接受的范围。
 
-不是说想都没想过，释迦牟尼也没这么说过，阿拉也没这么说过，耶稣也没这么说过天主也没这么说过，没有人这么说过啊。我们在我们中国的老天爷啊，啊是不天皇啊玉皇大帝都没这么说过。是我们现在所干的事情是几乎是人类上，地球上物理上不可能的事，但是真的拜万佛万神所思，我们真的是在，接近完成，而且一定会完成那消灭这个过程。
+下一周，美国和北约预计莫斯科会对他们拒绝俄罗斯的主要安全要求作出反应，
 
-视频剪辑：文知 | 听写，翻译：Latin | 校对 : tonyj | 视频制作+字幕：芥末 |编辑&发布：断播
+同时，在中共国的冬奥会被认为是暂时延缓了俄罗斯的行动，冬奥会将于2月20日结束，虽然美国认为入侵乌克兰可能会在冬奥会结束之前，另外下周末将有国际安全会议，普京警告说如果不把乌克兰划出北约，他就不会去。
+
+法国和德国试图说服乌克兰政府与东部分离主义对话，但这个努力已告失败，尽管如此，普京与英国的外交接触于2018年因其前间谍和他女儿事件问题关闭，最近又重新开放，但英国防卫大臣和俄罗斯国防部长的谈话更像是做生意，双方强调的是维持常规接触以减少军事冲突的危险。
+
+##### 新闻来源： [War, peace, stalemate? Week ahead may decide Ukraine’s fate](https://apnews.com/article/russia-ukraine-ian-kelly-europe-moscow-russia-4bf5d42906c582c36972b076e73c430f)
+
+#  
+
+
 
  
 
