--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,27 +1,77 @@
 ---
-title: 七哥关于自己下半生的重要决定
+title: 中共国令人震惊的贩卖妇女案件数量
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002487/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2002632/)
 
-我从今年开始起七哥将走向一个，我永远不想拥有任何一分钱一分财富。我就是要灭它共产党，而且我要把中国人失去的这个70年的财富和尊严，和公正我要找回来。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/020208.jpg)图片为近期刷爆网络的中国江苏徐州丰县一名被锁链锁住的八个孩子的母亲的视频截图
+来自《大纪元时报》2022年2月12日的报道，这段拍摄江苏徐州农村一名被铁链锁住的妇女（八个孩子的母亲）被长期囚禁的视频震惊了中共国。许多人认为，这名妇女是人口贩运的受害者，已经沦为生殖工具。
 
-**【郭先生直播摘要】**** 2022.2.9 ****七哥关于自己下半生的重要决****定**
+这种普遍的贩卖女性的犯罪行为在中共国十分猖獗，而且原因很深。
 
-**郭先生****：**
+不幸的是，很难准确地确定中共国被贩卖的妇女人数，但过去的国家媒体报道提供了一些统计的证据。
 
-所以说我们，七哥啊上半生，今年一个52岁的七哥，52岁之前我挣钱，我赚钱，我也享受人生，我也准备了，我也挑战了，我也受尽了天下苦，人间的凄凉，我都受到了。那么我从今年开始起，七哥将走向一个，我永远不想拥有任何一分钱一分财富，我就是要灭它共产党，而且我要把中国人失去的这个70年的财富和尊严，和公正我要找回来。
+2015年2月16日，中共国营报纸《法制日报》的记者从该政权的公安部获悉，2014年有超过3万名被贩卖的女性被解救。
 
-这个我要有个很重要的仪式感，你们现在还没有。今天我说的话，刚才大家没有意识到，我还有很重要的仪式感，要准备着。今天不是重点，还不能告诉你们，我现在在法院还申请另外一个东西，七哥等有一天上你们家要饭的时候，我就希望战友们记住，给七哥尊严的一碗饭。
+《法制日报》还报道说，2012年3月29日，记者从中共国反拐培训课程中了解到，截至2009年，共发现23341起拐卖妇女案件，解救被拐妇女45702人。
 
-我不是开玩笑。爱米粒、文艺真的，Tex还有 Nick，所有战友做好准备，七哥很有可能不在美国生活，很快我有可能去两个地方，一个是伦敦，一个是日本。这是今天的重大宣布，我可能要去伦敦英国和日本生活。我到英国去，我就是为了这个官司，UBS的官司，一定今年我会去英国去生活，就去准备打这个官司。
+1989年，由谢致红和贾鲁生撰写的《古老的罪恶——全国妇女大拐卖纪实》一书出版。书中引用的官方数据显示，来自中共国各地的48,100名女性被拐卖到徐州（发现带镣铐母亲的城市）所辖的六个县。其中，伊庄乡的牛楼村，被拐卖的女性占该村年轻已婚妇女的三分之二。
 
-第二个去了英国生活，我就要肯定要日本，日本是对中国那块儿作战，亚洲唯一安全的地方，在日本东京我有个大酒店，就在帝国酒店对面，一整栋楼，咱们爆料革命的楼。我在去那里之前，首先七哥必须变得一无所有。我真的一分钱没有，一毛钱没有。
+我们不可能知道有多少女性尚未被解救，也不可能知道有多少女性在其他年份被拐卖。
 
-这是在法律面前庄严的说话，全靠家族和基金的支持。未来肯定是更是要靠这些支持，但我要变得更加一无所有。绝对是全身心的，在伦敦以沼泽地，以这些黑暗找回中国人的财富，然后切断共产党最后的所有的，它想东山再起的那黑色的财富。
+从媒体披露的信息来看，大多数被拐卖的女性都被卖到了贫困的农村地区，那里男多女少，当地居民没有财力结婚。
 
-到日本去近距离作战，组织起我们真正的各种力量，在日本建立个大平台，24小时全面作战。我们就是想办法能让大陆的每个角落，都能听到七哥直接的声音。共产党你有种你暗杀我，到时候共产党有本事暗杀我，我们不想诱使它犯罪，但它有种它过来。
+严重的性别不平衡
 
-视频剪辑：GC |听写：雨山溪桥客|翻译：Arthur |校对：tonyj | 视频制作+字幕：刀锋使者| 编辑&发布：断播
+根据中共国当局2021年5月发布的第七次人口普查公报，中共国的男女比例为105.07比100。基于中共国14.1亿的总人口，男性比女性多3300万。农村地区的不平衡现象更加明显，男女比例高达107.91比100。
+
+2010年中国人口普查的结果最为尖锐，80年代出生的男性与女性的比例为136比100，70年代出生的比例达到206比100。
+
+关于性别失衡的现象，长期研究中国人口政策的德克萨斯农工大学(Texas A&M University)教授Dudley Poston预测，由于人口中女性的短缺，2020年将有4500万到5000万单身男性找不到配偶。
+
+男女之间的严重失衡通常被归咎于中共执行了30多年的独生子女政策、中国农村的重男轻女做法以及选择性堕胎。技术的发展使得确定胎儿的性别成为可能，这使得选择性堕胎这种性别杀戮的形式更加普遍。
+
+农村的贫困
+
+台湾中正大学传播学系教授罗世宏认为，女性被绑架的另一个原因是中共国不公平的户籍政策，加上农村地区人民的极端贫困。
+
+中国共产党（CCP）在中共国夺取政权后，户籍制度采取了城市和农村的双重管理，并将所有社会资源的分配，包括教育、就业和福利待遇，与户籍挂钩。
+
+长期以来，农村户口持有者一直处于社会底层，因为他们无法获得与城市户口持有者相同的资源。
+
+在2015年的一篇评论中，罗世宏说，中共国农村的单身人士是婚姻市场中最弱小的群体。由于贫穷和其他原因，他们缺乏在“狼多肉少的丛林”中娶妻的竞争力。因此，他们难以满足基本的性需求，所以他们采取非法手段，同时解决家庭继承的愿望。
+
+官员的漠不关心
+
+尽管中共官员在不同场合声称，必须迅速严惩拐卖妇女的行为，决不姑息，但这种言论通常被认为是象征性的。
+
+中共国知名媒体人长平在他的评论文章中说，在任何一个人口贩卖的重灾区，大家都知道哪些家庭购买了他们的媳妇，但当地政府从不主动承认这个问题，积极参与和维护人口贩卖网络。只有当受害者的家人要求当地警方采取行动，或者要求进行象征性的打击时，当地警方才会被迫进行解救。
+
+中国政法大学教授罗翔在2020年所作的一段演讲视频最近也在网上流传。罗祥举了一个生动的例子来说明这种情况。他说，非法购买一只鹦鹉的最高刑期是五年，而非法购买1-12名女性的最高刑期是三年，这相当于非法购买20只蟾蜍的最高刑期。因此，中共国女性的价值低于鹦鹉，只相当于一只蟾蜍。罗翔还表示，如果没有买家，就不会有卖家。正是因为对买家的惩罚太轻，所以才有这么多卖家。
+
+中共不仅无动于衷，在某种程度上甚至是纵容。罗世宏指出，中共官方自上而下的维稳逻辑，进一步加剧了贩卖女性的问题。贩卖人口的现象虽然在法律上、道德上和政治上完全不正确，但却有助于当局在农村维持“稳定”。否则，大量来自农村地区的不满意的单身人士，没有结婚的希望，可能成为社会动荡的一个因素。
+
+大量的女性被绑架，然后被迫卖淫。联合国教科文组织下属的反人口贩运组织（UNIAP）对中共国的人口贩运受害者进行了分析。该机构研究了2006年和2007年之间的800个案例，发现19%的被贩卖女性被迫卖淫，而42%没有透露她们被卖给谁。
+
+这些活动与仅仅为了强迫婚姻而贩卖女性不同，因为贩卖的对象不是山区或农村的人，而是大城市里的人。
+
+**简评**：在中共这个邪恶政权治理下，中共国这片土地上的人失去了基本的权利，法律只是一块遮羞布，更不存在什么法治。官员们的一句话，就是法，一点点的权利和利益就可以让当权者毁掉普通老百姓的一生。现实中所有被贩卖的女性和儿童的遭遇，都只会比《盲山》这部电影惨一百倍。最恐怖的恐怖片都写不出花季少女被铁链拴上24年，生8个小孩的剧本。中共一天不灭，它们创造的人间地狱就会继续存在。Take Down the CCP!
+
+新闻链接：[https://www.theepochtimes.com/the-alarming-number-of-cases-of-trafficking-of-females-in-china-analysis\_4273469.html](https://www.theepochtimes.com/the-alarming-number-of-cases-of-trafficking-of-females-in-china-analysis_4273469.html)
+
+翻译/简评：clau
+
+PR：Harvey（叶知秋）
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
