--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,23 +1,26 @@
 ---
-title: 中日财经爆&#124;外资1月增持人民币债券大降近四成
+title: 瑞银案将揭开中共藏钱的黑洞
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002386/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002422/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1380.png)[图片来源](https://www.sohu.com/a/425770351_100110525)
-路透社周一（2月14日)根据中债登最新数据计算，境外机构投资者1月增持中国银行间债券501亿人民币，环比大降近四成；
+瑞银案将找到过去这么多年来，被中共这个奴役老百姓，收刮的，他们身上的所有这些财富藏匿的这样一个黑洞。当这个黑洞被打开的时候，也就是共产党接近灭亡的时候
 
-中债登公布的统计月报还显示，期末境外机构中债登债券托管余额37,335亿元，境外机构中债登国债托管余额为25,189亿元。
+**【郭先生直播摘要】**** 2022.2.9 ****瑞银案将揭开中共藏钱的黑洞**
 
-境外机构投资者去年12月增持中债登托管的债券787亿元人民币，环比降逾一成；其中增持国债619亿元，环比降近三成。去年全年累计增持中债登债券规模7,986亿元，较2020年降两成，累计增持国债5,756亿。
+**郭先生：**
 
-境外机构去年12月末在上清所持有债券余额为3,200亿元，加上在中债登托管的36,834亿元债券存量，在银行间市场人民币债券持有总额达到40,034亿元。
+哇!这位英国的法官, 我真的是太好了，这就是英国大英法啊！大英法哎呀哇塞，这个意义太重大了。哎，你们先说几句吧，我有点激动啊哈哈！
 
-消息来源：[外资1月增持人民币债券501亿环比降近四成 但国债增持量环比小增–中债登](https://cn.reuters.com/article/foreign-investors-yuan-bonds-0214-mon-idCNKBS2KJ036?il=0)
+今天七哥讲到这个UBS的时候，才让我明白，真正的以钱灭共，是彻底的找到这个共产党的这个钱脉的一个核心。并且打开他并且找到过去这么多年来被中共这个奴役的这些老百姓被收刮的，他们身上的所有这些财富藏匿的这样的一个黑洞，当这个黑洞被打开的时候，也就是共产党接近灭亡的时候。甚至我在想，是不是这这个黑洞里面只有共产党的钱，甚至有可能是七哥曾经讲过的那个黑暗势力的钱，也都在这里面，我不敢去想象。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+当然，当然，我打断你，我说Nick,我跟你讲啊，我这个官司在,去年十月份的时候，共产党曾经派出官方的绝对代表团（包括）中国银行，中国的人民银行几大银行，就是过去很牛的人，找到欧洲的某前领导人，因为这个我们签了约，永远不能说的。找他来跟我说，包括当时是江家，江志成是里边成员，就是，本来说要跟我接触或跟我家人在海外接触，或者跟我的代表接触，我们全都拒绝了，但是他跟这个欧洲的领导人，法国的一个前总理。他说只要郭文贵要和解，所有现在在香港，查封的资产、国内资产，全部都还给他管的基金。包括 UBS官司损失的钱，一分不少的给他，前提是永远不能再对UBS起诉。
+
+第二，在香港查封的资产，他永远不追究这个查封的这个后果责任。我们光在那个新加坡的那个，那个叫什么银行，光他一个帐户，就几十亿现金。几十亿现金，光资产就是几百个亿。你想想，共产党宣传到现在，就是七哥没钱了。头两天还黑盖特，七哥没钱了。你见过真正的中国人，有像七哥这么曾经有财富，有钱，有几个？你告诉我，包括马云，吹狼蛋呢，是不是？比现金，差远了。任何一个中国企业负债率上真正的最后现金，没有一个能比得上七哥的企业。一个都没有，就是我们家族企业，一个都没有。从纯现金到今年，玩的这几年，你看我们是最牛的。
+
+那么这个当时来的，这个代表说一句话，其中一个人，跟我很熟的，就是刘彦平很好的哥们，他说刘彦平，这个事情跟你打交道，老郭，他对你佩服的五体投地。说你们一定要相信，郭文贵要把UBS的案子，给你启动了，你所有共产党在海外的金融界的钱都会被挖出，一个一分都不会剩。
+
+视频剪辑：北方信使 | 听写，翻译：Latin 拉丁 |校对：Polaris | 视频制作+字幕：小腾腾说 | 编辑：昆汀Tse |发布：断播
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
