--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,25 +1,39 @@
 ---
-title: 因存安全漏洞 日本冬奥代表团回国后要彻底删除“冬奥通”
+title: 有声&#124;南非将华为当地部门的雇佣问题告上法庭
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002385/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002396/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1379.png)[图片来源](https://hrtsea.com/zx/65333.html)
-日本冬奥会代表团团长伊东秀仁2月13日在北京表示，已告知代表团返国后彻底删除「冬奥通」（My2022），因这款App存在安全漏洞。
+配音：香草山农场 – 纳米
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
+据[ONA网站](https://www.oann.com/south-africa-takes-huaweis-local-unit-to-court-over-hiring/)援引路透社的报道，南非劳工部周五表示，南非已要求法院对中共国华为技术公司的地方部门处以罚款，因为它违反了雇用当地人的规定，并命令该公司更改其做法。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2022-02-11T160315Z_1_LYNXMPEI1A0R1_RTROPTP_0_SAFRICA-HUAWEI-TECH_1.jpg)在这张2020年1月29日拍摄的插图照片中，在一块PC主板上可以看到带有华为和5G网络标志的智能手机。（REUTERS/Dado Ruvic/File Photo）
+劳工部援引2020年的审计报告说，华为当地公司约90%的员工是外国人，超过了雇佣外国人40%的上限，这违反了 “公平就业”的规定。
 
-北京冬季奥运主办单位以防疫中共病毒（2019冠状病毒疾病）为由，要求所有参与者安装「冬奥通」
+劳工部称，它已向法院提交文件，要求对华为涉嫌违反规则的当地公司处以150万兰特（99,151美元）或2020年年度营业额的2%的罚款。
 
-，包括运动员、观众和媒体。
+劳工部表示，华为需要根据《移民条例》的规定，雇用60%的南非人和40%的外国国民。然而华为雇用的外国工人人数远远超过了这一数字，并计划雇用更多。
 
-「冬奥通」记录个人健康状况，但这款App存在安全漏洞，因此日本政府本月初呼吁日本代表团尽量少用，也鼓励代表团从中共国离境后删除。
+此举是南非政府首次对这家中共国科技巨头提出法律挑战。与此同时，在美国，因有人指控该公司的设备可能被中共国政府用来从事间谍活动，华为正在应对针对这一指控的制裁。
 
-伊东今天在北京市的冬奥主媒体中心召开记者会时表示，已告知日本代表团成员，返国后要从手机彻底删除「冬奥通」。
+文字版原文：[南非将华为当地部门的雇佣问题告上法庭](https://gnews.org/zh-hans/2001780/)
 
-消息来源：[日本代表團長：返國後徹底刪除北京冬奧App](https://tw.news.yahoo.com/%E6%97%A5%E6%9C%AC%E4%BB%A3%E8%A1%A8%E5%9C%98%E9%95%B7-%E8%BF%94%E5%9C%8B%E5%BE%8C%E5%BE%B9%E5%BA%95%E5%88%AA%E9%99%A4%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7app-145054430.html)
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
