--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,51 +1,23 @@
 ---
-title: 喜马拉雅币一周分析与总结（2月7日-2月13日）
+title: 中日财经爆&#124;外资1月增持人民币债券大降近四成
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002374/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002386/)
 
-作者：香草山金融部 – ILOVE战神
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1380.png)[图片来源](https://www.sohu.com/a/425770351_100110525)
+路透社周一（2月14日)根据中债登最新数据计算，境外机构投资者1月增持中国银行间债券501亿人民币，环比大降近四成；
 
+中债登公布的统计月报还显示，期末境外机构中债登债券托管余额37,335亿元，境外机构中债登国债托管余额为25,189亿元。
 
+境外机构投资者去年12月增持中债登托管的债券787亿元人民币，环比降逾一成；其中增持国债619亿元，环比降近三成。去年全年累计增持中债登债券规模7,986亿元，较2020年降两成，累计增持国债5,756亿。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+境外机构去年12月末在上清所持有债券余额为3,200亿元，加上在中债登托管的36,834亿元债券存量，在银行间市场人民币债券持有总额达到40,034亿元。
 
+消息来源：[外资1月增持人民币债券501亿环比降近四成 但国债增持量环比小增–中债登](https://cn.reuters.com/article/foreign-investors-yuan-bonds-0214-mon-idCNKBS2KJ036?il=0)
 
-
-过去一周喜马拉雅币价格回落至45美元左右，平均日交易量约为12万枚喜币。喜币上市以来总交易量约2800万枚 ，占今年总发行量的仅约2.8%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide12-4.jpg)
-最近全球战友都积极投入到喜支付的推广活动中。2月10日，台湾农场团队直播了使用HPAY购买及交付第一辆汽车的实况。交易标的是一台2019年出厂的宝马 X3休旅车二手车，交易金额约为1200 HCN。买卖双方当场使用HPAY，瞬间就完成了买车款项的支付。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture1-7.jpg)
-据卖家台湾农场大象表示，他选择以喜币交易，好处是可以省去被信用卡公司抽取的手续费、货款可以瞬间入账不必经由银行造成延迟收款、也可以享受未来喜币预期的涨价空间。
-
-本周据郭文贵先生在大直播中透露，俄乌政治危机对全球供应链造成巨大伤害后，数字货币将成为全球经济危机中的最大赢家，其中H-Pay将成为数字货币中的最大赢家。经过一系列事件的发酵，3个月后喜币的价格将达到之前难以想象的新高度。郭先生还表示，喜币和喜支付将打破中共对钱的垄断，让中国人真正拥有自己的财富，从而拥有自己独立的人格和思想，这些都是中国人拥有人权和真相的基础。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture-14.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture2-4.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture3-5.png)
-参考链接：
-1.[Himalaya Exchange & HIMALAYA PAY – Your key to the Himalaya Ecosystem](https://himalaya.exchange/himalaya-pay)
-2. [台湾使用HPAY完成第一台汽车交易](https://gnews.org/zh-hans/1994357/)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编/编辑：飞虹
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
