--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,40 +1,49 @@
 ---
-title: 有声&#124;现在卖掉喜币的人将来必定后悔
+title: 德转强硬 将中共定为体制竞争对手
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2002364/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002370/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
+作者：纽约香草山医疗部-云豹
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/FCSeY69XEAInXAV.jpg)
-2022年2月13日，在大直播中谈到喜币场外交易时，文贵先生说，现在场外交易卖掉喜币套现的战友，将来必定会后悔。
 
-大直播中，说到场外交易时，文贵先生就说，刚才收到草根小哥爆料，喜币在场外交易，60美金都买不着。但是在场内，喜币被压低到了40美金。
 
-文贵先生说，据他所知，场外交易有好几笔都在200美金左右交易的。这几天场外和场内的巨大价格差距，是因为基金在利用2亿个币，场内压低价格，场外交易炒高价格，在引诱着大家去场外交易卖出喜币，只要你一抛，他们就买进。
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-郭先生说，现在卖币的人，你后悔？早着呢。很多战友在场外交易中，以60,65,70的价格，卖了手中的喜币。不远的将来，肯定会哭都没地方哭去，不会超过三个月。只要满足三个条件：国家主权认可，大额投资，HPAY全面使用，喜币的价值必然不可估量。
 
-目前世界格局在发生着巨大的变化，世界经济面临着崩塌，金融市场肯定会暴涨暴跌。在这样的巨变中，数字货币是未来发展的趋势，HPAY和喜币会成为其中最大的赢家。
 
-文字版原文：[现在卖掉喜币的人将来必定后悔](https://gnews.org/zh-hans/2001739/)
+2月12日，德国媒体报导，德国外交部将发文给各政府部门，要求将中共定义为“体制竞争对手”。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+欧盟早在2019年就已将中共视为“体制竞争对手”，但是亲中共的前任默克尔政府一直不敢表态。新任德国联合政府显然已经开始转向，不再将中共视为亲密的伙伴。组成新联合政府的三个政党，之前在对待中共的问题上曾达成协议，包括指控中共在新疆设立劳改营，以及支持让台湾参与更多国际组织等。这次德国外交部的发文显示，德国新政府将逐步落实三党与中共有关的协议内容。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide9-7.jpg)
+德国新政府这次并没有派官方代表去参加北京冬季奥运，而且总理萧兹将在与中共会面之前，先与印度及日本政府进行磋商商。目前属于社民党的德国总理萧兹及属于绿党的外交部长贝尔伯克都没有访问中共的计划。
+
+隶属德国绿党的欧洲议会对中关系代表团团长包瑞翰表示：新政府展现的对中共政策，比前总理默克尔更有魄力。
+
+参考链接：
+[傳德國將硬起來 呼應歐盟視中國為體制競爭對手](https://www.cna.com.tw/news/aopl/202202120237.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
 **更多资讯，更多关注**
 
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
