--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,19 +1,47 @@
 ---
-title: 秘翻在线：兴奋剂、争议判罚等乱象频发的北京冬奥会
+title: 美参议员称中共病毒团伙难以承受真相后果
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002363/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2002366/)
 
-撰稿：文贺JP
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-7.jpg)图片来源：文本链接
-北京冬奥会各国运动员激战正酣，围绕比赛规则的判罚层出不穷。花样滑冰金牌候选问题引发关注。
+作者：纽约磐石农场 – 在远方
 
-目前比赛激战正酣，最受关注的事件就是俄罗斯队选手卡米拉·瓦列瓦（15岁）的兴奋剂问题。
 
-另一方面，滑雪板项目会引发围绕参赛规则的世界性辩论。混合团体中来自日本的高梨沙罗等4个国家的5名女选手，在第一次和第二次跳越后的检查中，因“违反西装规定”失去比赛资格。通过日本滑雪联盟向国际滑雪联盟递交的关于检查方法文件主旨，可以看到相关各国的诉求。7号男子1千米半决赛，排在前两名的韩国选手因视频判罚换道违规被取消资格，两名中国选手晋级决赛。甚至在决赛中，排名第一的匈牙利选手获得第一名后被取消资格，中国选手获得金牌和银牌。一家韩国报纸批评它是“历史上最糟糕的奥运会”，韩国队也在新闻发布会上抱怨这是“不公平的判罚 “。另一方面，在河北省张家口市举办的冬季两项比赛中，瑞士等官员指出，气温异常寒冷，称“感觉温度低于冰点30度”。（按照规定，如果气温低于冰点20度，比赛将被取消）
 
-信息来源：[https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme\_beijing2022](https://www.sankei.com/article/20220213-IDOGJK4A2FIGRIDGEE2MDXQ7ZQ/?outputType=theme_beijing2022)
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-责编：待命（文晓）
+
+
+盖特2月12日消息，美国参议员罗恩·约翰逊在接受媒体采访时表示，中共病毒疫情造成美国大约90万人，全球超过550万人死亡，黑暗势力一定会难以承受疫情真相的后果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide7-5.jpg)
+约翰逊说，中共病毒疫情揭露了美国联邦卫生机构、医学期刊、医疗机构，以及国际组织中所存在的大量腐败。而议员们需要做大量的工作去揭露他们，因为黑暗势力造成的破坏正在暴露，真相正在逐渐浮出水面。约翰逊把这些人称作中共病毒团伙，他们承担不起真相的后果，因为死去的人数太多。他们没有推行早期治疗，而中共病毒疫苗也不像人们所期望和祈祷的，那么安全有效。
+
+约翰逊强调说，中共病毒团伙不愿意承认这一事实，他们还在坚持自己对大瘟疫失败的管理方式，他们不会承认自己的错误。而媒体和科技巨头，也是真相掩盖和信息审查的同谋，因此他们也不会揭露实情。所以揭露中共病毒团伙的罪行，将是一件艰难的工作。
+
+参考链接：
+[Senator Ron Johnson: COVID團伙他們承擔不起真相的後果,死去的人數太多，美國大約90萬，全球超過5百50萬 媒體和大科技巨頭是（真相）掩蓋和（信息）審查的同謀，所以他們也不會揭露實情,所以證明這些人的錯誤將是一件很難的事情](https://gettr.com/post/pu1t0s82a8)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
