--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,31 +1,45 @@
 ---
-title: 卡车司机抗议传导至法国 警方强行驱离
+title: 大直播后记：没有比新中国联邦更伟大的组织
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002654/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002692/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1384.png)[图片来源](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
-受到加拿大卡车司机抗议的启发，不少法国反疫苗强制政策的示威者也从各地开车来到巴黎。最终警方使用催泪瓦斯驱散了这场抗议活动。对于近百名示威者来说，2月12日的集会以被逮捕告终。
+#### 整理：清水冷香、Lucy Liu
+编辑：小红帽
 
-法国巴黎警方的一份声明表示，在周六的抗议活动中，有97人被逮捕，还发出了513份警告。警方在推特上宣布，周日部署了大量警员，用来封锁“自由车队”。据悉，从周五（2月11日）到周一这段时间，当局动员了大约7500名警察，此外还部署了装甲车和水炮。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1386.png)图片来源：雅典娜农场设计组
 
-法国当局称，那些违反规定的人有可能被判处两年监禁，罚款4500欧元，并被吊销驾驶执照。
 
-最近几日，来自法国各地的数千名示威者开着汽车、露营车、面包车等来到巴黎周边，加入抗议车队。参与者中有反对需要出示疫苗接种证明的人、有“黄马甲”运动的支持者，也有其他反对政府措施的人士。
+第一，我们作为海外华人，作为一个人类，你的钱，能给你提供财富的保证，让你生存下去。财富，是人类走向快乐，愉悦，安全，健康必须的工具。全世界都在偷你的钱，只有新中国联邦让你有钱。
 
-法国当局禁止了计划中的抗议活动。尽管如此，示威者还是在本周六下午设法进入了香榭丽舍中央大道，除步行者外，也有一百多辆汽车。
+第二，当你遇到困难，挫折的时候，有一帮人，也就是朋友，或者是一个国家，一个族群帮你。她叫国家，我们新中国联邦，我们有了大家这个人群。
 
-据通讯社报道，当一支抗议新冠防疫限制、所谓的法国“自由车队”经过巴黎市中心的警察检查站时，凯旋门周围的交通陷入停顿。驾车者挥舞着法国国旗并且鸣笛，无视警察不得进入城区的命令。后来，警方用催泪瓦斯驱散了这场未经批准的示威。
+第三，我活着的时候，我有更多的人际关系，更多的机会和更多的认知，或者增加更多的知识。最后达到最高境界，共同的信仰，那就是我们现在干的事情。
 
-根据法国内政部数据，周六有3.21万名示威者参加了在法国各地举行的反新冠防疫措施的集会，这些集会是得到批准的，其中包括在巴黎的近7600人。
+以上的几条哪个国家能够给你？哪个国家不是要你50%，70%的税？新中国联邦拿你一分钱税了吗？
 
-目前距离4月10日开始的法国总统大选还有几周时间，政府正试图阻止抗议活动的蔓延。
+你在危难的时候，哪个国家会帮你啊？所谓的保险，警察帮你？现在警察会帮你吗？你觉得你的保险还管用吗？都给你剥夺了！
 
-信息来源：[“自由车队”抗议延烧至法国 近百人巴黎被捕](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
+还有，当你在感情上，各方面，最需要人帮忙的时候，你觉得国家会帮到你吗？没有这个可能，（中共）不把你锁上了24年链子不错了。只有我们新中国联邦，还让你无苗，还让你有币。你觉得还有比咱更伟大的组织了吗？
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+我不认为任何共产主义描绘的乌托邦和各个宗教描绘的所谓的天堂比我们新中国联邦再好。这就是我们今天一定要珍惜的。咱咋会不高兴呢？ 咱怎么不每天感恩呢？
+
+看看世界经济这个德性，只有咱们好。盖特只会赚钱，不会赔钱。GTV是控股公司，只能是越来越值钱。每1秒钟，咱在家睡觉，天天双修，咱都挣钱。只要你有GTV，有人给你挣钱啊。
+
+GTV拥有盖特和喜联储的股票。你拥有Gclub。你告诉我，你有什么损失？你未来只赚不赔呀！
+
+Gnews你有什么输的啊？你直播有什么损失的？只能是增加（财富），是吧？
+
+资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
+
+*发布：玉米地守望者*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
