--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,41 +1,32 @@
 ---
-title: 超过13万名俄罗斯军队目前在乌克兰境外驻扎
+title: 2月13日大直播后记：冬奥会运动员等于爆料革命侦察员
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002649/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002676/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-197.jpg)
-图片来源：网络截图
+整理：枫叶红了、Lucy Liu
+编辑：小红帽
 
-据美联社华盛顿2月13日报道，乌克兰总统沃洛基米尔·泽伦斯基（Volodymyr Zelenskyy）与总统乔·拜登（Joe Biden）交谈了大约一个小时，坚持认为乌克兰人已将国家置于 “安全和可靠的保护之下”，以防止强大的俄罗斯军队的攻击的恐惧。白宫越来越直言不讳地表示，它担心俄罗斯将在未来几天内制造一个事件，为入侵乌克兰创造一个虚假的借口。双方都同意继续推进威慑和外交手段，试图阻止令人担忧的俄罗斯军事进攻。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜农场设计组（614）
 
-据匿名知情人士称，美国和欧洲最近几天的情报发现越来越引发了人们的担忧，即俄罗斯可能试图以定于周二在乌克兰东部举行的乌克兰军事演习为目标，发起这样一个 “假旗行动”。美国情报官员认为，将军事演习作为目标只是俄罗斯权衡的多种选择的可能性之一，来执行“假旗行动”。白宫强调，他们并不确切地知道普京总统是否已经做出发动入侵的最终决定。
 
-莫斯科的部队正在乌克兰的北部、东部和南部集结，克里姆林宫坚持认为这是军事演习。一位不愿透露姓名的美国官员更新了拜登政府对目前在乌克兰边境附近驻扎的俄罗斯军队数量的估计，从美国前几周公开引用的10多万人增加到13万人。
+兄弟姐妹，你看到今天，所有爆料革命的战友们，你想想北京冬奥会带给我们的启示。
 
-俄罗斯人已经部署了导弹、空军、海军和特种作战部队，以及维持入侵的物资。本周，俄罗斯将六艘两栖攻击舰驶入黑海，增强了其在海岸登陆的能力。普京否认有任何攻击乌克兰的意图，俄罗斯正在要求西方将前苏联国家排除在北约之外。它还希望北约不要在其边境附近部署武器，并从东欧缩减联盟部队，这些要求被西方断然拒绝。
+共产党几乎霸占了全世界，污染了全世界所有的国际组织。而且北京冬奥会就是对全世界和人类一场最大的耻辱。我不相信国际奥林匹克组织还有未来。你知道这冬奥会还没结束呢，一旦开打，中共打台湾，国内再暴乱，世界经济俱下，所有的奥运会运动员回了国都被清算。没有一个运动员回来会说是英雄，一个都不会。你记住我的话！他们去冬奥会就是一生最大的错误。然后回来以后，他们一定是吐槽。任何人敢夸这个冬奥会，就是感觉再好，也不敢夸，夸就绝对死了。
 
-泽伦斯基一再淡化美国的警告，质疑美国官员最近几天越来越强烈的声明，即俄罗斯可能在本周中就计划入侵。他在周六的广播中说，“如果你或其他人有更多关于16日开始的100%俄罗斯入侵的信息，请把这些信息转发给我们。”尽管泽伦斯基敦促不要出现他担心的会破坏乌克兰经济的恐慌，他和他的文职和军事领导人也在准备防御，争取并接受来自美国和其他北约成员国的武器输入。但是乌克兰的一些人表示不相信普京真的会派军队辗转进入该国。
+那只有骂！骂就往死的骂，这个传播的力量有多大呀？共产党给他做这锅饭做得多好啊。这还要咱爆料吗？这有人就爆料了啊。所有去北京的运动员都等于咱爆料革命派去的侦察员。运动员回来以后，讲述亲身经历。这一天，骂共产党的这力量得有多大呀？想停都停不下来了。
 
-美国基本上没有公开它所说的关于俄罗斯可能的计划或时机的最具体警告所依据的证据。美国国家安全顾问杰克·沙利文（Jake Sullivan）周日就美国的警告告诉美国有线电视新闻网（CNN）说美国不会给俄罗斯机会在乌克兰搞一个惊喜。他说：“我们将确保我们以尽可能透明和明确的方式向世界说明我们所看到的情况。”
+所以那时候我说，我希望冬奥会开成。你们不知道我的意思，我希望它开成。 昨天晚上，咱国内的一个战友在冬奥会现场的时候说，“文贵你太高了，当时你说这个的时候，我真的受不了。怎么能希望它搞成呢？我们就希望它个王八蛋炸了才好呢。”他说，“现在我真明白了，这搞成比炸了还管用。我在那儿感受到了愤怒、骂辱和愤恨。”他说，“这些人离开以后，永远是共产党的敌人，终生不会有任何改变，没有改变的机会。”
 
-荷兰航空公司KLM已经取消了飞往乌克兰的航班。乌克兰包机航空公司（SkyUp）周日也将其从葡萄牙马德拉岛飞往基辅的航班被改道至摩尔多瓦首都。乌克兰的空中交通安全机构（Ukraerorukh）发表声明，宣布黑海上空的空域为 “潜在危险区”，并建议飞机避免在2月14日至19日飞过该海域。
+然后，大家记住北京2008届奥运会参与的204个国家，现在实际就是3个国家。严格讲3个国家都不算，就算1个国家。
 
-在普京和法国总统马克龙当天早些时候的通话之后，普京和拜登在一个关键时刻进行了一个多小时的谈话，这已经成为冷战以来俄罗斯和西方之间最大的安全危机，但白宫没有暗示这次通话削弱了欧洲即将发生战争的威胁，并认为他们只有几天时间来防止乌克兰发生入侵和巨大的流血事件。
+发布：tianzhihuan
 
-德国总理奥拉夫·肖尔茨（Olaf Scholz）将于周一飞往基辅与泽伦斯基会面，周二飞往莫斯科与普京会面。
-
-虽然美国和北约已经明确表示，他们不打算派兵到乌克兰与俄罗斯作战，但任何入侵以及由此产生的美国和其他国家承诺的惩罚性制裁都可能俄罗斯之外产生巨大反响，影响能源供应、全球市场和欧洲的权力平衡。
-
-美国正在从其驻基辅的大使馆抽调大部分工作人员，并敦促所有美国公民立即离开乌克兰。英国与其他欧洲国家一起，告诉其公民离开。
-
-拜登加强了美国在欧洲的军事存在，作为对北约东翼盟友的保证。在向波兰增派3000名士兵之前，还有1700名士兵正在前往波兰的途中。美国陆军还将把1000名士兵从德国转移到罗马尼亚，罗马尼亚与波兰一样与乌克兰接壤。
-
-自2014年以来，俄罗斯和乌克兰一直处于激烈的冲突之中，当时乌克兰的克里姆林宫友好领导人被民众起义赶下台。莫斯科的回应是吞并克里米亚半岛，然后支持乌克兰东部的分离主义叛乱，那里的战斗已造成超过14,000人死亡。
-
-由法国和德国斡旋的2015年和平协议帮助停止了大规模的战斗，但定期的小规模冲突仍在继续，达成政治解决方案的努力也陷入停滞。
-
-新闻来源：[US: Over 130,000 Russian troops now staged outside Ukraine](https://apnews.com/article/russia-ukraine-joe-biden-russia-europe-moscow-dce9b30db290a6e82f5aaa0f35a3125a)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
