--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,68 +1,31 @@
 ---
-title: 锁链性奴李莹是中共驭民五术的受害人
+title: 卡车司机抗议传导至法国 警方强行驱离
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2002575/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002654/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-5-768x103-28.jpg)
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1384.png)[图片来源](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
+受到加拿大卡车司机抗议的启发，不少法国反疫苗强制政策的示威者也从各地开车来到巴黎。最终警方使用催泪瓦斯驱散了这场抗议活动。对于近百名示威者来说，2月12日的集会以被逮捕告终。
 
-作者：纽约香草山 医疗部 信望爱
+法国巴黎警方的一份声明表示，在周六的抗议活动中，有97人被逮捕，还发出了513份警告。警方在推特上宣布，周日部署了大量警员，用来封锁“自由车队”。据悉，从周五（2月11日）到周一这段时间，当局动员了大约7500名警察，此外还部署了装甲车和水炮。
 
+法国当局称，那些违反规定的人有可能被判处两年监禁，罚款4500欧元，并被吊销驾驶执照。
 
+最近几日，来自法国各地的数千名示威者开着汽车、露营车、面包车等来到巴黎周边，加入抗议车队。参与者中有反对需要出示疫苗接种证明的人、有“黄马甲”运动的支持者，也有其他反对政府措施的人士。
 
+法国当局禁止了计划中的抗议活动。尽管如此，示威者还是在本周六下午设法进入了香榭丽舍中央大道，除步行者外，也有一百多辆汽车。
 
+据通讯社报道，当一支抗议新冠防疫限制、所谓的法国“自由车队”经过巴黎市中心的警察检查站时，凯旋门周围的交通陷入停顿。驾车者挥舞着法国国旗并且鸣笛，无视警察不得进入城区的命令。后来，警方用催泪瓦斯驱散了这场未经批准的示威。
 
-拐卖人口是中共犯罪集团统治下的一条地下产业链，它与中共犯罪集团的活摘器官移植产业链、集中营监狱工厂产业链等一样规模巨大。中共以种种理由为借口，管不了、不想管、不愿管。更有甚者，中共在立法上变相保护拐卖人口作案者。中共还帮助拐卖人口的犯罪者掩盖真相，使其发展规模越来越大。以至全中共国的妇女儿童有上千万人被拐卖，使上千万家庭，在无限悲痛和思念中家破人亡，而不得团聚。这是当今世界，中共专制之下最黑暗的乱象之一。
+根据法国内政部数据，周六有3.21万名示威者参加了在法国各地举行的反新冠防疫措施的集会，这些集会是得到批准的，其中包括在巴黎的近7600人。
 
-2月5日文贵先生盖文：在中共国生存的女人，连20只癞蛤蟆的价值都不如…不只是今天，也不只是昨天，是一直以来都这样。我们都是女人生的，在这样的国家还有自信，还有人权？还有希望吗？
+目前距离4月10日开始的法国总统大选还有几周时间，政府正试图阻止抗议活动的蔓延。
 
-中共为了强拆和维稳，可以动用成千上万的防暴警察和武装警察，年维稳费用超过军费。但在中共专制统治下，拐卖妇女儿童却是普遍现象。中共任其存在的根本原因，是中共铁幕统治十四亿中国人民，驭民五术基本国策的需要。中共沿用二千多年前的暴秦《商君书》之驭民五术：
+信息来源：[“自由车队”抗议延烧至法国 近百人巴黎被捕](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
 
-1、壹民：统一思想。
-
-2、弱民：国强民弱，治国之道，务在弱民。
-
-3、疲民：为民寻事，疲于奔命，使民无瑕顾及他事。
-
-4、辱民：一是无自尊自信；二是唆之相互检举揭发，终日生活于恐惧氛围中。
-
-5、贫民：除了生活必须，剥夺余银余财（即通货膨胀或狂印钞票）；人穷志短。
-
-五者若不灵，杀之。
-
-2/11/2022 文贵直播：发生锁链女事件的徐州，是中共国最信有神论的地方之一， 有祭坛、并涉及中共高层领导。锁链女事件是全党作案，涉及中共三代领导班子，并充斥着迷信和欺骗，中共的一切都是假和骗。
-
-锁链女李莹，12岁时被从四川南充，拐卖至江苏徐州丰县二十四年，成为带锁链的性奴，生有8个孩子，精神失常。中共犯罪集团是首犯。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2022-02-12.17.52.010-信望愛.jpg)
-
-锁链女李莹，原来是援藏党员干部、转业军人李大忠的独生女。给中共卖命的人，家人一样受到这种待遇……让所有党政军的基层公务员都看看，跟着中国共产党的悲惨下场。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2022-02-12.17.39.000-信望愛.jpg)
-
-毫无规则的猎杀同类，是中共犯罪集团统治下，社会的最显著乱象，这是动物世界都不曾有过的现象。中共统治下的基层党、政、军，许多人都是中共种族灭绝反人类犯罪集团、无恶不作的维稳打手。他们是中共奴役人民所必须依靠的工具，中共用完后一定会抛弃和残害。在中共专制之下，基层党政军与人民群众是血肉相连，却又互杀互害。中共运作驭民五术之狠毒恶，前无古人后无来者，天下最恶无出其右。
-
-面对万恶中共犯罪集团作恶的历史和现实，呼吁中共基层的党、政、军、警、宪、特们，请您在中共维稳及作恶的指令下，将枪口抬高一寸。保护人民就是保护自己，对人民犯罪作恶者就是罪犯，必然要承担刑事责任，并遭到上天的惩罚。中共犯罪集团也会杀人灭口，以逃脱可能被惩罚的罪责。
-
-中共基层党、政、军、警、宪、特们，您在面对中共犯罪集团的邪恶指令时，躺平即是灭共。请您带着家人、朋友、邻居、同事、下属、和广大群众，以各种方式翻越网络防火墙，来到言论自由讲真相的盖特、G-TV 、GNEWS。在这些自由媒体平台，您可了解到中共百年罪恶的真相。您可加入文贵先生领导的爆料革命新中国联邦，传播爆料革命真相。脱共、弃共、灭共，保命、保财、保妻儿、保未来。十四亿中国人民只有灭掉中国共产党，才能拥有由一人一票选举出来的自由民主宪政的新中国联邦政府！
-
-(本文为作者观点，不代表G NEWS立场)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-27.jpg)
-
-校对/编辑/发稿：云豹
-
-**更多信息，更多关注**
-
-[**纽约香草山农场**** GTV****–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场**** GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场**** Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
