--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,31 +1,32 @@
 ---
-title: 乌克兰总统邀请美国拜登总统前往基辅稳定局势
+title: 2月13日大直播后记：冬奥会运动员等于爆料革命侦察员
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2002609/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002676/)
 
-翻译：冰糖葫芦喵
+整理：枫叶红了、Lucy Liu
+编辑：小红帽
 
-编辑与校对：灭共文明
-
-据Just The News 2月13日报道，**乌克兰总统弗拉基米尔·泽伦斯基(Volodymyr zelensky)办公室宣布，他邀请美国总统拜登(Joe Biden)很快访问基辅，以帮助缓和该地区的紧张局势。**
-
-周六，拜登与泽伦斯基已经电话，当时俄罗斯已经在边境集结了大约10万名士兵。乌克兰领导人寻求在未来48小时内与俄罗斯当局会面，但BBC报道称，乌克兰官员表示，俄罗斯总统弗拉基米尔·普京迄今未理会会面请求。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰总统-e1644813759192.jpg)图片来源：美联社。
-**泽伦斯基指出，乌克兰感受到了拜登和其他盟国的支持。他还说:“我们希望，在其他方面合作，这将有助于防止恐慌的蔓延。”**
-
-乌克兰还赞扬美国为加强乌克兰武装部队作出的贡献。泽伦斯基说:“我们还不是北约成员国。因此，只有一支强大的乌克兰军队才是我们国家安全的关键。
-
-乌克兰总统办公室总结道:“弗拉基米尔·泽伦斯基感谢拜登总统的支持，并邀请他访问乌克兰。**泽伦斯基说：“我相信，你在未来几天抵达基辅对稳定局势至关重要，这将是一个强有力的信号，有助于缓和紧张局势。”**
-
-据报道称，白宫在与泽伦斯基通话的声明中没有提到邀请基辅事宜。
-
-上周晚些时候，拜登政府指示在乌克兰的美国公民“立即撤离”，并表示，一旦俄罗斯入侵，美国军方将无法疏散乌克兰公民。
-
-新闻链接：
-
-[Ukrainian president invites Joe Biden to Kyiv to stabilize the situation | Just The News](https://justthenews.com/government/white-house/ukrainian-president-invites-joe-biden-kyiv-stabilize-situation)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜农场设计组（614）
 
 
+兄弟姐妹，你看到今天，所有爆料革命的战友们，你想想北京冬奥会带给我们的启示。
+
+共产党几乎霸占了全世界，污染了全世界所有的国际组织。而且北京冬奥会就是对全世界和人类一场最大的耻辱。我不相信国际奥林匹克组织还有未来。你知道这冬奥会还没结束呢，一旦开打，中共打台湾，国内再暴乱，世界经济俱下，所有的奥运会运动员回了国都被清算。没有一个运动员回来会说是英雄，一个都不会。你记住我的话！他们去冬奥会就是一生最大的错误。然后回来以后，他们一定是吐槽。任何人敢夸这个冬奥会，就是感觉再好，也不敢夸，夸就绝对死了。
+
+那只有骂！骂就往死的骂，这个传播的力量有多大呀？共产党给他做这锅饭做得多好啊。这还要咱爆料吗？这有人就爆料了啊。所有去北京的运动员都等于咱爆料革命派去的侦察员。运动员回来以后，讲述亲身经历。这一天，骂共产党的这力量得有多大呀？想停都停不下来了。
+
+所以那时候我说，我希望冬奥会开成。你们不知道我的意思，我希望它开成。 昨天晚上，咱国内的一个战友在冬奥会现场的时候说，“文贵你太高了，当时你说这个的时候，我真的受不了。怎么能希望它搞成呢？我们就希望它个王八蛋炸了才好呢。”他说，“现在我真明白了，这搞成比炸了还管用。我在那儿感受到了愤怒、骂辱和愤恨。”他说，“这些人离开以后，永远是共产党的敌人，终生不会有任何改变，没有改变的机会。”
+
+然后，大家记住北京2008届奥运会参与的204个国家，现在实际就是3个国家。严格讲3个国家都不算，就算1个国家。
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
