--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,22 +1,37 @@
 ---
-title: 灭共几乎是人类上万年来最难的一件事
+title: 新中国联邦人走向愉悦健康安全的未来
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002576/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2002674/)
 
-我们现在所干的事情是几乎是人类上。地球上物理上不可能的事，但是真的，拜万佛万神所赐，我们真的是接近完成。
+作者：纽约香草山农教育部 – Jack Li文阳
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+世界政治经济局势跌宕起伏，病毒和疫苗危机还没完，地缘政治危机一触即发。2月13日， 郭文贵先生在大直播中谈及世界经济的变化和走向时，再次分析喜币和Hpay未来的价值。
 
-**【郭先生直播摘要】**** 2022.2.9 ****灭共几乎是人类上万年来最难的一件****事**
+文贵先生清楚表明，现在世界的经济脉络，在三条线上：第一是科技文明发展，创意；第二是物流。人类的98%是在陆地上住的，不可能有任何交通工具代替货车。第三，是人与人之间直接的货币流通。就像HPAY这样的发展趋势，无人能挡。文贵先生还说，不会超过三次直播，你会看到世界一切都变了。你们就不知道，你们在跟我一起经历人类的巨变。
 
-**郭先生：**
+喜币和Hpay最厉害的设计，在4个方面：第一，过去银行存钱，银行会增发，而喜币和Hpay不会增发。第二，原有的银行有不兑现的权利。喜币和Hpay绝不可能不兑现。第三，银行只是一个支付的中介，是第三方。我们喜币和Hpay是从A到B，喜联储不能控制，没有第三方。第四，它没成本。HPAY没有成本，没有第三方，绝对原值，不可增发。哪家银行不增发呢？喜币一年就发行10亿个，多一个都是犯罪。只有喜币，上市之初，告诉你发行多少个。场外交易都是机构拿走，当做筹码做其他事情。
 
-灭共几乎是人类上，万年来最难的一件事。大家千万别把他想的想当然，或者必然，或者容易那都是犯了极端错误。那就连就犯了共同同样的错误啊。就是灭共，我们也不是说对任何人的责任，也不是我们的保证，也不是我们必须做的事。但是我们必须灭掉共产党，啊灭掉共产党。
+说到场外交易，文贵先生就说，刚才草根小哥爆料，喜币在场外交易，60块都买不着。但是在场内，喜币被压低到了40美金。文贵先生说，据他所知，场外交易有好几笔都在200左右交易的。这几天场外和场内的价格差距，是因为基金在用2亿个币，引诱卖家去抛，你一抛他们就买了。这多简单的逻辑啊。你在场外60块, 80块能买的着吗？就你聪明，在场内30, 40能买着？人家二级市场买卖，你管不着啊。世界上没有价格操纵的，就是喜币。
 
-现在从这事怎么有利益灭共产党，大家一定要想智慧的灭共产党。我们现在又想灭的是全人类最大的个坏蛋共产党。而且人家都觉得是不可能的，再不可能就咱还没有军队，咱没有任何组织。啊还不流血，你去想想这几乎是，你可以纵观人类历史万年来啊，地球到这百万亿年来的这么这一个，一个地球和银河系，没有人说过。说不流血要改变一个这么大的流氓组织，黑社会组织想都没想过。
+文贵先生说，现在卖币的人，你后悔，早着呢。很多战友场外60,  65, 70块卖了，哭都没地方哭去，不会超过三个月。大家关注三个条件，国家主权认可，大额投资，HPAY全面使用。世界经济在崩塌的时候，HPAY，喜币，躺平币。文贵先生忠告国内的战友们，一定要记住，使用即金钱。
 
-不是说想都没想过，释迦牟尼也没这么说过，阿拉也没这么说过，耶稣也没这么说过天主也没这么说过，没有人这么说过啊。我们在我们中国的老天爷啊，啊是不天皇啊玉皇大帝都没这么说过。是我们现在所干的事情是几乎是人类上，地球上物理上不可能的事，但是真的拜万佛万神所思，我们真的是在，接近完成，而且一定会完成那消灭这个过程。
+文贵先生鼓励战友多用Hpay, 有人打赏喜币，跟战友间用Hpay 支付医疗费用，当然可以，可以增加交易，鼓励战友们这么做。
 
-视频剪辑：文知 | 听写，翻译：Latin | 校对 : tonyj | 视频制作+字幕：芥末 |编辑&发布：断播
+文贵先生总结道，我们新中国联邦在做的事。第一，无苗族有多伟大？无苗有币族多么美好？财富是人走向愉悦健康安全必经的工具。第二，当你遇到困难挫折的时候，有一个族群帮你。第三，活着的时候，有更多的人际关系、机会，认知，最后达到共同的信仰，就是我们现在在干的事情。以上这几条，有哪个国家能给你？只有我们新中国联邦。
 
+参考链接： [2022年2月13日文贵先生直播大雨围城速记](https://gnews.org/zh-hans/2001364/)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二月小图.tif)
+
+审核/编辑/发稿：谐趣园
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
