--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,33 +1,23 @@
 ---
-title: 大直播后记：没有比新中国联邦更伟大的组织
+title: 大直播后记：中共突破人类底线，生存和互害模式
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002692/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002810/)
 
-#### 整理：清水冷香、Lucy Liu
+#### 整理：枫叶红了、Lucy Liu  
 编辑：小红帽
 
 - ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1386.png)图片来源：雅典娜农场设计组
 
 
-第一，我们作为海外华人，作为一个人类，你的钱，能给你提供财富的保证，让你生存下去。财富，是人类走向快乐，愉悦，安全，健康必须的工具。全世界都在偷你的钱，只有新中国联邦让你有钱。
+这是七哥当年最牛叉的盘古大观。在整个现场，娘娘庙龙卷风。七哥，唯我独尊，到今天都是。短短的十几年，龙头变成了龟头，还缺两个睾丸。哎，我叫路森借你睾丸用用吧，放那儿去了？共产党现在光搞龟头没搞完呢，没有力量啊。双修不成啊。所以他现在都全都是事啊。
 
-第二，当你遇到困难，挫折的时候，有一帮人，也就是朋友，或者是一个国家，一个族群帮你。她叫国家，我们新中国联邦，我们有了大家这个人群。
+从医学角度来讲，文紫，它是不吉利吧？你说你那个龟头在那块儿没有睾丸，他能发挥力量吗？发挥不了啊，是吧？ 他肯定发挥不了。现在所有的人，运动员都在讲述盘古的故事。昨天晚上咱那个哥们跟我说，你知道吗，你嫂子，你说她有多疯狂？跟每个外国运动员都说，你知道盘古那楼为啥成这样吗？我说，不知道啊，咋回事啊？她说，我告诉你这个故事。最后你嫂子就懒得发了。她说，在手机里边，我发给你，就发给人家外国运动员—龙头变龟头成了传奇的故事。
 
-第三，我活着的时候，我有更多的人际关系，更多的机会和更多的认知，或者增加更多的知识。最后达到最高境界，共同的信仰，那就是我们现在干的事情。
+兄弟姐妹们，我不是跟你们开玩笑的。你们想过七哥说过的话吗？你也把这个龙头给变成龟头。这件事情的影响力大到什么程度？你这个无神论的党，而且在奥运会开幕前，所谓的北京冬奥会前。北京开冬奥会真的像高冰尘要当鸭子一样，是吧？ 绝对没人相信的事儿。想想这个多可怕，所有的人问共产党在干什么？
 
-以上的几条哪个国家能够给你？哪个国家不是要你50%，70%的税？新中国联邦拿你一分钱税了吗？
+另外，共产党腐败全世界的组织。奥林匹克结束龙头变龟头的这种故事。没有雪的雪上运动。大家还看到了什么？共产党说，当时穿着大裤衩的路，北京的高科技，北京的基础设施，600多道菜。现在最被人诟病的就是你这个基础设施全是假的，什么狗屁高科技，连WiFi都搞不定。而且，所有的饭难吃到极点。昨天晚上日本的跟我开会的那个姐妹跟我说，我们运动员现在在中国真正的感受到，这个国家没有任何未来，全都是假的。你能想像的，改年龄，买通外国人碰瓷，买通裁判。中共用这个假检测，把人家干掉。几乎人类最损最烂的招让中共用尽用绝了。胡锦涛当年说过一句精彩的话，他说：“你看看全世界的文明，再看看我们这些年，工业文明之后世界的发展。只有中国人到了一个突破人类底线，生存和人类互害的模式，再这样下去就完了！”
 
-你在危难的时候，哪个国家会帮你啊？所谓的保险，警察帮你？现在警察会帮你吗？你觉得你的保险还管用吗？都给你剥夺了！
-
-还有，当你在感情上，各方面，最需要人帮忙的时候，你觉得国家会帮到你吗？没有这个可能，（中共）不把你锁上了24年链子不错了。只有我们新中国联邦，还让你无苗，还让你有币。你觉得还有比咱更伟大的组织了吗？
-
-我不认为任何共产主义描绘的乌托邦和各个宗教描绘的所谓的天堂比我们新中国联邦再好。这就是我们今天一定要珍惜的。咱咋会不高兴呢？ 咱怎么不每天感恩呢？
-
-看看世界经济这个德性，只有咱们好。盖特只会赚钱，不会赔钱。GTV是控股公司，只能是越来越值钱。每1秒钟，咱在家睡觉，天天双修，咱都挣钱。只要你有GTV，有人给你挣钱啊。
-
-GTV拥有盖特和喜联储的股票。你拥有Gclub。你告诉我，你有什么损失？你未来只赚不赔呀！
-
-Gnews你有什么输的啊？你直播有什么损失的？只能是增加（财富），是吧？
+这就是当时江泽民所谓的要以德治国，后来到了胡锦涛之后，叫和谐社会，所以咱都和谐不了。人跟人之间，跟人跟畜生之间弄得都想把对方给吃了。狗都不如，狗吃屎，你比屎可怕，你比吃屎的狗都可怕。所以胡锦涛提出来和谐社会。再一个，就是发展科学生产力。科技治国。然后，胡锦涛说，咱别跟全世界斗了，咱连韩国都斗不了。人家有三星，咱有啥呀？这是胡锦涛的原话。一个韩国咱都搞不了，还搞日本。这胡锦涛说，你可以恨日本。你搞日本，（人家）日本人一天在工作上的专注时间，人家日本人在工作上专注的效率是中国人的10倍。这是什么意思？日本人工作是要效率的，专注的，是要有结果的。
 
 资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
 
