--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,32 +1,24 @@
 ---
-title: 2月13日大直播后记：冬奥会运动员等于爆料革命侦察员
+title: 曼尼托巴省将解除大部分疫情封锁
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002676/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2002799/)
 
-整理：枫叶红了、Lucy Liu
-编辑：小红帽
+采编：Spirit                  编辑撰稿：硫酸羟氯喹64
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜农场设计组（614）
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/AFP_9YW7DF_90287036-scaled-2.jpg)https://nationalpos
 
 
-兄弟姐妹，你看到今天，所有爆料革命的战友们，你想想北京冬奥会带给我们的启示。
+据加拿大【CTV新闻】2月11日报道，曼尼托巴省当天宣布将放宽该省的公共卫生限制令，并计划在3月15日之前取消“新冠病毒”疫苗接种要求证明和配戴口罩规定。该计划第一阶段将于2月15日开始。
 
-共产党几乎霸占了全世界，污染了全世界所有的国际组织。而且北京冬奥会就是对全世界和人类一场最大的耻辱。我不相信国际奥林匹克组织还有未来。你知道这冬奥会还没结束呢，一旦开打，中共打台湾，国内再暴乱，世界经济俱下，所有的奥运会运动员回了国都被清算。没有一个运动员回来会说是英雄，一个都不会。你记住我的话！他们去冬奥会就是一生最大的错误。然后回来以后，他们一定是吐槽。任何人敢夸这个冬奥会，就是感觉再好，也不敢夸，夸就绝对死了。
+报道称，曼省政府还发布了取消疫苗护照的地点和时间表，并将在3月1日前解除所有防疫限制措施。而对于在医院等特殊护理环境中的卫生规定，公共卫生部门将继续与其合作，直至3月8日后完全取消为止。
 
-那只有骂！骂就往死的骂，这个传播的力量有多大呀？共产党给他做这锅饭做得多好啊。这还要咱爆料吗？这有人就爆料了啊。所有去北京的运动员都等于咱爆料革命派去的侦察员。运动员回来以后，讲述亲身经历。这一天，骂共产党的这力量得有多大呀？想停都停不下来了。
+据悉，尽管曼省省长宣称所有的解除令均在自由车队抗议之前就开始筹备，但加拿大卡车司机的持续示威行动已导致包括曼尼托巴等数个省份乃至多数西方国家开始计划停止疫苗护照并采取类似的解封政策。
 
-所以那时候我说，我希望冬奥会开成。你们不知道我的意思，我希望它开成。 昨天晚上，咱国内的一个战友在冬奥会现场的时候说，“文贵你太高了，当时你说这个的时候，我真的受不了。怎么能希望它搞成呢？我们就希望它个王八蛋炸了才好呢。”他说，“现在我真明白了，这搞成比炸了还管用。我在那儿感受到了愤怒、骂辱和愤恨。”他说，“这些人离开以后，永远是共产党的敌人，终生不会有任何改变，没有改变的机会。”
+校对编辑：硫酸羟氯喹64
 
-然后，大家记住北京2008届奥运会参与的204个国家，现在实际就是3个国家。严格讲3个国家都不算，就算1个国家。
+发稿：文明(添草灭共)
 
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[原文链接](https://nationalpost.com/news/politics/ford-declares-state-of-emergency-promises-heavy-fines-for-truckers-in-ottawa-windsor/wcm/9f31360d-4413-4be4-99cb-bef2c26303f9/amp/)
 
  
 
