--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,35 +1,25 @@
 ---
-title: 大直播后记：中共突破人类底线，生存和互害模式
+title: 中共国将不允许“非必要”的旅行目的护照更新
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002810/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002993/)
 
-#### 整理：枫叶红了、Lucy Liu  
-编辑：小红帽
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-8.png)（图片源自本文链接）
+日文雅虎网站２月１４日消息：据12日路透社上海报道，-中共国国家移民局表示，将不允许人们为“非必要”的海外旅行护照更新。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1386.png)图片来源：雅典娜农场设计组
+中共国国家移民局解释说，不允许“非必要”的出国旅行护照更新，是因为新冠病毒的全球爆发仍然严重，跨境旅行会构成 “巨大的安全风险”。对研究、工作或商务目的个人旅行者”会正常发放”。
 
+中共国国家移民局否认了传言中的“会批准旅游目的护照更新”之说，称其为假消息。
 
-这是七哥当年最牛叉的盘古大观。在整个现场，娘娘庙龙卷风。七哥，唯我独尊，到今天都是。短短的十几年，龙头变成了龟头，还缺两个睾丸。哎，我叫路森借你睾丸用用吧，放那儿去了？共产党现在光搞龟头没搞完呢，没有力量啊。双修不成啊。所以他现在都全都是事啊。
+中共国以防控中共病毒（新冠病毒Covid-19）为由，加强了对其公民的海外旅行的限制。已暂停向希望在非紧急情况下旅行的个人发放新的普通护照。
 
-从医学角度来讲，文紫，它是不吉利吧？你说你那个龟头在那块儿没有睾丸，他能发挥力量吗？发挥不了啊，是吧？ 他肯定发挥不了。现在所有的人，运动员都在讲述盘古的故事。昨天晚上咱那个哥们跟我说，你知道吗，你嫂子，你说她有多疯狂？跟每个外国运动员都说，你知道盘古那楼为啥成这样吗？我说，不知道啊，咋回事啊？她说，我告诉你这个故事。最后你嫂子就懒得发了。她说，在手机里边，我发给你，就发给人家外国运动员—龙头变龟头成了传奇的故事。
+笔者认为，这一规定既给盗国贼及其家人子女，甚至私生子女开辟了蹊径，又堵住了普通百姓的出国之门！因为，在中共国，你的出国是否“非必要”，由党决定。老百姓出国将越来越难!
 
-兄弟姐妹们，我不是跟你们开玩笑的。你们想过七哥说过的话吗？你也把这个龙头给变成龟头。这件事情的影响力大到什么程度？你这个无神论的党，而且在奥运会开幕前，所谓的北京冬奥会前。北京开冬奥会真的像高冰尘要当鸭子一样，是吧？ 绝对没人相信的事儿。想想这个多可怕，所有的人问共产党在干什么？
+信息来源：[中国、不要不急の渡航目的でパスポート更新認めず（ロイター） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/ec4fdd9988b7f1addeecd3f1203e50f7ddcab0de)
 
-另外，共产党腐败全世界的组织。奥林匹克结束龙头变龟头的这种故事。没有雪的雪上运动。大家还看到了什么？共产党说，当时穿着大裤衩的路，北京的高科技，北京的基础设施，600多道菜。现在最被人诟病的就是你这个基础设施全是假的，什么狗屁高科技，连WiFi都搞不定。而且，所有的饭难吃到极点。昨天晚上日本的跟我开会的那个姐妹跟我说，我们运动员现在在中国真正的感受到，这个国家没有任何未来，全都是假的。你能想像的，改年龄，买通外国人碰瓷，买通裁判。中共用这个假检测，把人家干掉。几乎人类最损最烂的招让中共用尽用绝了。胡锦涛当年说过一句精彩的话，他说：“你看看全世界的文明，再看看我们这些年，工业文明之后世界的发展。只有中国人到了一个突破人类底线，生存和人类互害的模式，再这样下去就完了！”
-
-这就是当时江泽民所谓的要以德治国，后来到了胡锦涛之后，叫和谐社会，所以咱都和谐不了。人跟人之间，跟人跟畜生之间弄得都想把对方给吃了。狗都不如，狗吃屎，你比屎可怕，你比吃屎的狗都可怕。所以胡锦涛提出来和谐社会。再一个，就是发展科学生产力。科技治国。然后，胡锦涛说，咱别跟全世界斗了，咱连韩国都斗不了。人家有三星，咱有啥呀？这是胡锦涛的原话。一个韩国咱都搞不了，还搞日本。这胡锦涛说，你可以恨日本。你搞日本，（人家）日本人一天在工作上的专注时间，人家日本人在工作上专注的效率是中国人的10倍。这是什么意思？日本人工作是要效率的，专注的，是要有结果的。
-
-资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
-
-*发布：玉米地守望者*
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
