--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,37 +1,33 @@
 ---
-title: 新中国联邦人走向愉悦健康安全的未来
+title: 2月13日大直播后记：中共突破人类底线，生存和互害模式
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2002674/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2002778/)
 
-作者：纽约香草山农教育部 – Jack Li文阳
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-世界政治经济局势跌宕起伏，病毒和疫苗危机还没完，地缘政治危机一触即发。2月13日， 郭文贵先生在大直播中谈及世界经济的变化和走向时，再次分析喜币和Hpay未来的价值。
+#### 整理：枫叶红了、Lucy Liu  
+编辑：小红帽
 
-文贵先生清楚表明，现在世界的经济脉络，在三条线上：第一是科技文明发展，创意；第二是物流。人类的98%是在陆地上住的，不可能有任何交通工具代替货车。第三，是人与人之间直接的货币流通。就像HPAY这样的发展趋势，无人能挡。文贵先生还说，不会超过三次直播，你会看到世界一切都变了。你们就不知道，你们在跟我一起经历人类的巨变。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/fengmian.jpg)图片来源：雅典娜农场设计组（614）
 
-喜币和Hpay最厉害的设计，在4个方面：第一，过去银行存钱，银行会增发，而喜币和Hpay不会增发。第二，原有的银行有不兑现的权利。喜币和Hpay绝不可能不兑现。第三，银行只是一个支付的中介，是第三方。我们喜币和Hpay是从A到B，喜联储不能控制，没有第三方。第四，它没成本。HPAY没有成本，没有第三方，绝对原值，不可增发。哪家银行不增发呢？喜币一年就发行10亿个，多一个都是犯罪。只有喜币，上市之初，告诉你发行多少个。场外交易都是机构拿走，当做筹码做其他事情。
 
-说到场外交易，文贵先生就说，刚才草根小哥爆料，喜币在场外交易，60块都买不着。但是在场内，喜币被压低到了40美金。文贵先生说，据他所知，场外交易有好几笔都在200左右交易的。这几天场外和场内的价格差距，是因为基金在用2亿个币，引诱卖家去抛，你一抛他们就买了。这多简单的逻辑啊。你在场外60块, 80块能买的着吗？就你聪明，在场内30, 40能买着？人家二级市场买卖，你管不着啊。世界上没有价格操纵的，就是喜币。
+这是七哥当年最牛叉的盘古大关。在整个现场，娘娘庙龙卷风。七哥，唯我独尊，到今天都是。短短的10几年，龙头变成了变成了龟头，还缺两个睾丸。哎，我叫路森借你睾丸用用吧，放那儿去了？共产党现在光搞龟头没搞完呢，没有力量啊。双修不成啊。所以他现在都全都事啊。
 
-文贵先生说，现在卖币的人，你后悔，早着呢。很多战友场外60,  65, 70块卖了，哭都没地方哭去，不会超过三个月。大家关注三个条件，国家主权认可，大额投资，HPAY全面使用。世界经济在崩塌的时候，HPAY，喜币，躺平币。文贵先生忠告国内的战友们，一定要记住，使用即金钱。
+从医学角度来讲，文紫，它是不吉利吧？你说你那个龟头在那块儿没有睾丸，他能发挥力量吗？发挥不了啊，是吧？ 他肯定发挥不了。现在所有的人，运动员都在讲述盘古的故事。昨天晚上咱那个哥们跟我说，你知道吗，你嫂子，你说她有多疯狂？跟每个外国运动员都说，你知道盘古那楼为啥成这样吗？我说，不知道啊，咋回事啊？她说，我告诉你这个故事。最后你嫂子就懒得烦了。她说，在手机里边，我发给你，就发给人家外国运动员—龙头变龟头成了传奇的故事。
 
-文贵先生鼓励战友多用Hpay, 有人打赏喜币，跟战友间用Hpay 支付医疗费用，当然可以，可以增加交易，鼓励战友们这么做。
+兄弟姐妹们，我不是跟你们开玩笑的。你们想过七哥说过的话吗？你也把这个龙头给变成龟头。这件事情的影响力大到什么程度？你这个无神论的党，而且在奥运会开幕前，所谓的北京冬奥会前。北京开冬奥会真的像高冰尘要当鸭子一样，是吧？ 绝对没人相信的事儿。想想这个多可怕，所有的人问共产党在干什么？
 
-文贵先生总结道，我们新中国联邦在做的事。第一，无苗族有多伟大？无苗有币族多么美好？财富是人走向愉悦健康安全必经的工具。第二，当你遇到困难挫折的时候，有一个族群帮你。第三，活着的时候，有更多的人际关系、机会，认知，最后达到共同的信仰，就是我们现在在干的事情。以上这几条，有哪个国家能给你？只有我们新中国联邦。
+另外，共产党腐败全世界的组织。奥林匹克结束龙头变龟头的这种故事。没有雪的雪上运动。大家还看到了什么？共产党说，当时穿着大裤衩的路，北京的高科技，北京的基础设施，600多道菜。现在最被人诟病的就是你这个基础设施全是假的，什么狗屁高科技，连WiFi都搞不定。而且，所有的饭难吃到极点。昨天晚上日本的跟我开会的那个姐妹跟我说，我们运动员现在在中国真正的感受到，这个国家没有任何未来，全都是假的。你能想像的，改年龄，买通外国人碰瓷，买通裁判。中共用这个假检测，把人家干掉。几乎人类最损最烂的招让中共用尽用绝了。胡锦涛当年说过一句精彩的话，他说：“你看看全世界的文明，再看看我们这些年，工业文明之后世界的发展。只有中国人到了一个突破人类底线，生存和人类互害的模式，再这样下去就完了！” 这就是当时江泽民所谓的要以德治国，后来到了胡锦涛之后，叫和谐社会，所以咱都和谐不了。人跟人之间，跟人跟畜生之间弄得都想把对方给吃了。狗都不如，狗吃屎，你比屎可怕，你比吃屎的狗都可怕。所以胡锦涛提出来和谐社会。再一个，就是发展科学生产力。科技治国。然后，胡锦涛说，咱别跟全世界斗了，咱连韩国都斗不了。人家有三星，咱有啥呀？这是胡锦涛的原话。一个韩国咱都搞不了，还搞日本。这胡锦涛说，你可以恨日本。你搞日本，（人家）日本人一天在工作上的专注时间，人家日本人在工作上专注的效率是中国人的10倍。这是什么意思？日本人工作是要效率的，专注的，是要有结果的。
 
-参考链接： [2022年2月13日文贵先生直播大雨围城速记](https://gnews.org/zh-hans/2001364/)
+*发布：Frank2021*
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二月小图.tif)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-审核/编辑/发稿：谐趣园
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
