--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,31 +1,43 @@
 ---
-title: 卡车司机抗议传导至法国 警方强行驱离
+title: 大直播后记：如何认识体育？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002654/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002707/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1384.png)[图片来源](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
-受到加拿大卡车司机抗议的启发，不少法国反疫苗强制政策的示威者也从各地开车来到巴黎。最终警方使用催泪瓦斯驱散了这场抗议活动。对于近百名示威者来说，2月12日的集会以被逮捕告终。
+#### **整理：Grace Fang、sadhu
+编辑：文泓**
 
-法国巴黎警方的一份声明表示，在周六的抗议活动中，有97人被逮捕，还发出了513份警告。警方在推特上宣布，周日部署了大量警员，用来封锁“自由车队”。据悉，从周五（2月11日）到周一这段时间，当局动员了大约7500名警察，此外还部署了装甲车和水炮。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1387.png)图片来源：墨尔本雅典娜农场设计组
 
-法国当局称，那些违反规定的人有可能被判处两年监禁，罚款4500欧元，并被吊销驾驶执照。
 
-最近几日，来自法国各地的数千名示威者开着汽车、露营车、面包车等来到巴黎周边，加入抗议车队。参与者中有反对需要出示疫苗接种证明的人、有“黄马甲”运动的支持者，也有其他反对政府措施的人士。
+我想说这次冬奥会里边，这个真的，你们没有任何人看到这个冬奥会里边（发生的一幕幕）对我们爆料革命有多好。就是我一看到冬奥会的信息，我就真的是想晃着走。过去，我看到男的走路怎么拧着屁股走，觉得很别扭啊。现在我都想拧着屁股走，觉得简直是幸福得不行不行的。
 
-法国当局禁止了计划中的抗议活动。尽管如此，示威者还是在本周六下午设法进入了香榭丽舍中央大道，除步行者外，也有一百多辆汽车。
+我觉得是老天真的帮我们，没有一件事儿不是这样，习太阳帮我们都干了，（而）我们想干很难，他都帮我们干了；还得感谢王岐山，包括这PAG太平联盟，包括这冬奥会，他整个的干这事儿，（宾馆）漏水啦，对（参赛）运动员的威胁啦，再有在一个选址上。现在全世界都在问一个问题，北京啥时候有滑雪的地方？所有看直播的，你们在北京哪儿滑过雪呢？你们啥时候滑过雪呢？你说中国雪最多的在东北长白山。那啥时候冰雪运动是中国人的主要运动的吗？何况冰雪运动在世界的体育界里边，它都是小项目。
 
-据通讯社报道，当一支抗议新冠防疫限制、所谓的法国“自由车队”经过巴黎市中心的警察检查站时，凯旋门周围的交通陷入停顿。驾车者挥舞着法国国旗并且鸣笛，无视警察不得进入城区的命令。后来，警方用催泪瓦斯驱散了这场未经批准的示威。
+再一个就是关于体育的问题，体育是什么呀？
+体育并不是说，让你把这作为一生奋斗的目标，体育可能是你一个生存方式，或者说表现自我的一个工具，或者是体现你的快乐和生活的一种方式。你像专业运动员，像人家海东兄弟、钊颖妹妹，那是他们的一个工具，不是信仰和目标，仅仅是他们的工具。
 
-根据法国内政部数据，周六有3.21万名示威者参加了在法国各地举行的反新冠防疫措施的集会，这些集会是得到批准的，其中包括在巴黎的近7600人。
+就像现在文紫跟她老公要双修一样。双修，这不是我们俩一辈子的目标啊，但是能我们俩快乐，双修也是夫妻的工具和体现方式。我不能指望这个赚钱啊，是吧？你不能说咱俩都不当医生了，也不工作了，就靠这吃饭了。那你双修两天累死了是吧，你吃啥呀？
 
-目前距离4月10日开始的法国总统大选还有几周时间，政府正试图阻止抗议活动的蔓延。
+体育是体现人生快乐生活的一种方式，或者说是人生生活的一种工具。职业运动员和非职业运动员，而西方绝大多数的运动员都是这样的。你像我们的约翰·亚当斯·摩根先生，人家是摩根士丹利的孙子，JP摩根先生的儿子，老人家应该92岁了吧。
 
-信息来源：[“自由车队”抗议延烧至法国 近百人巴黎被捕](https://www.dw.com/zh/%E8%87%AA%E7%94%B1%E8%BD%A6%E9%98%9F%E6%8A%97%E8%AE%AE%E5%BB%B6%E7%83%A7%E8%87%B3%E6%B3%95%E5%9B%BD-%E8%BF%91%E7%99%BE%E4%BA%BA%E5%B7%B4%E9%BB%8E%E8%A2%AB%E6%8D%95/a-60763022)
+他曾是1952年芬兰夏季奥运会世界帆船冠军。我问他，你干嘛划船去？我上人家里去，看到有2个大船的模型，当时就有100多米的船模型。我问王雁平，这船是啥意思？她也不懂。我说，咱大清朝的时候，那时候连战舰都没有，但人家玩了这两个世界级的蒸汽机游艇（模型），而且是一模一样造俩艘。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+所以说，摩根家族创造了金融系统，干掉了当时的——记住啊，罗斯柴尔德想来美国呢，就让摩根家族给干回去了。然后就是摩根士丹利当时在欧洲拿下半壁江山，还在亚洲拿下了大半江山。当时啊，最后一个末代皇帝溥仪，要把全博物馆的东西卖给摩根，多少钱呢？100万美元，全北京博物馆，100万美元啊。这是现在咱们摩尔根博物馆就在曼哈顿啊。大家记住，我们本来今年开年会，说实话想给你们个惊喜的，就是把摩根博物馆全租下来，在摩根博物馆给大家开年会，因为这个病毒是没法开。
+
+那还是摩根家族的，你看那里边儿所有的古董，所有的东西是他不对外展出的，只有咱们战友去了能让你们看。谁来曼哈顿你们都可以去看。
+
+啊，摩根先生都给我看。那个时候全北京、全中国博物馆100万美元卖给摩根，这个摩根没买，人家只要了一部分，你知道荒唐不荒唐。人家那时候就玩那个船了，人就玩那个古董了，人家孩子有钱就去玩票（帆船）奥运冠军。
+
+资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
+
+*发布：玉米地守望者*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
