--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,32 +1,43 @@
 ---
-title: 2022.2.13大直播后记：共产党渗透联合国
+title: 大直播后记：没有比新中国联邦更伟大的组织
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002627/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002692/)
 
-**整理：枫叶红了、Lucy Liu
-编辑：Candy**
+#### 整理：清水冷香、Lucy Liu
+编辑：小红帽
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/联合国-1.png)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1386.png)图片来源：雅典娜农场设计组
 
 
-你看共产党到联合国干的事，任何只要共产党过去30年、50年掺和了组织，没有一个不是无法无天，无规则、不腐败的。
+第一，我们作为海外华人，作为一个人类，你的钱，能给你提供财富的保证，让你生存下去。财富，是人类走向快乐，愉悦，安全，健康必须的工具。全世界都在偷你的钱，只有新中国联邦让你有钱。
 
-北京冬奥会简直是世界上最荒唐、没有雪的冬奥会。在没有雪的城市开冬奥会，我R他8辈祖宗！这是对全人类的侮辱，西方世界必须要付出的代价。
+第二，当你遇到困难，挫折的时候，有一帮人，也就是朋友，或者是一个国家，一个族群帮你。她叫国家，我们新中国联邦，我们有了大家这个人群。
 
-你没见那些白人穿着西装打着领带，到了盘古喝点酒后，可比共产党还疯狂。天天的夜总会里边的这个嫖客啊，没那么疯狂，他已经习以为常了， 就怕这些穿着西装的西方的所谓文明世界来的白人。在盘古，每天一到晚餐后，在那些雅间里边，那种白人的疯狂，来自国际组织的，那简直是惨不忍睹。别说是人了，猴子他都敢戳两下我跟你说。这个被禁闭的人的恶性一旦放出来，比魔还可怕，这不是我说的。
+第三，我活着的时候，我有更多的人际关系，更多的机会和更多的认知，或者增加更多的知识。最后达到最高境界，共同的信仰，那就是我们现在干的事情。
 
-共产党就把西方人，人类文明用千年挣来的民主自由对人性的尊重，他到了中国给彻底释放出来。然后再用这些人的恶来绑架他们，让他们传播这些恶和魔镜，这就是奥林匹克委员会，这就是联合国，这就是世界卫生组织，这就是WTO，这就是世界的所谓的记者联盟，所谓媒体联盟。只要带国际的，只要成组织的，全是共产党的帮凶。你看看，现在加拿大，你看看法国，你看看即将被砍头的乌克兰和俄国。世界元首都这么说话了，“这是我的女人，我要拿回来。”
+以上的几条哪个国家能够给你？哪个国家不是要你50%，70%的税？新中国联邦拿你一分钱税了吗？
 
-就共产党这个毒，你就像认识路大脑袋一样。 你跟他在一起，你老磨嗓子，因为他老吐痰，他嘎嘎老磨嗓子。蛇妖闫，她就老晃荡啊，你就老觉得好像地震似的。 哇塞，她晃啊，晃到你晕了。她坐在这儿，她的手就这么老晃，整得受不了，我老家叫得瑟。
+你在危难的时候，哪个国家会帮你啊？所谓的保险，警察帮你？现在警察会帮你吗？你觉得你的保险还管用吗？都给你剥夺了！
 
-你看了鸡腿潘那个小样子的时候，你就发现原来你那么伟大，那么巨大，是吧？ 你看到高冰尘的时候，你发现，哇塞，我自己太帅了！ 你别说七哥了， 七哥只能排老三是吧？ 你看路森（网名），Danny这样子，高冰尘啥感觉呀？ 他老婆能不给他带绿帽吗？还得找一个亚洲的是吧？性能力强，他能不戴绿帽子吗？看着你这俩人，不跟你跑了吗？它是人的本能。
+还有，当你在感情上，各方面，最需要人帮忙的时候，你觉得国家会帮到你吗？没有这个可能，（中共）不把你锁上了24年链子不错了。只有我们新中国联邦，还让你无苗，还让你有币。你觉得还有比咱更伟大的组织了吗？
 
-***发布：Candy***
+我不认为任何共产主义描绘的乌托邦和各个宗教描绘的所谓的天堂比我们新中国联邦再好。这就是我们今天一定要珍惜的。咱咋会不高兴呢？ 咱怎么不每天感恩呢？
+
+看看世界经济这个德性，只有咱们好。盖特只会赚钱，不会赔钱。GTV是控股公司，只能是越来越值钱。每1秒钟，咱在家睡觉，天天双修，咱都挣钱。只要你有GTV，有人给你挣钱啊。
+
+GTV拥有盖特和喜联储的股票。你拥有Gclub。你告诉我，你有什么损失？你未来只赚不赔呀！
+
+Gnews你有什么输的啊？你直播有什么损失的？只能是增加（财富），是吧？
+
+资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
+
+*发布：玉米地守望者*
 
 更多资讯，请关注：
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
