--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,18 +1,44 @@
 ---
-title: 秘翻在线：日本政府呼吁国民和使馆人员立即撤离乌克兰
+title: 乌克兰寻求在48小时内与俄会晤
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2002726/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002975/)
 
-撰稿：待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-18.png)（图片源自本文链接）
-2月14日时事通信社消息：内阁官房长官松野博一在14日的新闻发布会上宣布：随着乌克兰局势的日益紧张，日本政府敦促日本国民立即撤离乌克兰。
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-138.png)图片来自网络
+《BBC News》近日报道，乌克兰呼吁与俄罗斯和欧洲主要安全组织的其他成员就其边界不断升级的紧张局势举行会议。
 
-松野博一还解释说：我们已经发出了一系列的领事邮件，还单独给每个人打了电话，呼吁他们立即离开那里。
+外交部长德米特罗·库莱巴说之前俄国忽略了要求解释在边境陈兵的正式要求。
 
-在谈到俄罗斯军队在乌克兰周围的活动状况时，松野先生强调：局势迅速恶化的可能性越来越大，政府保持高度警惕。民用飞机的运营很可能会被暂停，所以，我们现在建议人们尽快疏散。基辅的日本大使馆工作人员将在不可预见的情况下撤离该国，但我们会保持有限的领事服务职能。
+他说“下一步”是要求48小时内会面，讨论关于俄国计划的“透明度”。
 
-信息源：[政府、邦人に即時退避呼び掛け　在ウクライナ大使館員も（時事通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/369cfeb7516dc5d97584c4c8c96844480c551b94)
+尽管在乌克兰边境集结了大约十万名士兵，但俄罗斯否认有任何入侵乌克兰的计划。
 
+但一些西方国家警告说，俄罗斯正在为军事行动做准备，美国表示莫斯科可能“随时”开始进行空中轰炸。
+
+十多个国家已敦促其公民离开乌克兰，一些国家已将大使馆工作人员撤离首都。 哥伦比亚广播公司新闻援引三位消息人士的话说，美国正准备在未来 48 小时内从基辅撤出所有人员。
+
+库莱巴先生表示，乌克兰周五要求俄罗斯就他们根据《维也纳文件》规则的意图作出答复，该文件是包括俄罗斯在内的欧洲安全与合作组织（欧安组织）成员通过的关于安全问题的协议。
+
+“如果俄罗斯在谈论欧安组织空间安全不可分割性时是认真的，它必须履行其对军事透明度的承诺，以缓和紧张局势并加强所有人的安全，”他说。
+
+然而，批评这种说法可能引发的“恐慌”的乌克兰总统泽连斯基表示，他没有看到俄罗斯计划在未来几天入侵的证据。
+
+周日，他与美国总统乔·拜登通了近一个小时的电话。白宫表示，拜登总统重申了美国对乌克兰的支持，两位领导人都同意“继续推行外交和威慑的重要性”。
+
+乌克兰在电话会议的声明中说，其总统感谢美国“坚定不移的支持”，最后，泽连斯基总统邀请美国领导人访问乌克兰。白宫的邀请尚未发表评论。
+
+前一天，拜登总统和俄罗斯领导人弗拉基米尔普京之间长达一小时的通话，但是没有带来突破性进展。
+
+在华盛顿，拜登总统的国家安全顾问杰克沙利文表示，入侵可能在“任何一天”开始。
+
+撤出外交人员，发布旅行禁令，这通常都是开战的信号，或者认为了当地开战的风险很大。毕竟在乌克兰危机中掌握生杀予夺大权的是俄罗斯，而不是西方，西方撤离外交人员和发布旅行禁令更多是基于对形势的悲观， 估计当然了也不排除打心理战的成分，而真正的开展主动权还是在俄罗斯手里。
+
+笔者个人认为，俄乌边境集结十万大军已经有五个月了，但这仍然属于一种军事上的临时部署。这种临时部署显然不能长期化，所以俄罗斯何去何从必须早日定夺，如果撤了那就是虚惊一场。如果真的要开进乌克兰那么时间窗口只能在3月份之前。一到三月份乌克兰平原的雪就融化了，机械化军队根本无法展开（机械部队尤其是坦克或装甲车容易陷入泥潭，丧失作战能力），所以打还是不打最晚三月前就会出结果。
+
+参考链接：
+
+[https://www.bbc.com/news/world-europe-60370541](https://www.bbc.com/news/world-europe-60370541)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
