--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,112 +1,89 @@
 ---
-title: 全球疫情更新（维生素D的个体化用法）
+title: 华夏专栏┃中国民主化进程的具体实现（一）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2001917/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002066/)
 
-**整理/编辑：枳实**
+撰稿：东京樱花团/华夏小哥
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1373.png)
+一．国家，权力的来源，国体与政体，三个中国
 
-## 
+1. 国家
+    1. 从广义的角度，国家是指拥有共同的语言、文化、种族、宗教、领土、政权或者历史的社会群体；从狭义的角度，国家是一定范围内的人群所形成的共同体形式。一般国家行政管理当局是国家的象征，它是一种拥有治理一个社会的权力的国家机构，在一定的领土内拥有外部的和内部的主权。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1368.png)图片：雅典娜农场设计组 精灵蓝
+
+    1. 在国际法上的国家实体应该必须持有以下条件：
+2. “人口”，亦即该国的固定人口。
+3. “领土”，由国家持有并管理之地理位置，包含“浮动领土”（延伸领土）。
+4. “政府”，代表国家行事的机构体系，民主国家的政府是民选政府，是国民授权给政府来做服务与国民的事物。
+5. “主权”，相当于国家的法人人格，对内保护国民，对外具有与其他国家建立关系的能力。
+    1. 马克思主义认为，国家是社会发展到一定历史阶段出现的，现代国家所扮演的角色是由他们在资本主义社会里的位置所决定的。许多当代马克思主义者都引述马克思在共产党宣言里的理论—国家是替资产阶级管理一般事物的执政机构。
 
 
-雅典娜疫情更新（2022年 2月13日）
+    1. 权力的来源
+        1. 人类历史的发展经历了**“神权”，“皇权”，“民权”**三个发展阶段。
+            1. 神权从人类诞生到4千年以前人类国家出现，神权一直单一存在与人类社会。
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-**一，全球疫情基本数据**
+            1. 所谓的“君权神授” “天子” “国王” “天皇”等，皇权为了标榜自己统治人民的正当性，从4千年前人类国家概念出现到一百多年以前民选政府的出现。在这几千中不管是欧洲还是亚洲“皇权”一直与“神权”的代理人（教皇，宗教领袖等）进行竞争，争当真正神权的代理人。不管是“代理的神权”还是“皇权”当他们脱离了“正道”以后就会改朝换代，走向毁灭。
 
-感染总数：409,643,027（日新增2,294,791人，14天增幅-31%）
 
-死亡总数：5,806,314（日新增10,425人，14天增幅 +11%）
+            1. 民权的出现标志是美国的独立宣言，明确提出了：政府统治人民必须经过人民的同意，人民进行授权的的程序就是**选举**。他的表现形式就是议会。
 
-**二，全球“疫苗”毒针统计数据**
 
-“疫苗”毒针注射总数：104亿
+        1. 世界目前处于三个权力共存的局面，最终“皇权”会消失，“神权”和“民权”会统一，统一的条件是人民要有信仰，有神论的信仰。
 
-完全“接种”：42.4亿人
 
-完全“接种”百分比：54.4%
+    1. 国体，政体
+        1. 国体：指国家的形式(form of state)。就是这个**国家权力来源**的正当性，**国统**。
 
-**三，澳洲疫情和“疫苗”数据**
 
-感染总数：2,901,919（今日新增24,039人）
+        1. 政体：（英语：forms of government），是国家的政治、统治形态，即国家政治体系运作的形式。一般用来指涉一个国家政府的组织结构和管理体制，在不同的历史时期，不同的国家和地域，政治体制都不尽相同。**就是具体管理国家，服务国民的具体机构。政府。**
 
-死亡总数：4,593人（今日新增 47人）
 
-每万人感染人数：1125.4341人
+    1. 三个中国并存于当今世界
+        1. 中华民国：辛亥革命后，中华民国由于1912年1月1日在南京宣告成立，成为亚洲第一个得到国际广泛承认的民主共和国，并从清朝接收中国疆域之统治，中央政权历经北洋政府、国民政府等时期变迁。二战结束后成为联合国创始会员国及安理会常任理事国。
 
-“疫苗”毒针注射总数：52,321,535   （今日新增109,070    针）
 
-完全“接种”：19,381,353人
+        1. 中华人民共和国：简称中国，是一个位于东亚的社会主义国家，成立于1949年10月1日。
 
-第二针“接种”百分比：79.2%
 
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
+        1. 新中国联邦：2020年6月4日，郭文贵先生与斯蒂芬·班农先生在纽约宣布成立代表中国的 “新中国联邦”。中国前足球运动员郝海东宣读了新中国联邦宣言。新中国联邦（英文全称The New Federal State of China，缩写NFSC）是为迎接没有中国共产党的时代所筹划的，新的全球华人社会组织形式。北京时间2020年6月4日上午7时37分，纽约当地时间6月3日下午7时37分，新中国联邦在美国纽约市成立。新中国联邦选择在中共一手制造的1989年“六四天安门大屠杀”纪念日这天宣布成立，以此悼念在这场民主运动中被中共暴政残害的民主斗士和无辜民众。
 
-16岁以上人口接种至少两剂疫苗的比例：94%
 
-加强针总数：9,991,919 （日新增：90,208针）
+未完待续！
 
-**四，维生素****D****的用法**
+下一章简要：
 
-今日摘译整理FLCCC编写的[中共病毒感染的临床管理指南](https://covid19criticalcare.com/wp-content/uploads/2020/12/FLCCC-Protocols-%E2%80%93-A-Guide-to-the-Management-of-COVID-19.pdf)关于维生素D的部分。未来笔者计划总结整理中共病毒治疗药物的使用注意事项，因此利用写疫情更新的时间，陆续翻译相关文献，未来将汇集成为一篇药物汇总，以方便读者检索阅读。
+- 中共北京政权的由来以及罪恶
+    - 苏维埃政府，中共政权是外国侵略者
 
-**维生素D与中共病毒感染**
 
-维生素D的缺乏在中东和北美、亚洲、欧洲的一些国家很常见。较少的阳光照射、防晒霜的使用、身体质量指数（BMI）的增加、较少的体力活动以及较差的社会经济地位都预示着血清25羟基维生素D浓度较低。
+    - 中华人民共和国只是中共的一个子公司
 
-维生素D受体存在于免疫细胞中，这种维生素在先天性和适应性宿主免疫中都发挥着关键作用。维生素D有许多免疫学特性，在避免中共病毒感染和感染后的严重程度方面起着至关重要的作用。与获得中共病毒病和死于该病的风险增加有关。
 
-补充维生素D可能是一种非常有效和廉价的干预措施，可以减轻这种疾病的影响。
+    - 中共奴役百姓的手段：枪杆子，笔杆子，钱袋子，刀把子
 
-这种疾病的影响，特别是在脆弱的人群中，即老年人、有色人种、肥胖者和那些生活在纬度45度以上的人。此外，维生素D的补充对怀孕的病人可能很重要。
 
-补充维生素D的最大好处将发生在维生素D缺乏的人身上。这些人应该长期预防性地服用维生素D。当一个人有当维生素D缺乏的人患上COVID-19时，出现并发症的风险就会增加，对维生素D补充的反应也会减少。
+    - “马克思主义哲学”自己说中共必然灭亡
 
-**维生素D的个体化使用方法**
 
-维生素D补充的目标是使血清25羟基维生素D浓度高于50纳克/毫升，并在整个大流行期间保持这一水平。
+参考资料：
 
-补充维生素D的剂量建议个体差别很大。其目标是保持维生素D的最佳水平是&gt;50纳克/毫升；在这个水平上，死于COVID-19的风险极低。
+1. 国家：[https://zh.wikipedia.org/wiki/%E5%9B%BD%E5%AE%B6](https://zh.wikipedia.org/wiki/%E5%9B%BD%E5%AE%B6)
+2. 神权政治：[https://zh.wikipedia.org/wiki/%E7%A5%9E%E6%AC%8A%E6%94%BF%E6%B2%BB](https://zh.wikipedia.org/wiki/%E7%A5%9E%E6%AC%8A%E6%94%BF%E6%B2%BB)
+3. 政体：[https://zh.wikipedia.org/wiki/%E6%94%BF%E4%BD%93](https://zh.wikipedia.org/wiki/%E6%94%BF%E4%BD%93)
+4. 政治制度研究系列之一：[日本的国体和政体—内阁议会制 – GNEWS](https://gnews.org/zh-hans/1570929/)
+5. 政治制度研究系列之二：[https://gnews.org/zh-hans/1585616/](https://gnews.org/zh-hans/1585616/)
+6. 政治制度研究系列之三：[https://gnews.org/zh-hans/1622678/](https://gnews.org/zh-hans/1622678/)
+7. 中华民国：[https://zh.wikipedia.org/zh/%E4%B8%AD%E8%8F%AF%E6%B0%91%E5%9C%8B](https://zh.wikipedia.org/zh/%E4%B8%AD%E8%8F%AF%E6%B0%91%E5%9C%8B)
+8. 中华人民共和国：[https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD](https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD)
+9. 新中国联邦：[https://www.nfscdict.com/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6](https://www.nfscdict.com/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6)
+10. 新中国联邦宣言：[https://www.nfscdict.com/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6%E5%AE%A3%E8%A8%80](https://www.nfscdict.com/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6%E5%AE%A3%E8%A8%80)
 
-对于维生素D水平&lt;12 ng/ml的患者，服用标准推荐剂量5000 IU/天，可能需要很多个月/年才能达到最佳水平。 因此，根据基线维生素D水平，下表提供了个体化的补充维生素D的实用方案（见下表2）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/141.png)
-如果血清维生素D水平不明，可根据体重或BMI获得所需剂量，如下表3所示。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/191.png)
-由于市售维生素D3的最高剂量是50,000 IU的胶囊，并且由于其价格低廉，胃肠道吸收较好，我们建议在非紧急门诊时使用50,000 IU D3胶囊用于非急诊、门诊病人和社区普通应用。可以使用若干胶囊作为单次剂量服用，例如如100,000至400,000 IU。然而，肝脏将维生素D转化为25（OH）D的能力有限，因此，在之后的几天内连续服用每天50,000 IU胶囊能提供更好的生物利用度。
 
-如有必要（可选），在服用维生素D疗程后四周测量血液浓度以评估是否达到了理想的血清25（OH）D浓度。
-
-当服用维生素D的剂量大于8000 IU/天时，最好同时补充维生素K2（Menaquinone [MK7] 100微克/天，或800微克/周）和镁（250-500毫克/天）。
-
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
-
-数据来源：
-
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-
-[covidlive.com.au](https://covidlive.com.au/)
-
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
-
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
