--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,42 +1,126 @@
 ---
-title: 大直播后记：如何认识体育？
+title: 加拿大对卡车的疯狂司机镇压开始
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002707/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2002965/)
 
-#### **整理：Grace Fang、sadhu
-编辑：文泓**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-55.png)图片来自网络
+据《门户专家网》作者朱利安·康拉德森（Julian Conradson）2022 年 2 月 13 日报道
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1387.png)图片来源：墨尔本雅典娜农场设计组
+周日，加拿大军队被派出协助执法官员，在底特律大使桥（Ambassador Bridge）上强行清除了卡车司机车队的抗议活动。凭前一天获得的法院命令，警察逮捕了数十名抗议者，并拖走了留在该地区的所有车辆。几名和平抗议者现在面临着严厉的惩罚，包括可能被处以高达 10 万加元的罚款，长达一年的监禁，甚至“永久”吊销驾照。
+
+周六晚上，警方分发了传单，详细说明了对继续封锁大使桥者的惩罚措施。
 
 
-我想说这次冬奥会里边，这个真的，你们没有任何人看到这个冬奥会里边（发生的一幕幕）对我们爆料革命有多好。就是我一看到冬奥会的信息，我就真的是想晃着走。过去，我看到男的走路怎么拧着屁股走，觉得很别扭啊。现在我都想拧着屁股走，觉得简直是幸福得不行不行的。
 
-我觉得是老天真的帮我们，没有一件事儿不是这样，习太阳帮我们都干了，（而）我们想干很难，他都帮我们干了；还得感谢王岐山，包括这PAG太平联盟，包括这冬奥会，他整个的干这事儿，（宾馆）漏水啦，对（参赛）运动员的威胁啦，再有在一个选址上。现在全世界都在问一个问题，北京啥时候有滑雪的地方？所有看直播的，你们在北京哪儿滑过雪呢？你们啥时候滑过雪呢？你说中国雪最多的在东北长白山。那啥时候冰雪运动是中国人的主要运动的吗？何况冰雪运动在世界的体育界里边，它都是小项目。
+> BREAKING: Ontario Police have begun handing out notices on Ambassador Bridge. Effective midnight tonight [pic.twitter.com/L0zIn7v0qe](https://t.co/L0zIn7v0qe)
+> — Honkmaster Poso 🎺 (@JackPosobiec) [February 12, 2022](https://twitter.com/JackPosobiec/status/1492309622278995975?ref_src=twsrc%5Etfw)
 
-再一个就是关于体育的问题，体育是什么呀？
-体育并不是说，让你把这作为一生奋斗的目标，体育可能是你一个生存方式，或者说表现自我的一个工具，或者是体现你的快乐和生活的一种方式。你像专业运动员，像人家海东兄弟、钊颖妹妹，那是他们的一个工具，不是信仰和目标，仅仅是他们的工具。
 
-就像现在文紫跟她老公要双修一样。双修，这不是我们俩一辈子的目标啊，但是能我们俩快乐，双修也是夫妻的工具和体现方式。我不能指望这个赚钱啊，是吧？你不能说咱俩都不当医生了，也不工作了，就靠这吃饭了。那你双修两天累死了是吧，你吃啥呀？
 
-体育是体现人生快乐生活的一种方式，或者说是人生生活的一种工具。职业运动员和非职业运动员，而西方绝大多数的运动员都是这样的。你像我们的约翰·亚当斯·摩根先生，人家是摩根士丹利的孙子，JP摩根先生的儿子，老人家应该92岁了吧。
 
-他曾是1952年芬兰夏季奥运会世界帆船冠军。我问他，你干嘛划船去？我上人家里去，看到有2个大船的模型，当时就有100多米的船模型。我问王雁平，这船是啥意思？她也不懂。我说，咱大清朝的时候，那时候连战舰都没有，但人家玩了这两个世界级的蒸汽机游艇（模型），而且是一模一样造俩艘。
+Honkmaster Poso @JackPosobiec
 
-所以说，摩根家族创造了金融系统，干掉了当时的——记住啊，罗斯柴尔德想来美国呢，就让摩根家族给干回去了。然后就是摩根士丹利当时在欧洲拿下半壁江山，还在亚洲拿下了大半江山。当时啊，最后一个末代皇帝溥仪，要把全博物馆的东西卖给摩根，多少钱呢？100万美元，全北京博物馆，100万美元啊。这是现在咱们摩尔根博物馆就在曼哈顿啊。大家记住，我们本来今年开年会，说实话想给你们个惊喜的，就是把摩根博物馆全租下来，在摩根博物馆给大家开年会，因为这个病毒是没法开。
+*突发：安大略警方已经开始在大使桥上发布通知。 今晚午夜生效*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-8.png)
+*2022**年**2**月1**1**日*
 
-那还是摩根家族的，你看那里边儿所有的古董，所有的东西是他不对外展出的，只有咱们战友去了能让你们看。谁来曼哈顿你们都可以去看。
+请注意最后一点：“这些措施将是永久性的。” 雪上加霜的是，特鲁多及其黑警公开嘲笑抗议者挑战他的暴政还要求“永久”结束强制令。
 
-啊，摩根先生都给我看。那个时候全北京、全中国博物馆100万美元卖给摩根，这个摩根没买，人家只要了一部分，你知道荒唐不荒唐。人家那时候就玩那个船了，人就玩那个古董了，人家孩子有钱就去玩票（帆船）奥运冠军。
+说真的，去他的吧。去他妈的特鲁多。
 
-资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
+尽管有警告，勇敢的加拿大人仍然留下来，准备好接受任何对他们的惩罚。
 
-*发布：玉米地守望者*
+周日早些时候的视频显示，警察在宣布将于上午 11 点开始逮捕后，在主要抗议活动周围形成了一个包围圈。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
+
+> Police have begun moving the crowd away from the Ambassador Bridge down Huron Church Road, with a line of officers and a couple armoured vehicles out as they start to clear the border blockade in Windsor [pic.twitter.com/aM4AGUgoXL](https://t.co/aM4AGUgoXL)
+> — Brendan Gutenschwager (@BGOnTheScene) [February 12, 2022](https://twitter.com/BGOnTheScene/status/1492555844579377154?ref_src=twsrc%5Etfw)
+
+
+
+*布伦丹·古腾施瓦格（Brendan Gutenschwager）**@BGOnTheScene*
+
+*警方已经开始将人群从休伦教堂路（Huron Church Road）大使桥移开，一队警察和几辆装甲车开始清理温莎（Windsor）的边境封锁*
+
+*来自温莎警方：*
+
+*2022年2月12日*
+
+“执法仍在继续，位于示威区内的人将被逮捕。建议人们立即撤离该地区。”
+
+
+
+> Enforcement continuing, individuals who are located within the demonstration area are subject to arrest. People are advised to immediately vacate the area.
+> — Windsor Police (@WindsorPolice) [February 12, 2022](https://twitter.com/WindsorPolice/status/1492527882551406596?ref_src=twsrc%5Etfw)
+
+
+
+*在最初的警戒线建立后，防暴小队和特警队被派出提供额外援助。这似乎是执法部门开始首批逮捕的时候。*
+
+*2022年2月12日*
+
+
+
+
+
+> BREAKING: Riot police, SWAT team deployed against Ambassador Bridge protesters in Canada [pic.twitter.com/M1gEtBkGVG](https://t.co/M1gEtBkGVG)
+> — Honkmaster Poso 🎺 (@JackPosobiec) [February 12, 2022](https://twitter.com/JackPosobiec/status/1492538379367591942?ref_src=twsrc%5Etfw)
+
+
+
+Honkmaster Poso @JackPosobiec
+
+*突发：在加拿大防暴警察，特警队对抗大使桥抗议者*
+*2022年2月12日*
+
+随着镇压行动的进行，加拿大军方人员也赶到现场协助逮捕。在一段视频中，可以看到军队成员在警察向抗议人群行进时，在他们的侧翼协助。“可耻！ 可耻！” 可以听到车队参与者的高呼。
+
+
+
+> 🇨🇦 Politie en militairen breken de blokkade op bij de Ambassador Bridge in Windsor op. Ze arresteren verschillende vrijheidsdemonstranten. [pic.twitter.com/Qn8mFPsIR4](https://t.co/Qn8mFPsIR4)
+> — Kees71 (@Kees71234) [February 13, 2022](https://twitter.com/Kees71234/status/1493005173358276608?ref_src=twsrc%5Etfw)
+
+
+
+*[\[email protected\]](/cdn-cgi/l/email-protection)*
+
+*警方和军方解除了温莎大使桥的封锁。他们逮捕了几名自由车队抗议者。*
+
+*2022年2月13日*
+
+在另一个录有几起逮捕的视频中，可以看到几名军人进入抗议区。还可以看到警察在逮捕一名老人时粗暴对待他并将其他人从卡车上拉下来。
+
+
+
+> Unbelievable scenes in Canada as heavily armed forces move in to make arrests and tow all vehicles from ambassador bridge. [pic.twitter.com/itRFuEovp5](https://t.co/itRFuEovp5)
+> — HATS (@HATSTruth) [February 13, 2022](https://twitter.com/HATSTruth/status/1493004515645267968?ref_src=twsrc%5Etfw)
+
+
+
+*HATS @HATSTruth*
+
+*加拿大的令人难以置信的场景，全副武装的军队出动，进行逮捕并拖走大使桥上的所有车辆。*
+
+*2022年2月13日*
+
+这是一项各级执法部门协调的全面行动。
+
+根据 Post Millennial：
+
+温莎警方说：“在地方和国家两级警方的共同努力下，当局介入并‘和平地’逮捕了多名抗议者，而七辆车在黎明后被拖走。”
+
+这是暴政，简单明了。
+
+
+
+原文链接：[https://www.thegatewaypundit.com/2022/02/trucker-crackdown-begins-wild-scenes-canada-military-swat-police-sent-make-arrests-tow-away-vehicles-ambassador-bridge-video/](https://www.thegatewaypundit.com/2022/02/trucker-crackdown-begins-wild-scenes-canada-military-swat-police-sent-make-arrests-tow-away-vehicles-ambassador-bridge-video/)
+
+
+
+
+
+翻译：Nick｜校对：JS709｜编辑&发布：闪电训练
 
  
 
