--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,39 +1,54 @@
 ---
-title: 文贵先生对战友说的几句话
+title: 吃中共饭的谷爱凌母女——时事穿梭机第十八期
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2002705/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2002921/)
 
-作者：纽约香草山教育部 – Jack Li文阳
+撰稿：澳喜要闻
+![](https://assets.gnews.org/wp-content/uploads/2022/02/时事穿梭机-2.13.jpg)
+吹爆党媒各个平台的谷爱凌横空出世，顶着所有巨星的光环：年轻貌美、积极阳光、爱国爱党，一时间成为让墙内小粉红痴狂高潮的目标。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-5-768x103-28.jpg)
+但细想起来，谷爱凌的走红其实并不是偶然，本期节目从四个方面剖析谷爱凌事件背后究竟是中共怎样的局。
 
+（一）谷爱凌的原生家庭
 
+从谷爱凌的原生家庭我们可以看到，她从小生活在一个中共思想余毒非常严重的华人家庭，那个传说中的“白人父亲”也始终是个迷思。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-136.png)
+谷爱凌的母亲谷燕是个十分典型的投机主义者。抛开她是否带着更深层的任务不说。能在八十年代就出国留美，毫无金融背景地就混迹于华尔街，并且成为第一代将美国资本引入中共的风险投资人，除了她的智商之外，更可能的解释是有人铺平了这条辉煌之路。
 
-2月13日，郭文贵先生在大直播中说：世界经济，政治，军事大变动，很快会发生。大家要注意自己的安全，防止排华发生，要和农场紧密联系。农场是大家利益核心安全的纽带。国内人民币转币的事情，找农场主，不管多少都能给你转出来，我们的秘密武器可以让你秒转，全变成美金，要把中共的美金给干掉。战友们一定要了解HPAY，一定要懂喜币。场内的交易和场外的交易，形成了多大的反比？
+但奇怪的是，谷燕在将近40岁时，产下了谷爱凌，对于这个女儿倾注了百分百的精力和心血。根据采访时的原话，我们看出谷爱凌从小就被有目的地培训各种兴趣爱好，其接触冰雪运动更是从三岁开始。之后似乎谷燕的个人事业描述就成了空白，为何她放弃了那么好的个人事业，全力培养这个女儿？为什么要让她女儿每年定期回国接受“爱国主义”教育？谷爱凌的原生家庭究竟对她有怎样的影响？
 
-郭先生说：战友们，世界大变革时，手里一定要有些钱，一定不要打疫苗。无苗灭共有币者，是荣光中的荣光。在人类上，如果是无苗灭共成功有币者，那就可以说是人生大赢家。大家要识时度势，我们爆料革命平均年龄28岁，政治局里的老杂毛平均年龄63岁，等也能把他们等死了。美好的生活必然属于我们。郭先生还表达了对战友的爱护之情：“我只在乎战友们和家人们的感受，其他人的我一点不在乎。”
+追踪到谷爱凌的外婆外公，是那一年代少有的知识分子家庭，之后也一直在体制内从事着“报效祖国”的工作。谷爱凌自从出生以后，其外婆就常年定居美国，照顾她，虽然谷爱凌从小读着美国顶尖的私校，接受全方位最好的兴趣培养，但家庭教育这关，却被灌输以浓浓的“红色文化”，从她那口地道的北京话，到酷爱饺子、韭菜饼等传统食物，再到延续了中共“假”的思维逻辑，我们能推断，谷爱凌只是一个长着混血脸，享受着美国高质量教育的“小粉红”。
 
-当今世界很乱，病毒和疫苗很毒。新中国联邦战友有七哥作为人生导师，教我们趋吉避凶，扶持我们登上爆料革命这艘诺亚方舟，乘风破浪，安全驶向美好未来。
+（二）谷爱凌如何成为了中共的宣传工具呢？
 
-校对：Stay文苑
+早年一段视频，我们可以看到他们母女与美国当地的华人体育协会关系甚密，而这些在海外的华人协会可以说是当地领事馆掌握华人动态的专门组织。可以说谷爱凌卓越的体育天赋早已成为了中共的猎物，当她代表美国队获得多项世界级冠军之后，她又如何归化中共国，成为冬奥会上一张为中共粉饰颜面的王牌？
 
-编辑：Stay文苑
+可能她的出生和成长一早就是中共派给谷燕的任务，更可能的是中共持续抛出的金钱名利诱惑，让这个极具投机思想的谷燕出卖了自己的女儿。
 
-发稿：Stay文苑
+这个假设，从谷爱凌代言的广告和不成正比的收入，可以看出端倪。在她代言的20多个广告中，中资企业背景的大赞助商十分夺目，不乏蒙牛、中国人保等，而谷爱凌这几年代言费的跳跃式增长，更是让她无限膨胀的理由。中共究竟如何许诺谷爱凌的未来？从满屏的吹捧和至极的宣传，可见一斑。
 
-来源：[https://gtv.org/video/id=62090115a456fe1dea300f5a](https://gtv.org/video/id=62090115a456fe1dea300f5a)
+（三）外媒对谷爱凌的评价
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-27.jpg)
+当谷爱凌终究是无法逃开其跨国、复杂的国籍背景的。当她被外媒质疑这点时，十分有技巧的回避让一切更像是一场愚弄大众的戏码。她从不公开承认关于自己国籍的任何问题，而是呼吁媒体不要将国籍、运动和政治混为一谈，她更愿意做架起两国友谊桥梁的天使，而不是攻击任何一方的工具。这样的立意和高度，无不让墙内民众拍手称赞。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+但她回避恰恰就说明其中的猫腻，因为中共国是不会承认双重国籍的，而她本人也并没有公开提交放弃美国国籍的举动，因此，一时间，国籍成为了谷爱凌被美国媒体炮轰的借口。但是这不是问题的本质，美国人的愤怒是因为谷爱凌根本不是一个融入美国文化的本国人，如果她是，就不会对发生在中共国内新疆、香港事件避重就轻地谈论，因此她的行为恰好说明了他们母女处心积虑的利用美国教育资源，培养中共走狗的欺骗。
 
+文贵先生曾在节目中评论过谷爱凌事件，他说，当谷燕接受了中共的筹码开始，她就已经把她的女儿给毁了。
+
+（四）中共为什么选择谷爱凌？目的是什么？
+
+其实谷爱凌只是能满足中共当下利益的一颗棋子而已，还有成千上万个“谷爱凌”正在全世界各行各业培养着。他们身上的标签无外乎“国际化、极致优秀”，国际化是因为想要破除对习皇“专制独裁”的描述，而“极致优秀”背后则是无不渗透出中共教育的影子，从而告诉世界，中共教育的影响才能造就出这样一个完美、人见人爱，脱鞋都无法追赶的青年翘楚。
+
+但这一切只是表面的原因。更深层的威胁是，越来越多的“谷爱凌”正在成为掀起世界各国仇华运动的不安因素，因为他们的西化脸庞，却不屑于西方的培养和文化，同时没有底线地吹捧中共，这一切的一切，都是未来无法控制的“反华”火苗，对海外华人有着致命的打击。
+
+但是，又有多少人能读懂这背后的阴谋呢？有多少人看明白了谷爱凌走红的刻意安排？有多少人意识到了身在海外的华人危机？我们又应该做什么，如何做？
+
+请大家回看这一期的时事穿梭机。
+
+[2022-02-14 重播 澳喜时事穿梭机（18） 谷爱凌事件解析 – G|TV (gtv.org)](https://gtv.org/video/id=62098f77a456fe1dea30d035)
+
+发稿：MG5
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
