--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,30 +1,72 @@
 ---
-title: 短视频：这一切到底是科学还是政治？
+title: 文贵直播大事记——七哥为什么讲昆仑山脉和帕米尔高原（一）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2002704/)
+`GNotes真.贵.记.录` [轉載自GNews](https://gnews.org/zh-hans/2002909/)
 
-翻译：不要代表我
-校对：精靈藍
-剪辑字幕：向上James
-编辑：文泓
+**卖国篇**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220112卖国篇1.jpg)
+**【编者：内容摘录于文贵大直播，力求保持文贵先生话语的原汁原味，标记了直播日期和时间点，愿读者重温直播以获取更多信息**】
+[2022.01.12文贵大直播GTV链接](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
+[2022.01.09文贵直播大事记—人物篇（三）：中南坑第一高人曾庆红](https://gnews.org/zh-hans/1907149/)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/无标题-2.png)图片来源：视频截屏
+## **塔吉克斯坦—让你知道什么叫卖国**
 
+哈萨克斯坦，你知道和中国啥关系吗？你们想过七哥为什么讲昆仑草原吗？为什么讲帕米尔吗？帕米尔的又名叫“葱头”，“葱头山”，它最核心的两国是什么？哎，我要问一下青青草原，你知道帕米尔高原的最重要的两个国家是哪个国家？你说说我听听。
 
-那么，作为一名科学家和一名免疫学学者，有没有觉得很奇怪？在过去的两年里，你的学科变得如此政治化，以至于以前只是正常学术教学大纲一部分的群体免疫等概念几乎成为了被禁止的话题，因为政府和活动宣传人士如此热衷于将一条特定模式推向其他模式。依据你的经历，你是否觉得这很奇怪？
+我告诉你，在帕米尔高原最重要的两个国家：阿富汗和塔吉克斯坦。
 
-让我用一句话来总结，如果你把政治和免疫学或健康科学混在一起，到最后，你就会得到政治，这就是我的感受。我可以清楚的告诉你，我和以色列的几名官员接触过，人们乐于接受，我说的是政府成员。我可以告诉你，他们是否愿意采纳我们认为所有合理的想法。
+塔吉克斯坦，兄弟姐妹们，我请问你们四个啊，随时都可以说话啊，塔吉克斯坦和中国边境什么关系，你们知道吗？不知道吧？我告诉你，塔吉克斯坦是唯一一个让你知道什么叫卖国，什么叫叛国的。
 
-但另一方面，我认为，在大多数情况下，我们的建议都是经过了评估，并不是说已经采取了实际的行动或类似这样的东西。从社会的角度来看，这很有趣，可能会对特定国家的政策产生可怕的影响，有时遵循这个或那个，可能会出问题。这就是为什么你需要在你周围拥有尽可能多的声音，然后做出正确的决定。
+## **江泽民把****28****万平方公里给—塔吉克斯坦**
 
-视频链接：[Israeli vaccine advisor: “We have made mistakes” – The Post (unherd.com)](https://unherd.com/thepost/israeli-vaccine-chief-we-have-made-mistakes/)
-发布：文泓
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+2002年当时的江泽民在中华人民共和国《人民日报》上宣布：我邀请塔吉克斯坦总统埃莫马利·拉赫蒙访问中国，我们签署了战略性的合作文件，那帕米尔高原的部分争议土地都解决了。你们去查查去，中国人把28万平方公里的土地99%都给了塔吉克斯坦。
+
+## **共产党把帕米尔高原的****96%****给—阿富汗**
+
+你再看1959年、1960年，共产党已经是拿了中国、控制中国10年后，把阿富汗的一边的帕米尔高原的山脉，96%全给了阿富汗，这跟印度没有任何关系，跟哈萨克斯坦没有任何关系。然后哈萨克斯坦又拿走了帕米尔高原什么样的土地，你知道吗？
+
+## **什么叫卖国，什么叫判国**
+
+我今天告诉大家，共产党动不动就给盖上个叛国的帽子，卖国贼。
+
+什么叫卖国贼知道吗？
+
+首先你生的那个国家或者你宣布你承认的那个国家，你跟那个国家的宪法之间有契约。就像今天青青草原你跟你什么国家，你是哈萨克族还是哈萨克斯坦族还是新疆还是中共，你在宪法下宣言：“你是我的祖国，我忠于你。”就像草根小哥到日本去：我宣布这个誓言了，我忠于这个国家，我承认这个《宪法》。你背叛了这个《宪法》约束的规则，你就是叫什么，叫叛国！
+
+什么叫卖国呀？你有本事，哎Renee，你有什么资格卖国去？你卖啥呀？你卖广东的一个老鳖壳你都卖不起，拿不出来。卖国是把你承认过、宣誓的国家的资产——国家资产不是个人资产，然后非法地卖给另外一个国家，是吧，这叫卖国。
+
+我请问你们，咱们现在今天听我直播的人和大直播的人，谁跟共产党有过在《宪法》下宣誓？你从生下来，你爹你妈你爷爷你奶奶，共产党叫你有个地方，给过宣誓？洗屁股让你宣誓，有举手的时候吗？是举左手是举右手的时候吗？你懂得什么叫宣誓吗？
+
+什么时候国家宪法保护你的人权，让你有宣誓权的时候。一个没有宣誓权的人民，还叫公民？一个没有契约没有宪法契约的国家，我卖你个屁的国家，我卖你啥呀？我卖你们肛毛我也卖不了呀。
+
+我叛国？我叛谁去呀？！谁是我的国呀？！我知道我爹是谁，我知道我娘是谁，因为我长相是我爹我娘，就我的长相就是我爹和我娘的契约。如果我长个鼻子这么大，我长个耳朵这么长，我是猪八戒孩子，我不是我爹的孩子，是吧。我跟我爹我妈就是DNA。
+
+那我跟你这个国家的DNA是什么？是《宪法》，是我共同举手宣誓的誓言。我背叛了我宣誓的誓言，我叫叛国。我卖了你这个国家的资产，我承认你这个国家，叫做卖国。你告诉我，我卖过国吗？我卖谁去？你啥时候是我的国了呀？你给我发过工资？你要我宣过誓？你保护过我的安全？你给我找过工作？你看中国东北、广西、甘肃，90%的人活在人畜不分。啥时候让你宣过誓？你卖啥去呀？
+
+杨改兰女士她卖个牛毛都卖不着，她只能把她孩子头砍了，她只能把她自杀。她一生只有一个权力——自杀的权力，而且自杀还错了，最后所谓她的国家说：“你自杀是因为你精神有毛病”。
+
+杨改兰的事件是中国人最好的样板，你知道中国有多少杨改兰？
+
+我头两天跟李克强的原秘书，他说：“文贵呀，当年你一开始说杨改兰对我之震撼！我这个哥们儿不白交。就你这个说法，我跟着老板去过甘肃多次，河南，还有他老家。中国现在就今天……” 这是几个月前说的话。他说：“中国最起码几千万个杨改兰。”他说：“可悲的事情，他们永远不会被人知道，她自杀，她砍死100个孩子也没人知道。她只是偶然的被那个混蛋的宣传媒体拿来，用她的死来让别人不死的时候，被你给逮着了。”
+
+悲剧就在这儿呢！你的死都被拿来利用，结果让我们知道了。
+
+中国有多少？现在几千万杨改兰，谁要敢说中国没有几千万杨改兰，我R你八辈儿祖宗。你让联合国去查一查，我们今天面对几千万杨改兰的时候，还说我们叛国卖国，那我刚才问的问题，你懂啥叫叛国卖国吗？
+
+**文贵大直播2022.01.12-00:55:15**
+
+## **你有资格叛国吗，你有资格卖国吗**
+
+我告诉大家，如果你不懂得什么叫叛国和卖国，你这一辈子被骂叛国卖国，你就太冤了。你有资格叛国吗？你有资格卖国吗，你算个屁，是吧，你算个屁。
+
+当时我在里边儿（大陆）的时候，盖郑州裕达，说我是美国派来的特务，跟一个好莱坞的女人结婚了，然后是监视郑州的时候。我在郑州有一次被叫去了，他们说：郭文贵人家有人说你是叛国。我说：“是吗？你说我叛哪个国了？”他说：“你还真以为你叛国，你有资格叛国吗？那叛国得是共产党员才叛国，轮到你来说叛国了嘛？”
+
+就连一个郑州的一个所谓金水区的检察官、反贪局的副局长都敢说我这话，后来这哥们儿被枪毙了，被注射毒针死了，你可以查他去。一个人贪污两个多亿当年。
+
+**文贵大直播2022.01.12-01:03:04**
+
+整理/发布：Mindy10
+出品：雅典娜速记组
 
  
 
