--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,48 @@
 ---
-title: 中共国将不允许“非必要”的旅行目的护照更新
+title: 中共外交官“声称”彭帅不太可能被性侵因她太强壮
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2002993/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2003026/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-8.png)（图片源自本文链接）
-日文雅虎网站２月１４日消息：据12日路透社上海报道，-中共国国家移民局表示，将不允许人们为“非必要”的海外旅行护照更新。
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-39.jpg)图片来自网络
+澳媒《News》近日报道，一名中国外交官对失踪的中国网球明星彭帅的说法表示怀疑，称由于她的体力和体型，该运动员不太可能受到中共高层的性侵犯。
 
-中共国国家移民局解释说，不允许“非必要”的出国旅行护照更新，是因为新冠病毒的全球爆发仍然严重，跨境旅行会构成 “巨大的安全风险”。对研究、工作或商务目的个人旅行者”会正常发放”。
+据福克斯新闻报道，中国与全球化中心副总裁高志凯对《澳洲60分钟》节目说：“她是一位非常成功的运动员，在身体上，她比中共国许多其他女性能更好地处理许多事情。”
 
-中共国国家移民局否认了传言中的“会批准旅游目的护照更新”之说，称其为假消息。
+高先生继续说：“鉴于她的思想成熟和身体状况的成熟，她可以照顾自己，并且可以在中国任何人面前为自己辩护。”
 
-中共国以防控中共病毒（新冠病毒Covid-19）为由，加强了对其公民的海外旅行的限制。已暂停向希望在非紧急情况下旅行的个人发放新的普通护照。
+高先生这番言论之前，彭帅上周去了冬奥，坐下来接受法国报社采访，引起有的人猜测中国还是小心地控制她在公共场所的露面。
 
-笔者认为，这一规定既给盗国贼及其家人子女，甚至私生子女开辟了蹊径，又堵住了普通百姓的出国之门！因为，在中共国，你的出国是否“非必要”，由党决定。老百姓出国将越来越难!
+法国记者马克·文图亚克在进行采访时说: “不可能知道这名网球明星是否可以自由做或说她想说的。”
 
-信息来源：[中国、不要不急の渡航目的でパスポート更新認めず（ロイター） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/ec4fdd9988b7f1addeecd3f1203e50f7ddcab0de)
+“这次采访不能证明彭帅没有问题。”
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+去年 11 月，彭帅在社交媒体上发文指责中国前副总理张高丽强迫她发生性行为，并称她花了数年时间才站出来指控这位中国共产党有权势的党员。
+
+“最初，我把这一切都埋在心里，”她在帖子中写道，该帖子很快从中共国受到严格审查的互联网上删除。
+
+“你为什么还要来找我，带我去你家，逼我和你发生性关系？”
+
+彭在帖子发布后失踪了几个星期，只是在似乎经过精心设计的外表下重新出现。
+
+但高先生似乎对这位网球明星的担忧无动于衷，称她的身体状况不太可能被性侵。
+
+高先生告诉《澳洲60分钟》说: “她是一个身体很强壮的人，她很高，她比我还要高。”
+
+“所以对于我这个身高的人来说想占彭帅的便宜，算了。 你在放纵你的幻想。”
+
+高先生还辩称，所谓的事件发生在“多年前”，并指出彭在据称发生时并不是未成年人。
+
+“网上报道的事件不是一周前或一年前发生的，而是几年前发生的，”高先生说。
+
+“在这段时间里，她是一个自由人，没有任何受到骚扰的迹象。”
+
+说这种话就像怪性侵受害者穿太少活该一样，简直不可理喻。你怎么不说被性侵的是张高丽？毕竟他看起来那么弱不禁风的样子。对于这种无脑且无耻的洗地，用尽所有语言也不足以形容它们的恶！
+
+参考链接：
+
+[https://www.news.com.au/world/asia/chinese-diplomat-claims-peng-shuai-is-too-strong-to-be-sexually-assaulted/news-story/a1950332ebea7de8fa6b84a41b949b38](https://www.news.com.au/world/asia/chinese-diplomat-claims-peng-shuai-is-too-strong-to-be-sexually-assaulted/news-story/a1950332ebea7de8fa6b84a41b949b38)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
