--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,32 +1,38 @@
 ---
-title: 2月13日大直播后记：冬奥会运动员等于爆料革命侦察员
+title: 文贵先生对战友说的几句话
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002676/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2002705/)
 
-整理：枫叶红了、Lucy Liu
-编辑：小红帽
+作者：纽约香草山教育部 – Jack Li文阳
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜农场设计组（614）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-5-768x103-28.jpg)
 
 
-兄弟姐妹，你看到今天，所有爆料革命的战友们，你想想北京冬奥会带给我们的启示。
 
-共产党几乎霸占了全世界，污染了全世界所有的国际组织。而且北京冬奥会就是对全世界和人类一场最大的耻辱。我不相信国际奥林匹克组织还有未来。你知道这冬奥会还没结束呢，一旦开打，中共打台湾，国内再暴乱，世界经济俱下，所有的奥运会运动员回了国都被清算。没有一个运动员回来会说是英雄，一个都不会。你记住我的话！他们去冬奥会就是一生最大的错误。然后回来以后，他们一定是吐槽。任何人敢夸这个冬奥会，就是感觉再好，也不敢夸，夸就绝对死了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-136.png)
 
-那只有骂！骂就往死的骂，这个传播的力量有多大呀？共产党给他做这锅饭做得多好啊。这还要咱爆料吗？这有人就爆料了啊。所有去北京的运动员都等于咱爆料革命派去的侦察员。运动员回来以后，讲述亲身经历。这一天，骂共产党的这力量得有多大呀？想停都停不下来了。
+2月13日，郭文贵先生在大直播中说：世界经济，政治，军事大变动，很快会发生。大家要注意自己的安全，防止排华发生，要和农场紧密联系。农场是大家利益核心安全的纽带。国内人民币转币的事情，找农场主，不管多少都能给你转出来，我们的秘密武器可以让你秒转，全变成美金，要把中共的美金给干掉。战友们一定要了解HPAY，一定要懂喜币。场内的交易和场外的交易，形成了多大的反比？
 
-所以那时候我说，我希望冬奥会开成。你们不知道我的意思，我希望它开成。 昨天晚上，咱国内的一个战友在冬奥会现场的时候说，“文贵你太高了，当时你说这个的时候，我真的受不了。怎么能希望它搞成呢？我们就希望它个王八蛋炸了才好呢。”他说，“现在我真明白了，这搞成比炸了还管用。我在那儿感受到了愤怒、骂辱和愤恨。”他说，“这些人离开以后，永远是共产党的敌人，终生不会有任何改变，没有改变的机会。”
+郭先生说：战友们，世界大变革时，手里一定要有些钱，一定不要打疫苗。无苗灭共有币者，是荣光中的荣光。在人类上，如果是无苗灭共成功有币者，那就可以说是人生大赢家。大家要识时度势，我们爆料革命平均年龄28岁，政治局里的老杂毛平均年龄63岁，等也能把他们等死了。美好的生活必然属于我们。郭先生还表达了对战友的爱护之情：“我只在乎战友们和家人们的感受，其他人的我一点不在乎。”
 
-然后，大家记住北京2008届奥运会参与的204个国家，现在实际就是3个国家。严格讲3个国家都不算，就算1个国家。
+当今世界很乱，病毒和疫苗很毒。新中国联邦战友有七哥作为人生导师，教我们趋吉避凶，扶持我们登上爆料革命这艘诺亚方舟，乘风破浪，安全驶向美好未来。
 
-发布：tianzhihuan
+校对：Stay文苑
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编辑：Stay文苑
+
+发稿：Stay文苑
+
+来源：[https://gtv.org/video/id=62090115a456fe1dea300f5a](https://gtv.org/video/id=62090115a456fe1dea300f5a)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-27.jpg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
